githubhy published a site update

--- a/唐人轶事汇编卷三十三.html
+++ b/唐人轶事汇编卷三十三.html
@@ -154,9 +154,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶三十三-桑维翰-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AB-%E9%A9%AC%E5%B8%8C%E8%8C%83-1">马希范1</a>。</p></li>
+见马希范<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AB-%E9%A9%AC%E5%B8%8C%E8%8C%83-1">1</a>。</p></li>
 <li><p><span id="唐轶三十三-桑维翰-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E5%BC%A0%E5%85%A8%E4%B9%89-4">张全义4</a>。</p></li>
+见张全义<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E5%BC%A0%E5%85%A8%E4%B9%89-4">4</a>。</p></li>
 <li><p><span id="唐轶三十三-桑维翰-3"></span>
 石晋桑维翰身短面广，每对鉴自叹曰：「七尺之身，何如一尺之面？」登第，同牓四人。秦王幕客陈保极戏谓人曰：「今岁三个半人及第。」以维翰短陋，故谓之半人也。《续世说》六。</p></li>
 <li><p><span id="唐轶三十三-桑维翰-4"></span>
@@ -170,11 +170,11 @@
 <li><p><span id="唐轶三十三-桑维翰-8"></span>
 桑维翰寿辰，韦潜德献太湖石一块，上有镌字金饰，曰「宠僊」。《清异录》上。</p></li>
 <li><p><span id="唐轶三十三-桑维翰-9"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E5%86%AF%E7%8E%89-2">冯玉2</a>。</p></li>
+见冯玉<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E5%86%AF%E7%8E%89-2">2</a>。</p></li>
 <li><p><span id="唐轶三十三-桑维翰-10"></span>
 魏公桑维翰尹开封，一日，尝中夜于正寝独坐，忽大惊悸，如有所见，向空厉声云：「汝焉敢此来！」如是者数四。旬日愤懑不已，虽贴体亦不敢有所发问。未几，梦己整衣冠，严车骑，将有所诣，就乘之次，忽所乘马亡去，追寻莫知所在。既寤，甚恶之。不数日及难。《玉堂闲话》（《广记》一四五）。</p></li>
 <li><p><span id="唐轶三十三-桑维翰-11"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E5%90%8E%E6%99%8B%E5%87%BA%E5%B8%9D-1">后晋出帝1</a>。</p></li>
+见后晋出帝<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E5%90%8E%E6%99%8B%E5%87%BA%E5%B8%9D-1">1</a>。</p></li>
 <li><p><span id="唐轶三十三-桑维翰-12"></span>
 桑维翰形貌甚怪，往往见之者失次。张彦泽素以骁勇称，每谒候，虽冬月，未尝不雨汗。及中渡变生，彦泽引蕃部至，欲逞其威，乃领众突入开封府，弓矢乱发，且问：「桑维翰安在？」维翰闻之，乃厉声曰：「吾为大臣，使国家如此，其死宜矣。张彦泽安得无礼！」乃升厅安坐，谓彦泽曰：「汝有何功，带使相已临方面，当国家危急，不能尽犬马之力以为报効，一旦背叛，助戎狄作威为贼，汝心安乎？」彦泽覩其词气慨然，股栗不敢仰视，退曰：「吾不知桑维翰何人，今日之下，威棱犹如此，其再可见耶！」是夜，令壮士就府缢杀之。当维翰之缢也，犹瞋目直视，嘘其气再三，每一嘘皆有火出，其光赫然，三嘘之外，火尽灭，就视则奄然矣。《五代史补》三。</p></li>
 <li><p><span id="唐轶三十三-桑维翰-13"></span>
@@ -306,7 +306,7 @@
 <li><p><span id="唐轶三十三-杨凝式-7"></span>
 杨凝式滑稽。精舍老尼即王令公家乳母，公至，苦不为礼，乃书壁云：「暇日游老比丘院，延待尤厚。」尼甚感之。后悟「老比」之言，立圬圬镘之。《纪异录》（《类说》一二）。</p></li>
 <li><p><span id="唐轶三十三-杨凝式-8"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E7%80%9A-2">李瀚2</a>。</p></li>
+见李瀚<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E7%80%9A-2">2</a>。</p></li>
 <li><p><span id="唐轶三十三-杨凝式-9"></span>
 杨凝式，华阴人也。形貌寝侻，然精神矍然，要大于身。善文词，出时辈右。《宣和书谱》一九。</p></li>
 </ol>
@@ -318,7 +318,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶三十三-杨苎罗-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%A8%E5%87%9D%E5%BC%8F-2">杨凝式2</a>。</li>
+见杨凝式<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%A8%E5%87%9D%E5%BC%8F-2">2</a>。</li>
 </ol>
 </div>
 <div id="卢-詹" class="section level2">
@@ -369,7 +369,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶三十三-郭金海-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E5%AE%89%E4%BB%8E%E8%BF%9B-1">安从进1</a>。</li>
+见安从进<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E5%AE%89%E4%BB%8E%E8%BF%9B-1">1</a>。</li>
 </ol>
 </div>
 <div id="张-篯" class="section level2">
@@ -469,11 +469,11 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶三十三-张彦泽-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%A1%91%E7%BB%B4%E7%BF%B0-2">桑维翰2</a>。</p></li>
+见桑维翰<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%A1%91%E7%BB%B4%E7%BF%B0-2">2</a>。</p></li>
 <li><p><span id="唐轶三十三-张彦泽-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E6%B6%9B-4">李涛4</a>、5。</p></li>
+见李涛<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E6%B6%9B-4">4</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E6%B6%9B-5">5</a>。</p></li>
 <li><p><span id="唐轶三十三-张彦泽-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E6%B6%9B-4">李涛4</a>、5。</p></li>
+见李涛<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E6%B6%9B-4">4</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E6%B6%9B-5">5</a>。</p></li>
 </ol>
 </div>
 <div id="白项鸦" class="section level2">
@@ -544,7 +544,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶三十三-王章-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E5%8F%B2%E5%BC%98%E8%82%87-1">史弘肇1</a>。</li>
+见史弘肇<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E5%8F%B2%E5%BC%98%E8%82%87-1">1</a>。</li>
 </ol>
 </div>
 <div id="李-涛-1" class="section level2">
@@ -616,7 +616,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶三十三-赵晖-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E9%99%B6%E6%99%9F-1">陶晟1</a>。</li>
+见陶晟<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E9%99%B6%E6%99%9F-1">1</a>。</li>
 </ol>
 </div>
 <div id="王-晏" class="section level2">
@@ -626,7 +626,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶三十三-王晏-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E9%99%B6%E6%99%9F-1">陶晟1</a>。</li>
+见陶晟<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E9%99%B6%E6%99%9F-1">1</a>。</li>
 </ol>
 </div>
 <div id="侯-章" class="section level2">
@@ -636,7 +636,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶三十三-侯章-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E9%99%B6%E6%99%9F-1">陶晟1</a>。</li>
+见陶晟<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E9%99%B6%E6%99%9F-1">1</a>。</li>
 </ol>
 </div>
 <div id="慕容彦超" class="section level2">
@@ -710,9 +710,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶三十三-李守贞-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%A8%E5%85%89%E8%BF%9C-1">杨光远1</a>。</p></li>
+见杨光远<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%A8%E5%85%89%E8%BF%9C-1">1</a>。</p></li>
 <li><p><span id="唐轶三十三-李守贞-1"></span>
-见周世宗符后1。</p></li>
+见周世宗符后<a href="#">1</a>。</p></li>
 </ol>
 </div>
 <div id="赵思绾" class="section level2">
@@ -735,7 +735,7 @@
 <li><p><span id="唐轶三十三-李谷-2"></span>
 周太祖时，李谷以病臂未愈，三表辞位，帝遣中使谕指曰：「卿所掌至重，朕难其人，苟事功克集，何必朝礼。朕今于便殿待卿，可暂入相见。」谷见于金祥殿，面陈款悃，帝不许。谷不得已，复视事，未能执笔，诏以三司务繁，令刻名印用之。其后又九表辞位，罢守本官，令每月肩舆一诣便殿议政事。《续世说》五。</p></li>
 <li><p><span id="唐轶三十三-李谷-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E9%9F%A9%E7%86%99%E8%BD%BD-2">韩熙载2</a>。</p></li>
+见韩熙载<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E9%9F%A9%E7%86%99%E8%BD%BD-2">2</a>。</p></li>
 </ol>
 </div>
 <div id="王-峻" class="section level2">
@@ -759,9 +759,9 @@
 <li><p><span id="唐轶三十三-王朴-2"></span>
 王朴仕周世宗，制礼作乐，考定声律，正星历，修刑统，百废俱起。又取三关，收淮南，皆朴为谋。然事世宗才四年耳，使假之寿考，安可量也？尝自谓「朴在则周朝在」，非过论也。王禹偁记朴在密院，太祖时为殿前点检。一日，有殿直冲节者，诉于密院。朴曰：「殿直虽官小，然与太尉比肩事主，且太尉方典禁兵，不宜如此。」太祖耸然而出。又周世宗于禁中作功臣阁，画当时大臣如李谷、郑仁诲与朴之属。太祖即位，一日过功臣阁，风开半门，正与朴像相对。太祖望见，却立耸然，整御袍襟领，磬折鞠躬顶礼乃过。左右曰：「陛下贵为天子，彼前朝之臣，礼何过也？」太祖以手指御袍云：「此人若在，朕不得此袍着。」其敬畏如此。又《闲谈录》云，朴植性刚烈，大臣藩镇皆惮之。世宗收淮南，俾朴留守。时以街巷隘狭，例从展拆，怒厢校弛慢，于通衢中鞭背数十。其人忿然叹云：「宣补厢虞候，岂得便从决！」朴微闻之，命左右擒至，立毙于马前。世宗闻之，笑谓近臣云：「此是大愚人，去王朴面前夸宣补厢虞候，宜其死矣。」《默记》上。</p></li>
 <li><p><span id="唐轶三十三-王朴-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E5%90%8E%E5%91%A8%E4%B8%96%E5%AE%97-3">后周世宗3</a>。</p></li>
+见后周世宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E5%90%8E%E5%91%A8%E4%B8%96%E5%AE%97-3">3</a>。</p></li>
 <li><p><span id="唐轶三十三-王朴-4"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E5%BA%A6-1">李度1</a>。</p></li>
+见李度<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E5%BA%A6-1">1</a>。</p></li>
 </ol>
 </div>
 <div id="范-质-1" class="section level2">
@@ -770,7 +770,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶三十三-范质-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E5%92%8C%E5%87%9D-4">和凝4</a>。</p></li>
+见和凝<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E5%92%8C%E5%87%9D-4">4</a>。</p></li>
 <li><p><span id="唐轶三十三-范质-2"></span>
 范质为翰林学士时，戎王将图南寇，少帝征外诸侯用兵，因是观其进退以去留之。八月一日，有制命一十五，将以北京留守刘充为行营都统等。是夜质直金门，帝以制多，令召别学士共草，公奏曰：「今或夜开禁门，必恐漏泄机密，臣之罪也。不若臣独草。」迟明已封进讫付外。丞相于阁中览制，咸异之曰：「昔草五王制者，传作美谈。今范公独草十五将麻制，真大手笔也。」质，周太祖朝拜相。《五代晋书》（《广卓异记》一三）。</p></li>
 <li><p><span id="唐轶三十三-范质-3"></span>
@@ -778,7 +778,7 @@
 <li><p><span id="唐轶三十三-范质-4"></span>
 周世宗深怒翰林学士窦仪，欲杀之。宰相范质入奏事，帝望见知其意，即起避之。质趋前伏地，叩头谏曰：「仪罪不至死，臣为宰相，致陛下枉杀近臣，罪皆在臣。」继之以泣。帝意解，乃释之。《续世说》一〇。</p></li>
 <li><p><span id="唐轶三十三-范质-5"></span>
-见周世宗5。</p></li>
+见周世宗<a href="#">5</a>。</p></li>
 <li><p><span id="唐轶三十三-范质-6"></span>
 周显德中，以太祖在殿前点检，功业日隆，而谦下愈甚，老将大校多归心者，虽宰相王溥亦阴效诚款。今淮南都园，则溥所献也。惟范质忠于周室，初无所附。及世宗晏驾，北边奏契丹入寇，太祖以兵出拒之。行至陈桥，军变，既入城，韩通以亲衞战于阙下，败死。太祖登正阳门望城中，诸军未有归者，乃脱甲诣政事堂。时早朝未退而闻乱，质下殿执溥手曰：「仓猝遣将，吾侪之罪也。」爪入溥手，几血出，溥无语。既入见太祖，质曰：「先帝养太尉如子，今身未冷，奈何如此？」太祖性仁厚，流涕被面。然质知事不可遏，曰：「事已尔，无太仓卒，自古帝王有禅让之礼，今可行也。」因具陈之，且曰：「太尉既以礼受禅，则事太后当如母，养少主当如子，慎勿负先帝旧恩。」太祖挥涕许诺，然后率百官成礼。由此太祖深敬重质，仍以为相者累年。终质之世，太后、少主皆无恙。故太祖、太宗每言贤相，必以质为首。《龙川别志》上。</p></li>
 <li><p><span id="唐轶三十三-范质-7"></span>
@@ -802,7 +802,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶三十三-王处讷-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E5%90%8E%E5%91%A8%E5%A4%AA%E7%A5%96-9">后周太祖9</a>。</li>
+见后周太祖<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E5%90%8E%E5%91%A8%E5%A4%AA%E7%A5%96-9">9</a>。</li>
 </ol>
 </div>
 <div id="扈-载" class="section level2">
@@ -831,7 +831,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶三十三-张昭远-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E6%B6%9B-6">李涛6</a>。</p></li>
+见李涛<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E6%B6%9B-6">6</a>。</p></li>
 <li><p><span id="唐轶三十三-张昭远-2"></span>
 张昭远特好学，积书数万卷，以楼载之，时谓之「书楼张公家」。尝谓所亲：「《太玄经》见黄钟不在戊己之位，使律本从何而生乎？扬子云本通历象，尝著是书。严君平为之下星纬行度，凡二十八宿，于参、觜、牛，颇差其次。未知君平之学止于是耶？后人传之误也？未可知已。」其探讨如此。《五代史补》五。</p></li>
 </ol>
@@ -913,7 +913,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶三十三-李花开-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E8%B0%B7-1">李谷1</a>。</li>
+见李谷<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%89-%E6%9D%8E%E8%B0%B7-1">1</a>。</li>
 </ol>
 </div>
 <div id="韩-通" class="section level2">
@@ -1038,7 +1038,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-22.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
