--- a/唐人轶事汇编卷三十六.html
+++ b/唐人轶事汇编卷三十六.html
@@ -162,7 +162,7 @@
 <li><p><span id="唐轶三十六-韩熙载-4"></span>
 韩熙载字叔言，事江南三主，时谓之神仙中人。风彩照物，每纵辔春城秋苑，人皆随观，谈笑则听者忘倦。审音能舞，善八分及画，笔皆冠绝。简介不屈，举朝未尝拜一人。每献替，多嘉纳。吉凶仪制不如式者，随事稽正。制诰典雅，有元和之风。屡欲相之，为宋齐丘深忌，终不进用。陈觉以福州之败，齐丘庇之，特赦不诛。熙载上疏廷争必请寘法，齐丘益怒，诬以纵酒少检，贬和州司马，其实平生不饮。璟觉其谮，非久召还。《湘山野录》下。《钓矶立谈》。《十国春秋》二八。《南唐拾遗记》。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-5"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%85%9C-3">李煜3</a>。</p></li>
+见李煜<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%85%9C-3">3</a>。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-6"></span>
 后主即位，颇疑北人，往往赐死。熙载惧祸，肆情坦率，破财货售乐妓以百数。月俸至，散与妓女，一无所有。既而不能给，遂衣敝缕作瞽者，持独弦琴，俾门生舒雅执板，随房歌舞求焉，以足日膳，旦暮不禁。其出入窃与诸生滛杂，熙载过之，笑曰：「不敢阻兴而已。」……时谓北齐徐之才无以过之。月入不供，遂表后主曰：「家无盈日之储，野乏百金之产，仲尼蔬食，平仲肫肩，亦未之如也。今商飚已至，寒色渐加，挟纩授衣，未知何以？」后主批云：「熙载咄咄，意要出钱，支分破除，广引妓路。如云临川一使，币帛轻怯，措大无失也。且日俸五十余千，谓之不足，则竭国家之产，不过养得百十个措大尔。」乃赐内库绵绢充时服。自是多不赴朝，为左右所弹，分司南都。上表乞住，曰：「诸佛慈悲，常容悔过，宣尼圣哲，亦许自新。臣无横草之功，有滔天之罪，羸形虽在，壮节全消，满船稚子、婴儿，尽室行啼坐哭。劲风孤烛，病身那得长存；万水千山，回首不堪永诀。」后主又批云：「既无迁善之心，遂掇自贻之咎。表陈悔过，览之怆然，可得许本职在阙下。」《江南野录》（《类说》一八）。《南唐近事》。《邵氏闻见后录》一八。《缃素杂记》（《苕溪渔隐丛话》前集四〇）。《癸辛杂识》前集。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-7"></span>
@@ -176,17 +176,17 @@
 <li><p><span id="唐轶三十六-韩熙载-11"></span>
 韩熙载仕江南，官至诸行侍郎。晚年不羁，女仆百人。每延请宾客，而先令女仆与之相见。或调戏，或殴击，或加以争夺靴笏，无不曲尽，然后熙载始缓步而出，习以为常。复有医人及烧炼僧数辈，每来无不升堂入室，与女仆等杂处。伪主知之，虽怒，以其大臣，不欲直指其过，因命待诏画为图以赐之，使其自愧。而熙载视之安然。《五代史补》五。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-12"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E9%A1%BE%E9%97%B3%E4%B8%AD-1">顾闳中1</a>。</p></li>
+见顾闳中<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E9%A1%BE%E9%97%B3%E4%B8%AD-1">1</a>。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-13"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E9%99%88%E8%87%B4%E9%9B%8D-1">陈致雍1</a>。</p></li>
+见陈致雍<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E9%99%88%E8%87%B4%E9%9B%8D-1">1</a>。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-14"></span>
 〔韩熙载〕广纳儒生，苟有才艺，必延致门下。以舒雅之徒为门生高第，几数十辈。由是所用之资，月入不供。及奉使临川，借官钱三十万，所司以月俸预纳。熙载上书诉之，云「家无盈日之厨，野乏百金之产」。累数百言。后主批其奏云：「言伪而辩，古人恶之。熙载俸有常秩，锡赉尚优，而谓厨无盈日，无乃过欤？」命有司放免逐月所刻料钱，仍赐内库绢百疋、绵千两，以充时服。马令《南唐书》一三。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-15"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E8%88%92%E9%9B%85-1">舒雅1</a>。</p></li>
+见舒雅<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E8%88%92%E9%9B%85-1">1</a>。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-16"></span>
 晚年奉贡入梁京，绝知旧，题壁云：「未到故乡时，将谓故乡好。及至亲得归，争如身不到。目前相识无一人，出入空伤我怀抱。风雨萧萧旅馆秋，归来窗下和衣倒。梦中忽到江南路，寻得京中旧居处。桃脸蛾眉笑出门，争向门前拥将去。」……或问：「江南何不食剥皮羊？」熙载曰：「江南地产罗绮故耳。」时皆不喻，熙载去乃悟，追之不及。《江南野录》（《类说》一八）。又《诗话总龟》前集二四引。马令《南唐书》一三。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-17"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%85%9C-42">李煜42</a>。</p></li>
+见李煜<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%85%9C-42">42</a>。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-18"></span>
 后主即位，适会朱元反叛，颇有疑北客之意，唯待熙载不衰。又熙载曾将命大朝，留不得遣，有诗题馆中曰：「我本江北人，去作江南客。还至江北时，举目无相识。清风吹我寒，明月为谁白？不如归去来，江南有人忆。」时宰见而悯之，为白天子，遣还。以此之故，嫌疑不及，然熙载内亦不自安，因弥事荒䜩，殆于废日。俸禄之数，不得充其用。及身没之日，后主痛惜曰：「天夺吾良臣何速也？遂不爰立。」顾左右曰：「今将赠熙载以平章事，前代尝有此例否？」或对曰：「刘穆之赠开府仪同三司，即其例也。」后主即日出手书，诏赠以平章事。追谥曰文靖，葬于梅岭冈谢安墓侧。江南人臣恩礼，少有其比。《钓矶立谈》。马令《南唐书》一三。陆游《南唐书》一二。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-19"></span>
@@ -206,7 +206,7 @@
 <li><p><span id="唐轶三十六-韩熙载-26"></span>
 熙载才名远布，四方建碑表者皆载金帛求为之文。马令《南唐书》一三。陆游《南唐书》一二。《十国春秋》二八。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-27"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%94.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%94-%E5%AE%8B%E9%BD%90%E4%B8%98-34">宋齐丘34</a>。</p></li>
+见宋齐丘<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%94.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%94-%E5%AE%8B%E9%BD%90%E4%B8%98-34">34</a>。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-28"></span>
 严仆射续以位高寡学，为时所鄙。又江文蔚尝作《蟹赋》讥续，略曰：「外视多足，中无寸肠。」又有「口里雌黄，每失途于相沫；胸中戈甲，尝聚众以横行」之句。续深赧之，强自激昂。以熙载有才名，固请撰其父神道碑，欲苟称誉，取信于人。以珍货几万缗，仍辍未胜衣一歌鬟质冠洞房者，为濡毫之赠，意其获盼，必可深讽。熙载纳赠受姬，遂纳其请。文既成，但叙谱裔、品秩及薨葬褒赠之典而已，无点墨道及续之事业者。续嫌之，封还，尚冀其改窜。熙载亟以向所赠及歌姬悉还之，临登车，止写一阕于泥金双带曰：「风柳摇摇无定枝，阳台云雨梦中归。他年蓬岛音尘断，留取樽前旧舞衣。」《湘山野录》下。《南唐野史》（《类说》二七）。《古今诗话》（《诗话总龟》前集一七）。马令《南唐书》一三。《十国春秋》二八。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-29"></span>
@@ -218,7 +218,7 @@
 <li><p><span id="唐轶三十六-韩熙载-32"></span>
 对花焚香有风味。味相和者，其臭殊妙。木犀宜龙脑，酴醿宜沈水，兰宜四绝，含笑宜麝，薝卜宜檀。韩熙载著《五宜说》。《南唐拾遗记》。</p></li>
 <li><p><span id="唐轶三十六-韩熙载-33"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81-%E9%9F%A9%E6%84%88-39">韩愈39</a>、40。</p></li>
+见韩愈<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81-%E9%9F%A9%E6%84%88-39">39</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81-%E9%9F%A9%E6%84%88-40">40</a>。</p></li>
 </ol>
 </div>
 <div id="徐-锴" class="section level2">
@@ -245,7 +245,7 @@
 <li><p><span id="唐轶三十六-徐锴-9"></span>
 锴凡四知贡举，号得人。后主裒所制文，命为之序，士以为荣。锴酷嗜读书，隆寒烈暑，未尝少辍。后主尝得《周载》、《齐职仪》，江东初无此书，人无知者，以访锴，一一条对，无所遗忌，其博记如此，既久处集贤，朱黄不去手，非暮不出。少精小学，故所讐书尤审谛。每指其家语人曰：「吾惟寓宿于此耳。」江南藏书之盛，为天下冠，锴力居多。后主尝叹曰：「群臣勤其官皆如徐锴在集贤，吾何忧哉。」李穆来使，见铉及锴，叹曰：「二陆之流也。」尝夜直，召对论天下事，因及用人才行孰先，后主曰：「多难当先才。」锴曰：「有人才如韩、彭而无行，陛下敢以十万兵付之乎？」后主称善。时国势日削，锴忧愤郁郁得疾，谓家人曰：「吾今乃免为俘虏矣。」开宝七年七月卒，年五十五。赠礼部侍郎，谥曰文。著《说文通释》、《方舆记》、《古今国典》、《赋苑》、《岁时广记》及他文章，凡数百卷。锴卒逾年，江南见讨。比国破，其遗文多散逸者。陆游《南唐书》五。《十国春秋》二八。</p></li>
 <li><p><span id="唐轶三十六-徐锴-10"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E9%83%AD%E6%98%AD%E5%BA%86-1">郭昭庆1</a>。</p></li>
+见郭昭庆<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E9%83%AD%E6%98%AD%E5%BA%86-1">1</a>。</p></li>
 <li><p><span id="唐轶三十六-徐锴-11"></span>
 徐常侍铉自江南归朝，历右散骑常侍，贬靖难军行军司马，而卒于邠州。铉无子，其弟锴有后，居金陵摄山前开茶肆，号徐十郎，有铉、锴诰勅，备存甚多。客尝过，求观之，有自江南入宋初授官诰，云：「归明人伪银青光禄大夫守太子率更令」云云。《南唐拾遗记》。</p></li>
 </ol>
@@ -493,7 +493,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶三十六-孟贯-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E5%90%8E%E5%91%A8%E4%B8%96%E5%AE%97-17">后周世宗17</a>。</li>
+见后周世宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E5%90%8E%E5%91%A8%E4%B8%96%E5%AE%97-17">17</a>。</li>
 </ol>
 </div>
 <div id="孟宾于-孟归唐" class="section level2">
@@ -600,7 +600,7 @@
 <li><p><span id="唐轶三十六-沈彬-5"></span> <span id="唐轶三十六-沈廷瑞-5"></span>
 沈彬字子美，高安人。为诗天才狂逸，下笔成章。好神仙之事。少孤，西游以三举为约。尝梦着锦彩衣贴月而飞，识者言虽名播天下，身不入月，终不及第。洪州解至长安初举，行纳省卷，作《梦仙谣》云：「玉殿大开从客入，金桃烂熟没人偷。凤惊宝扇频翻翅，龙误金鞭忽转头。」第二举《忆仙谣》云：「白榆风占九天秋，王母朝回宴玉楼。日月渐长双凤睡，桑田欲变六鳌愁。云翻箫管相随去，星触旌幢各自流。诗酒近来狂不得，骑龙却忆上清游。」第三举《赠刘象》一首云：「曾应大中天子举，四朝风月鬓萧疏。不随世祖重携剑，知为文皇再读书。十载战尘消旧业，满城风雨坏贫居。一枝何事于君惜，仙桂年年幸有余。」刘象三举无成，孤寒，主司览彬诗，其年放象及第，五老榜即其数也。彬，干符中值四方多事，遂南游湖湘及岭表二十余年，却回吴中。过江南，受伪命，官至吏部侍郎，致仕，退居高安。《雅言杂载》（《诗话总龟》前集三五）。《唐诗纪事》七一。</p></li>
 <li><p><span id="唐轶三十六-沈彬-6"></span> <span id="唐轶三十六-沈廷瑞-6"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E5%AD%99%E9%B2%82-1">孙鲂1</a>。</p></li>
+见孙鲂<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E5%AD%99%E9%B2%82-1">1</a>。</p></li>
 <li><p><span id="唐轶三十六-沈彬-7"></span> <span id="唐轶三十六-沈廷瑞-7"></span>
 庐山康王观道士李谷神言：沈彬郎中，袁州宜阳人，即谷神乡里之邻伍也。趋尚高邈，尝谓簪组为梏身具状。卒年自卜葬地，子孙不敢违。既兆穴，开之下至七尺间，得大石数片；既启之，下有隧道，渐次辟之，乃造成石墓一所，其中高九尺、前后一丈二尺，阔与高等。灵座前有青石莲花台三树，上有青石莲花灯碗三枚，皆覆之，后列数树如前者。其镌镵之工妙，绝于世。灵席中又得青石铭记一片，朱字篆，若方填，云：「开成二年间，虽开不葬埋。漆灯犹未点，留待沈彬来。」乃就葬之。《采异记》（张本《说郛》六五、陶本《说郛》一一八）。</p></li>
 <li><p><span id="唐轶三十六-沈彬-8"></span> <span id="唐轶三十六-沈廷瑞-8"></span>
@@ -664,7 +664,7 @@
 <li><p><span id="唐轶三十六-郑元素-1"></span>
 郑元素者，温韬之甥，隐居庐山青牛谷，不交人事。元宗召至都下，馆于徐铉家。及卒，铉令元素乡人龙敏瘗其尸于石子岗。临穴之际，有七鹤盘旋空中，敏辄祷之，一一下拂棺盖。《江南余载》下。</p></li>
 <li><p><span id="唐轶三十六-郑元素-2"></span>
-郑元素，京兆华原人也。少习诗礼。避乱南游，隐居于庐山青牛谷，高卧四十余年。采薇食蕨，弦歌自若，搆椽剪茅于舍后，会集古书殆至千余卷。元素，温韬之甥也，自言韬发昭陵，从埏道下，见宫室制度闳丽不异人间，中为正寝，东西厢列石床，床上石函中有铁匣，悉藏前世图书，钟、王墨迹，纸墨如新，韬悉取之。韬死，元素得之为多。马令《南唐书》一五。《十国春秋》二九。参见唐太宗140。</p></li>
+郑元素，京兆华原人也。少习诗礼。避乱南游，隐居于庐山青牛谷，高卧四十余年。采薇食蕨，弦歌自若，搆椽剪茅于舍后，会集古书殆至千余卷。元素，温韬之甥也，自言韬发昭陵，从埏道下，见宫室制度闳丽不异人间，中为正寝，东西厢列石床，床上石函中有铁匣，悉藏前世图书，钟、王墨迹，纸墨如新，韬悉取之。韬死，元素得之为多。马令《南唐书》一五。《十国春秋》二九。参见唐太宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%B8%80-%E5%94%90%E5%A4%AA%E5%AE%97-140">140</a>。</p></li>
 </ol>
 </div>
 <div id="许-规" class="section level2">
@@ -815,9 +815,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶三十六-申渐高-1"></span>
-金陵建国之初，军储未实，关市之利，敛率尤繁，农商苦之，而莫达于上。时属近甸亢旱日久，祈祷无应。上他日举觞苑中，宣示宰臣曰：「近京三五十里皆报雨足，独京师不雨，何邪？得非狱市之间，冤枉未伸乎？」诸相未及对，申渐高历陛而进曰：「雨惧抽税，不敢入京。」上因是悟之。翊日下诏，停一切额外税，信宿之间，膏泽告足。故知优旃漆城，那律瓦衣，不为虚矣。《南唐近事》（《靖康缃素杂记》七）。又《类说》二一引。《江表志》上。马令《南唐书》二五。陆游《南唐书》一七。《十国春秋》一二。参见李家明 1。</p></li>
+金陵建国之初，军储未实，关市之利，敛率尤繁，农商苦之，而莫达于上。时属近甸亢旱日久，祈祷无应。上他日举觞苑中，宣示宰臣曰：「近京三五十里皆报雨足，独京师不雨，何邪？得非狱市之间，冤枉未伸乎？」诸相未及对，申渐高历陛而进曰：「雨惧抽税，不敢入京。」上因是悟之。翊日下诏，停一切额外税，信宿之间，膏泽告足。故知优旃漆城，那律瓦衣，不为虚矣。《南唐近事》（《靖康缃素杂记》七）。又《类说》二一引。《江表志》上。马令《南唐书》二五。陆游《南唐书》一七。《十国春秋》一二。参见李家明<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E6%9D%8E%E5%AE%B6%E6%98%8E-1">1</a>。</p></li>
 <li><p><span id="唐轶三十六-申渐高-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%9D%8E%E6%98%AA-13">李昪13</a>、14。</p></li>
+见李昪<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%9D%8E%E6%98%AA-13">13</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%9D%8E%E6%98%AA-14">14</a>。</p></li>
 </ol>
 </div>
 <div id="杨花飞" class="section level2">
@@ -827,7 +827,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶三十六-杨花飞-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%92%9F-6">李璟6</a>。</li>
+见李璟<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%92%9F-6">6</a>。</li>
 </ol>
 </div>
 <div id="李家明" class="section level2">
@@ -837,7 +837,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶三十六-李家明-1"></span>
-李家明，世为庐州西昌人。嗣主时，为乐部头，有学，解滑稽，善讽谏，为时所推。从嗣主游后苑，登于台观，盛望钟山雨，曰：「其势即至矣。」家明对曰：「雨虽来，必不敢入城。」嗣主怪而问之，家明曰：「惧陛下重税。」嗣主曰：「不因卿言，朕不知之。」遂令搉务降半而征之。及见牛晚卧树阴，嗣主曰：「牛且热矣。」家明曰：「臣不调，敢上绝句。」曰：「曾遇宁戚鞭敲角，又被田单火燎身。闲背斜阳嚼枯草，近来问喘更无人。」时左右宰臣皆惭，免冠谢罪。宋齐邱只产一子，辄死，齐邱哭之恸，逾月，自亲王宰寮勉之不止。家明谓主曰：「已能止之矣！大王当复厚赐。」王许诺，家明遂作大纸鸢，上书云：「欲兴唐祚革强吴，尽是先生设计谟。一个孩儿不得，让皇百口合何如。」乘风放之，度至齐邱第，遂绝其缕，令坠，齐邱见之，惭感而止。家明遂大获缗帛。后嗣主于苑中命元寮临池而钓，诸臣皆屡引其鳞，惟嗣主无所获。家明见其犹豫，乃曰：「臣昧死敢上刍荛。」曰：「玉甃金钩兴正浓，碧池春煖水溶溶。凡鳞不敢吞香饵，知道君王合钓龙。」嗣主因大喜，燕极懽而罢。及嗣主加王弟景达等官，而恩泽未及臣下，因赐享醼，家明乃入末，作二翁妇而出列坐，令其新妇，每进一饮一食皆辄拜献，而礼颇繁剧，翁妇怒而责之曰：「新妇自家官，自家家，何用烦拜耶！」嗣主闻之，曰：「孤为一方之主，而恩不覃于外，孤之过矣，家明之过亦宜乎！」因厚赐之，而加百官焉。先是，建州王延政与闽州兄延羲有隙，遂各称帝，嗣主遣将平之，俘延政及百官入建康，寻封王，遂命王公宰寮之属燕其第。时遣家明率乐部往，延政啬于贿赂，家明怒其寡，而讥之曰：「贱工无伎，大王优赐，不敢奉命。然告大王乞取一物。」延政曰：「吾家所有，唯汝之命。」家明曰：「大王平天冠今且无用，家明敢请之。」延政默然，惭恨而罢。自是怏怏发疾而卒。时家明母死，欲归葬，会嗣主听政之暇，坐于便殿，秉笔于琬琰上，闲书草字，家明因诈曰：「臣每窃学人署字，与之不疑。」嗣主曰：「卿能学孤为乎？」家明曰：「臣虽愚卤，愿効神踪。」嗣主乃于麻纸上大押字，命试学焉。家明得之，辄于草字上书云：「宣州于上供库钱支二百千付家明安厝母亲。」嗣主见之大笑，因而赐焉。从嗣主幸南都，时既划江，舟檝多从南岸，至赵屯，因辍乐停觞，北望皖公山，谓家明曰：「好青峭数峰，不知何名耶？」家明应声对曰：「龙舟轻飐锦帆风，正值宸游望远空。回首皖公山色翠，影斜不到寿杯中。」嗣主因惭，俛首而过。及后主嗣位，家明老而无宠焉。《江南野史》七。《江南野录》（《类说》一八、《诗话总龟》前集四八）。马令《南唐书》二五。《十国春秋》三二。参见申渐高1。</li>
+李家明，世为庐州西昌人。嗣主时，为乐部头，有学，解滑稽，善讽谏，为时所推。从嗣主游后苑，登于台观，盛望钟山雨，曰：「其势即至矣。」家明对曰：「雨虽来，必不敢入城。」嗣主怪而问之，家明曰：「惧陛下重税。」嗣主曰：「不因卿言，朕不知之。」遂令搉务降半而征之。及见牛晚卧树阴，嗣主曰：「牛且热矣。」家明曰：「臣不调，敢上绝句。」曰：「曾遇宁戚鞭敲角，又被田单火燎身。闲背斜阳嚼枯草，近来问喘更无人。」时左右宰臣皆惭，免冠谢罪。宋齐邱只产一子，辄死，齐邱哭之恸，逾月，自亲王宰寮勉之不止。家明谓主曰：「已能止之矣！大王当复厚赐。」王许诺，家明遂作大纸鸢，上书云：「欲兴唐祚革强吴，尽是先生设计谟。一个孩儿不得，让皇百口合何如。」乘风放之，度至齐邱第，遂绝其缕，令坠，齐邱见之，惭感而止。家明遂大获缗帛。后嗣主于苑中命元寮临池而钓，诸臣皆屡引其鳞，惟嗣主无所获。家明见其犹豫，乃曰：「臣昧死敢上刍荛。」曰：「玉甃金钩兴正浓，碧池春煖水溶溶。凡鳞不敢吞香饵，知道君王合钓龙。」嗣主因大喜，燕极懽而罢。及嗣主加王弟景达等官，而恩泽未及臣下，因赐享醼，家明乃入末，作二翁妇而出列坐，令其新妇，每进一饮一食皆辄拜献，而礼颇繁剧，翁妇怒而责之曰：「新妇自家官，自家家，何用烦拜耶！」嗣主闻之，曰：「孤为一方之主，而恩不覃于外，孤之过矣，家明之过亦宜乎！」因厚赐之，而加百官焉。先是，建州王延政与闽州兄延羲有隙，遂各称帝，嗣主遣将平之，俘延政及百官入建康，寻封王，遂命王公宰寮之属燕其第。时遣家明率乐部往，延政啬于贿赂，家明怒其寡，而讥之曰：「贱工无伎，大王优赐，不敢奉命。然告大王乞取一物。」延政曰：「吾家所有，唯汝之命。」家明曰：「大王平天冠今且无用，家明敢请之。」延政默然，惭恨而罢。自是怏怏发疾而卒。时家明母死，欲归葬，会嗣主听政之暇，坐于便殿，秉笔于琬琰上，闲书草字，家明因诈曰：「臣每窃学人署字，与之不疑。」嗣主曰：「卿能学孤为乎？」家明曰：「臣虽愚卤，愿効神踪。」嗣主乃于麻纸上大押字，命试学焉。家明得之，辄于草字上书云：「宣州于上供库钱支二百千付家明安厝母亲。」嗣主见之大笑，因而赐焉。从嗣主幸南都，时既划江，舟檝多从南岸，至赵屯，因辍乐停觞，北望皖公山，谓家明曰：「好青峭数峰，不知何名耶？」家明应声对曰：「龙舟轻飐锦帆风，正值宸游望远空。回首皖公山色翠，影斜不到寿杯中。」嗣主因惭，俛首而过。及后主嗣位，家明老而无宠焉。《江南野史》七。《江南野录》（《类说》一八、《诗话总龟》前集四八）。马令《南唐书》二五。《十国春秋》三二。参见申渐高<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%85%AD-%E7%94%B3%E6%B8%90%E9%AB%98-1">1</a>。</li>
 </ol>
 </div>
 <div id="王感化" class="section level2">
@@ -850,7 +850,7 @@
 <li><p><span id="唐轶三十六-王感化-2"></span>
 杨文公《谈苑》载伶人王感化少聪敏，未尝执卷，而多识故实，口谐捷急，滑稽无穷。会中主引李建勋、严续二相游苑中，适见系牛于株枿上，令感化赋诗，应声曰：「曾遭宁戚鞭敲角，几被田单火燎身。独向残阳嚼枯草，近来问喘更何人？」因以讥二相也。又中主徙豫章，浔阳遇大风，中主不悦，命酒独酌。指北岸山问舟人，云皖公山，愈不怿。感化独前献诗曰：「龙舟万里架长风，汉武浔阳事正同。珍重皖公山色好，影斜不落寿杯中。」中主大悦，赐束帛。余读《江南野录》，载李家明事：当嗣主时为乐部头，能滑稽，善讽谏。亦载二诗，首尾大同小异。《咏牛》诗曰：「曾遭宁戚鞭敲角，又被田单火燎身。闲背斜阳嚼枯草，近来问喘更无人。」《龙舟》诗曰：「龙舟轻飐锦帆风，正值宸游望远空，回首皖公山色翠，影斜不到寿杯中。」嗣主因恸，俛首而过。《谈苑》以感化为建州人，《野录》以家明为庐州人；《谈苑》谓中主，《野录》谓嗣主，未详孰是。《靖康缃素杂记》七。</p></li>
 <li><p><span id="唐轶三十六-王感化-3"></span>
-王感化善讴歌，声韵悠扬，清振林木，系乐部为歌板色。元宗嗣位，宴乐击鞠不辍。尝乘醉命感化奏《水调》词，感化唯歌「南朝天子爱风流」一句，如是者数四。元宗辄悟，覆杯叹曰：「使孙、陈二主得此一句，不当有衔璧之辱也。」感化由是有宠。元宗尝作《浣溪沙》二阕，手写赐感化，曰：「菡萏香销翠叶残，西风愁起碧波间。还与容光共憔悴，不堪看。　　细雨梦回清漏永，小楼吹彻玉笙寒。漱漱泪珠多少恨，倚栏干。」「手卷珠帘上玉钩，依前春恨锁重楼。风里落花谁是主，思悠悠。　　青鸟不传云外信，丁香空结雨中愁。回首绿波春色暮，接天流。」后主即位，感化以其词札上之。后主感动，赏赐感化甚优。马令《南唐书》二五。　案：歌「南朝天子爱风流」句，又作杨花飞事。参见李璟6。</p></li>
+王感化善讴歌，声韵悠扬，清振林木，系乐部为歌板色。元宗嗣位，宴乐击鞠不辍。尝乘醉命感化奏《水调》词，感化唯歌「南朝天子爱风流」一句，如是者数四。元宗辄悟，覆杯叹曰：「使孙、陈二主得此一句，不当有衔璧之辱也。」感化由是有宠。元宗尝作《浣溪沙》二阕，手写赐感化，曰：「菡萏香销翠叶残，西风愁起碧波间。还与容光共憔悴，不堪看。　　细雨梦回清漏永，小楼吹彻玉笙寒。漱漱泪珠多少恨，倚栏干。」「手卷珠帘上玉钩，依前春恨锁重楼。风里落花谁是主，思悠悠。　　青鸟不传云外信，丁香空结雨中愁。回首绿波春色暮，接天流。」后主即位，感化以其词札上之。后主感动，赏赐感化甚优。马令《南唐书》二五。　案：歌「南朝天子爱风流」句，又作杨花飞事。参见李璟<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%92%9F-6">6</a>。</p></li>
 </ol>
 </div>
 <div id="李廷珪" class="section level2">
@@ -1042,7 +1042,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-22.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
