--- a/唐人轶事汇编卷二十八.html
+++ b/唐人轶事汇编卷二十八.html
@@ -162,7 +162,7 @@
 <li><p><span id="唐轶二十八-罗隐-4"></span>
 令狐滈，赵公绹之子，登进士，隐以诗贺之。赵公谓滈曰：「吾不喜汝及第，喜汝得罗公一篇耳。」《唐诗纪事》六九。《十国春秋》八四。</p></li>
 <li><p><span id="唐轶二十八-罗隐-5"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%9B%9B-%E4%BB%A4%E7%8B%90%E7%BB%B9-11">令狐绹11</a>。</p></li>
+见令狐绹<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%9B%9B-%E4%BB%A4%E7%8B%90%E7%BB%B9-11">11</a>。</p></li>
 <li><p><span id="唐轶二十八-罗隐-6"></span>
 郑畋少女好罗隐诗，常欲妻之。一旦隐谒畋，畋命其女隔帘视之。及退，其女终身不读江东篇什。举子或以此谑之，答曰：「以貌取人，失之子羽。」众皆启齿。《南部新书》丁。</p></li>
 <li><p><span id="唐轶二十八-罗隐-7"></span>
@@ -176,9 +176,9 @@
 <li><p><span id="唐轶二十八-罗隐-11"></span>
 罗隐在科场恃才傲物，尤为公卿所恶，故六举不第。时长安有罗尊师者，深于相术，隐以貌陋，恐为相术所弃，每于尊师接谈，常自大以沮之，及其累遭黜落，不得已，始往问焉。尊师笑曰：「贫道知之久矣，但以吾子决在一第，未可与语。今日之事，贫道敢有所隐乎？且吾子之于一第也，贫道观之，虽首冠群英，亦不过簿尉尔。若能罢举，东归霸国以求用，则必富且贵矣。两途，吾子宜自择之。」隐懵然不知所措者数日。邻居有卖饭媪，见隐，惊曰：「何辞色之沮丧如此，莫有不决之事否？」隐谓知之，因尽以尊师之言告之。媪叹曰：「秀才何自迷甚焉？且天下皆知罗隐，何须一第然后为得哉？不如急取富贵，则老婆之愿也。」隐闻之释然，遂归钱塘。时钱镠方得两浙，置之幕府，使典军中书檄，其后官给事中。初，隐罢上中书之日，费窘，因抵魏谒邺王罗绍威。将入其境，先贻书叙其家世，邺王为姪。幕府僚吏见其书皆怒曰：「罗隐一布衣尔，而姪视大王，其可乎？」绍威素重士，且曰：「罗隐名振天下，王公大夫多为所薄，今惠然肯顾，其何以胜！得在姪行，为幸多矣，敢不致恭，诸公慎勿言。」于是拥旆郊迎，一见即拜，隐亦不让。及将行，绍威赠以百万，他物称是，仍致书于镠，谓叔父。镠首用之。《五代史补》一。《十国春秋》八四。</p></li>
 <li><p><span id="唐轶二十八-罗隐-12"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E7%BD%97%E7%BB%8D%E5%A8%81-4">罗绍威4</a>、5。</p></li>
+见罗绍威<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E7%BD%97%E7%BB%8D%E5%A8%81-4">4</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E7%BD%97%E7%BB%8D%E5%A8%81-5">5</a>。</p></li>
 <li><p><span id="唐轶二十八-罗隐-13"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E7%BD%97%E7%BB%8D%E5%A8%81-4">罗绍威4</a>、5。</p></li>
+见罗绍威<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E7%BD%97%E7%BB%8D%E5%A8%81-4">4</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E7%BD%97%E7%BB%8D%E5%A8%81-5">5</a>。</p></li>
 <li><p><span id="唐轶二十八-罗隐-14"></span>
 邺都罗绍威学隐为诗，自号其文为《偷江东集》。青州王师范遣使赍礼币，求一篇，隐以诗寄之曰：「盛业传家有宝刀，况闻余力更挥毫。腰间印绶黄金贵，卷内文章白雪高。宴罢佳宾吟凤藻，猎回诸将问龙韬。登坛甲子才三十，犹拟回头夺锦标。」王得诗大喜。昭宗欲以甲科处之，有大臣奏曰：「隐虽有才，然多轻易，明皇圣德，犹横遭讥谤，将相臣僚，岂能免乎凌轹？」帝问讥谤之词，对曰：「隐有《华清》诗曰：『楼殿层层佳气多，开元时节好笙歌。也知道德胜尧舜，争奈杨妃解笑何！』」其事遂寝。《唐诗纪事》六九。</p></li>
 <li><p><span id="唐轶二十八-罗隐-15"></span>
@@ -192,11 +192,11 @@
 <li><p><span id="唐轶二十八-罗隐-19"></span>
 钱氏之有国也，应西湖之捕鱼者必日纳数斤，谓之使宅鱼。有终日不及其数者，必市为供之。民颇怨叹。一日，武肃大设一图，上画磻溪直钩之事，武肃指示，命罗隐赋诗，应声曰：「吕望当年展庙谟，直钩钓国更谁如。若教生在西湖上，也是须供使宅鱼。」武肃大笑，自是尽得蠲免。《闲谈录》（张本《说郛》一四、陶本《说郛》三二）。《十国春秋》八四。</p></li>
 <li><p><span id="唐轶二十八-罗隐-20"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B9%9D-%E9%92%B1%E9%95%A0-19">钱镠19</a>。</p></li>
+见钱镠<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B9%9D-%E9%92%B1%E9%95%A0-19">19</a>。</p></li>
 <li><p><span id="唐轶二十八-罗隐-21"></span>
 罗隐与桐庐章鲁风齐名。钱武肃崛起，以鲁风善笔札，召为表奏孔目官，鲁风不就，执之。后以罗隐为钱唐令，惧而受命。因宴献诗云：「一个祢衡容不得，思量黄祖谩英雄。」自是始厚之。《古今诗话》（《诗话总龟》前集三七）。《唐诗纪事》六九。</p></li>
 <li><p><span id="唐轶二十八-罗隐-22"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B9%9D-%E7%AB%A0%E9%B2%81%E5%B0%81-1">章鲁封1</a>。</p></li>
+见章鲁封<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B9%9D-%E7%AB%A0%E9%B2%81%E5%B0%81-1">1</a>。</p></li>
 <li><p><span id="唐轶二十八-罗隐-23"></span>
 罗隐，光化中犹佐两浙幕。同院沈嵩得新榜，封示隐，隐批一绝于纸尾曰：「黄土原边狡兔肥，矢如流电马如飞。灞陵老将无功业，犹忆当时夜猎归。」《唐摭言》一○。《古今诗话》（《诗话总龟》前集三八）。《唐诗纪事》六九。</p></li>
 <li><p><span id="唐轶二十八-罗隐-24"></span>
@@ -204,7 +204,7 @@
 <li><p><span id="唐轶二十八-罗隐-25"></span>
 烈祖为政事仆射时，遣人聘越，问：「识罗给事否？」曰：「不识，亦未闻名。」越人曰：「四海知有罗江东，尔独拙于用乎？」对曰：「金牓上无名，所以不知也。」《江南余载》上。《唐诗纪事》六九。</p></li>
 <li><p><span id="唐轶二十八-罗隐-26"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%89-%E7%8E%8B%E7%BB%B4-15">王维15</a>。</p></li>
+见王维<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%89-%E7%8E%8B%E7%BB%B4-15">15</a>。</p></li>
 <li><p><span id="唐轶二十八-罗隐-27"></span>
 隐虽不以书显名，作行书尤有唐人典刑。观其《罗城记藳》诸帖，略无季世衰弱之习，盖自胸中所养，不为世俗浅陋所移尔。今御府所藏行书四。《宣和书谱》一一。</p></li>
 <li><p><span id="唐轶二十八-罗隐-28"></span>
@@ -262,7 +262,7 @@
 <li><p><span id="唐轶二十八-陆龟蒙-3"></span>
 龟蒙善为赋，绝妙。人有收得《赋林》，皆缀缉属对，差次比拟，凡数首有题而未就，其用工如此。《谈苑》（《吴郡志》二一）。</p></li>
 <li><p><span id="唐轶二十八-陆龟蒙-4"></span>
-木兰堂在郡治后。《岚斋录》云：唐张抟自湖州刺史移苏州，于堂前大植木兰花，当盛开时，燕郡中诗客，即席赋之。陆龟蒙后至，张联酌浮之，龟蒙径醉，彊执笔题两句云：「洞庭波浪渺无津，日日征帆送远人。」颓然醉倒。抟命他客续之，皆莫详其意。既而龟蒙稍醒，援毫卒其章曰：「几度木兰船上望，不知元是此花身。」遂为一时绝唱。《吴郡志》六。　案：此诗一说为李商隐作。参见李商隐7。</p></li>
+木兰堂在郡治后。《岚斋录》云：唐张抟自湖州刺史移苏州，于堂前大植木兰花，当盛开时，燕郡中诗客，即席赋之。陆龟蒙后至，张联酌浮之，龟蒙径醉，彊执笔题两句云：「洞庭波浪渺无津，日日征帆送远人。」颓然醉倒。抟命他客续之，皆莫详其意。既而龟蒙稍醒，援毫卒其章曰：「几度木兰船上望，不知元是此花身。」遂为一时绝唱。《吴郡志》六。　案：此诗一说为李商隐作。参见李商隐<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%8C-%E6%9D%8E%E5%95%86%E9%9A%90-7">7</a>。</p></li>
 <li><p><span id="唐轶二十八-陆龟蒙-5"></span>
 甫里先生陆龟蒙嗜茶荈，置小园于顾渚山下，岁入茶租，薄为瓯蚁之费，自为《品第》一篇，继《茶经》、《茶诀》之后。《古今事文类聚》续集一二。</p></li>
 <li><p><span id="唐轶二十八-陆龟蒙-6"></span>
@@ -312,7 +312,7 @@
 <li><p><span id="唐轶二十八-章碣-1"></span>
 章碣，不知何许人，或曰孝标之子。咸通末，以篇什著名。干符中，高侍郎湘自长沙携邵安石至京及第，碣赋「东都望幸」以刺之。复为《焚书坑》诗曰：「竹帛烟销帝业虚，昔年曾是祖龙居。坑灰未冷关东乱，刘项从来不读书。」《唐摭言》一○。</p></li>
 <li><p><span id="唐轶二十八-章碣-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E9%82%B5%E5%AE%89%E7%9F%B3-1">邵安石1</a>。</p></li>
+见邵安石<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E9%82%B5%E5%AE%89%E7%9F%B3-1">1</a>。</p></li>
 </ol>
 </div>
 <div id="罗-虬" class="section level2">
@@ -323,7 +323,7 @@
 <li><p><span id="唐轶二十八-罗虬-1"></span>
 唐咸通中，举人李云翰行《口脂赋》。又罗虬诗云：「窗前远岫悬生碧，帘外残霞挂熟红。」又李罕《披云雾见青天》诗：「颜回似青天。」皆遭主司庭责面遣。《广记》二六一。</p></li>
 <li><p><span id="唐轶二十八-罗虬-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E5%88%98%E5%85%81%E7%AB%A0-5">刘允章5</a>。</p></li>
+见刘允章<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E5%88%98%E5%85%81%E7%AB%A0-5">5</a>。</p></li>
 <li><p><span id="唐轶二十八-罗虬-3"></span>
 罗虬辞藻富赡，与宗人隐、邺齐名。咸通、干符中，时号三罗。广明庚子乱后，去从鄜州李孝恭。籍中有红儿者，善肉声，常为贰车属意。会贰车聘邻道，虬请红儿歌而赠之缯彩。孝恭以副车所贮，不令受所贶。虬怒，拂衣而起，诘旦，手刃。绝句百篇，号比红诗，大行于时。《唐摭言》一○。又《广记》二七三引、《诗话总龟》前集二九引。《唐诗纪事》六九。</p></li>
 <li><p><span id="唐轶二十八-罗虬-4"></span>
@@ -338,7 +338,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶二十八-李山甫-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%BC%A0%E5%AD%9C-1">张孜1</a>。</p></li>
+见张孜<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%BC%A0%E5%AD%9C-1">1</a>。</p></li>
 <li><p><span id="唐轶二十八-李山甫-2"></span>
 咸通中，数举进士，被黜，依魏博乐彦祯幕府。因乐祸，且怨中朝大臣，导彦祯子从训伏兵杀王铎，劫其家。尝有诗云：「劝君莫用夸头角，梦里输赢总未真。」讥执政也。巢寇之乱，翰林待诏王遨者，北游在邺，山甫遇于道观，谓曰：「幽兰绿水，可得闻乎？」遨应命奏之。曲终潸然曰：「忆在咸通，玉亭秋夜，供奉至尊，不意流离至此也。」山甫赋诗曰：「幽兰绿水耿清音，叹惜先生枉用心。世上几时曾好古？人前何必独霑襟。」句未成，山甫亦自黯然，悲其不遇也。《唐诗纪事》七〇。《南部新书》丁。《诗话总龟》前集四四。《全唐诗录》（《五代诗话》二）。参看王敬傲1。</p></li>
 <li><p><span id="唐轶二十八-李山甫-3"></span>
@@ -362,7 +362,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶二十八-欧阳澥-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81-%E7%AB%A0%E5%AD%9D%E6%A0%87-1">章孝标1</a>。</p></li>
+见章孝标<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81-%E7%AB%A0%E5%AD%9D%E6%A0%87-1">1</a>。</p></li>
 <li><p><span id="唐轶二十八-欧阳澥-2"></span>
 欧阳澥者，四门之孙也，薄有辞赋，出入场中仅二十年。善和韦中令在合下，澥即行卷及门，凡十余载，未尝一面，而澥庆吊不亏。韦公虽不言，而心念其人。中和初，公随驾至西川，命相，时澥寓居汉南，公访知行止，以私书令襄帅刘巨容，俾澥计偕。巨容得书大喜，待以厚礼，首荐之外，资以千余缗，复大䜩于府幕。既而撰日遵路，无何，一夕心痛而卒。巨容因籍澥答书，既呈于公，公览之怃然，因曰：「十年不见，灼然不错！」《唐摭言》一〇。又《广记》一五八引。《唐诗纪事》六七。</p></li>
 </ol>
@@ -420,7 +420,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-李茵-1"></span>
-进士李茵，襄阳人。尝游苑中，见红叶自御沟流出，上题诗云：「流水何太急，深宫尽日闲。殷勤谢红叶，好去到人间。」茵收贮书囊。后僖宗幸蜀，茵奔窜南山民家，见一宫娥，自云宫中侍书，名云芳子。有才思，茵与之款接。因见红叶，叹曰：「此妾所题也。」同行诣蜀，具述宫中之事。及绵州，逢内官田大人识之，曰：「书家何得在此？」逼令上马，与之前去。李甚怏怅。其夕，宿逆旅，云芳复至。曰：「妾已重赂中官，求得从君矣。」乃与归襄阳。数年，李茵疾瘠，有道士言其面有邪气。云芳子自陈：往年绵竹相遇，实已自经而死。感君之意，故相从耳。人鬼殊途，何敢贻患于君。置酒赋诗，告辞而去矣。《北梦琐言》（《广记》三五四）。此较《北梦琐言》九所载详细。　案：宫女叶上题诗，又见顾况4、5。</li>
+进士李茵，襄阳人。尝游苑中，见红叶自御沟流出，上题诗云：「流水何太急，深宫尽日闲。殷勤谢红叶，好去到人间。」茵收贮书囊。后僖宗幸蜀，茵奔窜南山民家，见一宫娥，自云宫中侍书，名云芳子。有才思，茵与之款接。因见红叶，叹曰：「此妾所题也。」同行诣蜀，具述宫中之事。及绵州，逢内官田大人识之，曰：「书家何得在此？」逼令上马，与之前去。李甚怏怅。其夕，宿逆旅，云芳复至。曰：「妾已重赂中官，求得从君矣。」乃与归襄阳。数年，李茵疾瘠，有道士言其面有邪气。云芳子自陈：往年绵竹相遇，实已自经而死。感君之意，故相从耳。人鬼殊途，何敢贻患于君。置酒赋诗，告辞而去矣。《北梦琐言》（《广记》三五四）。此较《北梦琐言》九所载详细。　案：宫女叶上题诗，又见顾况<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E9%A1%BE%E5%86%B5-4">4</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E9%A1%BE%E5%86%B5-5">5</a>。</li>
 </ol>
 </div>
 <div id="高-测" class="section level2">
@@ -506,7 +506,7 @@
 <li><p><span id="唐轶二十八-顾云-2"></span>
 黄箓擅场，星辰备位。顾云博士为高燕公草斋词云：「天静则星辰可摘。」奇险之句施于至敬，可乎？《北梦琐言》七。</p></li>
 <li><p><span id="唐轶二十八-顾云-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%83-%E9%AB%98%E9%AA%88-22">高骈22</a>。</p></li>
+见高骈<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%83-%E9%AB%98%E9%AA%88-22">22</a>。</p></li>
 </ol>
 </div>
 <div id="王敬傲" class="section level2">
@@ -576,7 +576,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-卢休-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81-%E5%90%B4%E8%9E%8D-2">吴融2</a>。</li>
+见吴融<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81-%E5%90%B4%E8%9E%8D-2">2</a>。</li>
 </ol>
 </div>
 <div id="孟-棨" class="section level2">
@@ -629,7 +629,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-郑賨-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%88%98%E8%A6%83-3">刘覃3</a>。</li>
+见刘覃<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%88%98%E8%A6%83-3">3</a>。</li>
 </ol>
 </div>
 <div id="赵光远" class="section level2">
@@ -670,7 +670,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-卢嗣业-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B9%9D-%E5%AD%99%E5%81%93-3">孙偓3</a>。</li>
+见孙偓<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B9%9D-%E5%AD%99%E5%81%93-3">3</a>。</li>
 </ol>
 </div>
 <div id="皇甫颖" class="section level2">
@@ -702,7 +702,7 @@
 <li><p><span id="唐轶二十八-于棁-1"></span>
 于棁旧名韬玉，长兴相国兄子。贵主视之如己子，莫不委之家政，往往与于关节，由是众议喧然。广明初，崔厚侍郎榜，贵主力取鼎甲，榜除之夕，为设庭燎，仍为宴具，以候同年展敬。选内人美少者十余辈，执烛跨乘列于长兴西门。既而将入辨色，有朱衣吏驰报曰：「胡子郎君未及第。」胡子，棁小字。诸炬应声掷之于地。巢寇难后，于川中及第，依栖田令孜矣。或曰，棁及第非令孜力，后依其门耳。《唐摭言》九。</p></li>
 <li><p><span id="唐轶二十八-于棁-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E4%BF%9E%E6%B4%9B%E7%9C%9F-1">俞洛真1</a>。</p></li>
+见俞洛真<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E4%BF%9E%E6%B4%9B%E7%9C%9F-1">1</a>。</p></li>
 </ol>
 </div>
 <div id="黄郁-李瑞" class="section level2">
@@ -774,7 +774,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-石野猪-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E5%9B%9B-%E5%94%90%E5%83%96%E5%AE%97-4">唐僖宗4</a>。</li>
+见唐僖宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E5%9B%9B-%E5%94%90%E5%83%96%E5%AE%97-4">4</a>。</li>
 </ol>
 </div>
 <div id="王俳优" class="section level2">
@@ -824,7 +824,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-僊哥-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%88%98%E8%A6%83-3">刘覃3</a>。</li>
+见刘覃<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%88%98%E8%A6%83-3">3</a>。</li>
 </ol>
 </div>
 <div id="楚-儿" class="section level2">
@@ -834,7 +834,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-楚儿-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E9%83%91%E6%98%8C%E5%9B%BE-6">郑昌图6</a>。</li>
+见郑昌图<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E9%83%91%E6%98%8C%E5%9B%BE-6">6</a>。</li>
 </ol>
 </div>
 <div id="郑举举" class="section level2">
@@ -844,7 +844,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-郑举举-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B9%9D-%E5%AD%99%E5%81%93-3">孙偓3</a>。</li>
+见孙偓<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B9%9D-%E5%AD%99%E5%81%93-3">3</a>。</li>
 </ol>
 </div>
 <div id="牙-娘" class="section level2">
@@ -854,7 +854,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-牙娘-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%A4%8F%E4%BE%AF%E6%B3%BD-1">夏侯泽1</a>。</li>
+见夏侯泽<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%A4%8F%E4%BE%AF%E6%B3%BD-1">1</a>。</li>
 </ol>
 </div>
 <div id="颜令宾" class="section level2">
@@ -874,7 +874,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-杨莱儿-1"></span> <span id="唐轶二十八-杨永儿-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E8%B5%B5%E5%85%89%E8%BF%9C-2">赵光远2</a>。</li>
+见赵光远<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E8%B5%B5%E5%85%89%E8%BF%9C-2">2</a>。</li>
 </ol>
 </div>
 <div id="王小润-王福娘" class="section level2">
@@ -884,7 +884,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-王小润-1"></span> <span id="唐轶二十八-王福娘-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%AD%99%E6%A3%A8-1">孙棨1</a>。</li>
+见孙棨<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%AD%99%E6%A3%A8-1">1</a>。</li>
 </ol>
 </div>
 <div id="俞洛真" class="section level2">
@@ -914,7 +914,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-刘泰娘-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%AD%99%E6%A3%A8-2">孙棨2</a>。</li>
+见孙棨<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%AD%99%E6%A3%A8-2">2</a>。</li>
 </ol>
 </div>
 <div id="荆十三娘" class="section level2">
@@ -955,7 +955,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶二十八-杨奇鲲-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%83-%E9%AB%98%E9%AA%88-9">高骈9</a>。</li>
+见高骈<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%83-%E9%AB%98%E9%AA%88-9">9</a>。</li>
 </ol>
 </div>
 <div id="伊-璠" class="section level2">
@@ -1061,7 +1061,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-22.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
