--- a/唐人轶事汇编卷十二.html
+++ b/唐人轶事汇编卷十二.html
@@ -176,7 +176,7 @@
 <li><p><span id="唐轶十二-徐坚-1"></span>
 徐坚多识典故，七入书府。《大唐遗事》（《类说》二一）。又《纬略》一〇引。</p></li>
 <li><p><span id="唐轶十二-徐坚-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%8E%84%E5%AE%97-151">唐玄宗151</a>。</p></li>
+见唐玄宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%8E%84%E5%AE%97-151">151</a>。</p></li>
 </ol>
 </div>
 <div id="陆-坚" class="section level2">
@@ -186,7 +186,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十二-陆坚-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%BC%A0%E8%AF%B4-18">张说18</a>。</li>
+见张说<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%BC%A0%E8%AF%B4-18">18</a>。</li>
 </ol>
 </div>
 <div id="元行冲" class="section level2">
@@ -195,9 +195,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶十二-元行冲-1"></span>
-元行冲宾客为太常少卿，有人于古墓中得铜物，似琵琶而身正圆，莫有识者。元视之曰：「此阮咸所造乐具。」乃令匠人改以木，为声甚清雅，今呼为阮咸者是也。《隋唐嘉话》下。又《御览》六一二引作《国朝传记》、《广记》二〇三引作《国史异纂》。《南部新书》丁。参见李勉21。</p></li>
+元行冲宾客为太常少卿，有人于古墓中得铜物，似琵琶而身正圆，莫有识者。元视之曰：「此阮咸所造乐具。」乃令匠人改以木，为声甚清雅，今呼为阮咸者是也。《隋唐嘉话》下。又《御览》六一二引作《国朝传记》、《广记》二〇三引作《国史异纂》。《南部新书》丁。参见李勉<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AD-%E6%9D%8E%E5%8B%89-21">21</a>。</p></li>
 <li><p><span id="唐轶十二-元行冲-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E5%85%83%E6%81%BA-1">元恺1</a>。</p></li>
+见元恺<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E5%85%83%E6%81%BA-1">1</a>。</p></li>
 </ol>
 </div>
 <div id="阳-峤" class="section level2">
@@ -302,7 +302,7 @@
 <li><p><span id="唐轶十二-贺知章-3"></span>
 贺知章为秘书监，累年不迁。张九龄罢相，于朝中谓贺曰：「九龄多事，意不得与公迁转，以此为恨！」贺素诙谐，应声答曰：「知章蒙相公庇荫不少。」张曰：「有何相庇？」贺曰：「自相公在朝堂，无人敢骂知章作獠；罢相以来，尔汝单字，稍稍还动。」九龄大惭。《封氏闻见记》一〇。</p></li>
 <li><p><span id="唐轶十二-贺知章-4"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%99%BD-8">李白8</a>、9。</p></li>
+见李白<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%99%BD-8">8</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%99%BD-9">9</a>。</p></li>
 <li><p><span id="唐轶十二-贺知章-5"></span>
 贺秘监、顾著作，吴越人也，朝英慕其机捷，竞嘲之，乃谓南金复生中土也。每在班行，不妄言笑。贺知章曰：「钑镂银盘盛蛤蜊，镜湖莼菜乱如丝。乡曲近来佳此味，遮渠不道是胡儿。」顾况和曰：「钑镂银盘盛炒虾，镜湖莼菜乱如麻。汉儿女嫁吴儿妇，吴儿尽是汉儿爷。」《云溪友议》中。《唐诗纪事》一七。</p></li>
 <li><p><span id="唐轶十二-贺知章-6"></span>
@@ -339,9 +339,9 @@
 <li><p><span id="唐轶十二-李邕-4"></span>
 唐江夏李邕之为海州也，日本国使至海州，凡五百人，载国信，有十船，珍货数百万。邕见之，舍于馆，厚给所须，禁其出入。夜中，尽取所载而沉其船。既明，讽所馆人白云：「昨夜海潮大至，日本国船尽漂失，不知所在。」于是以其事奏之，敕下邕，令造船十艘，善水者五百人，送日本使至其国。邕既具舟及水工，使者未发，水工辞邕，邕曰：「日本路遥，海中风浪，安能却返？前路任汝便宜从事。」送人喜。行数日，知其无备，夜尽杀之，遂归。邕又好客，养亡命数百人，所在攻劫，事露则杀之。后竟不得死，且坐其酷滥也。《纪闻》（《广记》二四三）。</p></li>
 <li><p><span id="唐轶十二-李邕-5"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E5%B4%94%E9%A2%A2-1">崔颢1</a>。</p></li>
+见崔颢<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E5%B4%94%E9%A2%A2-1">1</a>。</p></li>
 <li><p><span id="唐轶十二-李邕-6"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%BE%90%E5%AE%89%E8%B4%9E-1">徐安贞1</a>。</p></li>
+见徐安贞<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%BE%90%E5%AE%89%E8%B4%9E-1">1</a>。</p></li>
 <li><p><span id="唐轶十二-李邕-7"></span>
 邕刚毅忠烈，临难不苟免，少习文章，嫉恶如讐，不容于众，邪佞为之侧目。然虽诎不进，而文名天下。卢藏用谓之如干将镆铘，难与争锋，但虞伤缺耳。邕初学变右军行法，顿剉起伏，既得其妙，复乃摆脱旧习，笔力一新。李阳冰谓之书中仙手。裴休见其碑云：「观北海书，想见其风采。」大抵人之才术多不兼称，王羲之以书掩其文，李淳风以术映其学，文章书翰俱重于时，惟邕得之。当时奉金帛而求邕书，前后所受钜万余，自古未有如此之盛者也。观邕之墨迹，其源流实出于羲之。议者以谓骨气洞达，奕奕如有神力，斯亦名不浮于实也。杜甫作歌以美之曰：「声华当徤笔，洒落富清制。」为世之所仰慕，率皆如是。今御府所藏行书十。《宣和书谱》八。</p></li>
 <li><p><span id="唐轶十二-李邕-8"></span>
@@ -349,7 +349,7 @@
 <li><p><span id="唐轶十二-李邕-9"></span>
 唐李邕善书，仍自刻，多假立刻字人名，如伏灵芝、黄仙鹤之类是也。《法书苑》（《绀珠集》一二、《类说》五八、张本《说郛》七八、陶本《说郛》八六）。</p></li>
 <li><p><span id="唐轶十二-李邕-10"></span>
-萧诚自矜札翰，李邕恒自言别书。二人俱在南中，萧有所书，将谓称意，以呈李邕，邕辄不许。萧疾其掩己，遂假作古帖数幅，朝夕把翫，令其故暗，见者皆以为数百年书也。萧诣邕云：「有右军真迹，宝之已久，欲呈大匠。」李欣然愿见。萧故迟回旬日，未肯出也。后因论及，李固请见，曰：「许而不出，得非诳乎？」萧于是令家童归见取，不得。惊曰：「前某客来见之，当被窃去！」李诚以为信矣。萧良久曰：「吾置在某处，遂忘之。」遽令走取。既至，李寻绎久之，不疑其诈，云是真物，平生未见。在坐者咸以为然。数日，萧往候邕，宾客云集，因谓李曰：「公常不许诚书，昨所呈数纸，幼时书，何故呼为真迹？鉴将何在？」邕愕然曰：「试更取之。」及见，略开视，置床上曰：「子细看之，亦未能好。」《封氏闻见记》一〇。参见萧诚1。</p></li>
+萧诚自矜札翰，李邕恒自言别书。二人俱在南中，萧有所书，将谓称意，以呈李邕，邕辄不许。萧疾其掩己，遂假作古帖数幅，朝夕把翫，令其故暗，见者皆以为数百年书也。萧诣邕云：「有右军真迹，宝之已久，欲呈大匠。」李欣然愿见。萧故迟回旬日，未肯出也。后因论及，李固请见，曰：「许而不出，得非诳乎？」萧于是令家童归见取，不得。惊曰：「前某客来见之，当被窃去！」李诚以为信矣。萧良久曰：「吾置在某处，遂忘之。」遽令走取。既至，李寻绎久之，不疑其诈，云是真物，平生未见。在坐者咸以为然。数日，萧往候邕，宾客云集，因谓李曰：「公常不许诚书，昨所呈数纸，幼时书，何故呼为真迹？鉴将何在？」邕愕然曰：「试更取之。」及见，略开视，置床上曰：「子细看之，亦未能好。」《封氏闻见记》一〇。参见萧诚<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E8%90%A7%E8%AF%9A-1">1</a>。</p></li>
 </ol>
 </div>
 <div id="李-昂" class="section level2">
@@ -434,11 +434,11 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶十二-崔曙-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E9%82%A2%E5%92%8C%E7%92%9E-1">邢和璞1</a>。</p></li>
+见邢和璞<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E9%82%A2%E5%92%8C%E7%92%9E-1">1</a>。</p></li>
 <li><p><span id="唐轶十二-崔曙-2"></span>
 唐崔曙应进士举，作《明堂火珠诗》，续有佳句曰：「夜来双月满，曙后一星孤。」其言深为工文士推服。既夭殁，一女名星星而无男。当时咸异之。《明皇杂录》（《广记》一九八）。《本事诗·征咎》。</p></li>
 <li><p><span id="唐轶十二-崔曙-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%B8%80-%E6%AD%A6%E7%9A%87%E5%90%8E-18">武皇后18</a>。</p></li>
+见武皇后<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%B8%80-%E6%AD%A6%E7%9A%87%E5%90%8E-18">18</a>。</p></li>
 </ol>
 </div>
 <div id="祖-咏" class="section level2">
@@ -502,7 +502,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十二-尉迟匡-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%89-%E6%9D%8E%E6%9E%97%E7%94%AB-17">李林甫17</a>。</li>
+见李林甫<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%89-%E6%9D%8E%E6%9E%97%E7%94%AB-17">17</a>。</li>
 </ol>
 </div>
 <div id="任之良" class="section level2">
@@ -542,7 +542,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十二-员俶-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%94.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%94-%E6%9D%8E%E6%B3%8C-1">李泌1</a>。</li>
+见李泌<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%94.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%94-%E6%9D%8E%E6%B3%8C-1">1</a>。</li>
 </ol>
 </div>
 <div id="韩襄客" class="section level2">
@@ -579,7 +579,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十二-萧诚-1"></span>
-萧诚，兰陵人。官至右司员外郎。工正书，善摹勒。弟谅亦善书，世谓「诚真谅草」。开元中，时尚褚、薛，诚为之最善。李邕每不重诚，诚因采西山野麻、虢郡土谷，造五色斑文纸，作王右军书帖与之，邕览翫不悟，谓其真迹。诚因道其所撰，邕乃叹服。《书小史》一〇。《书法苑》（《类说》五八）。参见李邕10。</li>
+萧诚，兰陵人。官至右司员外郎。工正书，善摹勒。弟谅亦善书，世谓「诚真谅草」。开元中，时尚褚、薛，诚为之最善。李邕每不重诚，诚因采西山野麻、虢郡土谷，造五色斑文纸，作王右军书帖与之，邕览翫不悟，谓其真迹。诚因道其所撰，邕乃叹服。《书小史》一〇。《书法苑》（《类说》五八）。参见李邕<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E6%9D%8E%E9%82%95-10">10</a>。</li>
 </ol>
 </div>
 <div id="吴道玄" class="section level2">
@@ -637,7 +637,7 @@
 <li><p><span id="唐轶十二-李思训-1"></span>
 唐开元中，诸衞将军李思训，子昭道为中舍，俱得山水之妙。时人云大李将军、小李将军是也。思训格品高奇，山川妙绝，鸟兽草木，皆其能。中舍之图山水鸟兽，甚多繁巧，智思笔力不及也。天宝中，玄宗召思训画大同殿壁兼掩障。异日因奏对，诏云：「卿所画掩障，夜闻水声。」通神之佳手，国朝山水第一。思训神品，昭道妙上品。《唐画断》（《广记》二一一）。《唐朝名画录》。</p></li>
 <li><p><span id="唐轶十二-李思训-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E5%90%B4%E9%81%93%E7%8E%84-1">吴道玄1</a>。</p></li>
+见吴道玄<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E5%90%B4%E9%81%93%E7%8E%84-1">1</a>。</p></li>
 <li><p><span id="唐轶十二-李思训-3"></span>
 李思训，宗室也，即林甫之伯父。早以艺称于当时。一家五人，并善丹青，思训弟思诲、思诲子林甫、林甫弟昭道、林甫姪凑。世咸重之。书画称一时之妙。官至左武衞大将军，封彭城公。开元六年，赠秦州都督。其画山水树石，笔格遒劲，湍濑潺湲，云霞缥缈，时覩神仙之事，窅然岩岭之幽。时人谓之大李将军也。《历代名昼记》九。又《御览》七五一引。《宣和画谱》一〇。《图绘宝鉴》二。</p></li>
 <li><p><span id="唐轶十二-李思训-4"></span>
@@ -652,7 +652,7 @@
 <li><p><span id="唐轶十二-李昭道-1"></span>
 思训子昭道，林甫从弟也，变父之势，妙又过之。官至太子中舍。创海图之妙。世上言山水者，称大李将军、小李将军。昭道虽不至将军，俗因其父呼之。《历代名画记》九。《宣和画谱》一〇。《图绘宝鉴》二。</p></li>
 <li><p><span id="唐轶十二-李昭道-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E6%9D%8E%E6%80%9D%E8%AE%AD-1">李思训1</a>。</p></li>
+见李思训<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E6%9D%8E%E6%80%9D%E8%AE%AD-1">1</a>。</p></li>
 <li><p><span id="唐轶十二-李昭道-3"></span>
 武后时，残虐宗支，为宗子者亦皆惴恐，不获安处。故雍王贤作《黄台瓜辞》以自况，冀其感悟。而昭道有《摘瓜图》著戒，不为无补尔！《宣和画谱》一〇。</p></li>
 </ol>
@@ -686,7 +686,7 @@
 <li><p><span id="唐轶十二-张萱-1"></span>
 张萱，京兆人也。尝画贵公子，鞍马屏障，宫苑士女，名冠于时。善起草，点缀景物，位置亭台，树木花鸟，皆穷其妙。又画《长门怨》，约词摅思，曲尽其旨，即「金井梧桐秋叶黄」也。又画《贵公子夜游图》、《宫中七夕乞巧图》、《望月图》，皆多幽思，愈前古也。画士女乃周昉之伦。其贵公子、宫苑、鞍马，皆称第一，故居妙品也。《唐朝名画录》。又《广记》二一三、《御览》七五一引作《唐画断》。</p></li>
 <li><p><span id="唐轶十二-张萱-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E9%AB%98%E5%8A%9B%E5%A3%AB-4">高力士4</a>。</p></li>
+见高力士<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E9%AB%98%E5%8A%9B%E5%A3%AB-4">4</a>。</p></li>
 </ol>
 </div>
 <div id="杨惠之" class="section level2">
@@ -733,7 +733,7 @@
 <li><p><span id="唐轶十二-李龟年-2"></span>
 唐开元中，乐工李龟年、彭年、鹤年兄弟三人皆有才学盛名。彭年善舞。鹤年、龟年能歌，尤妙制《渭川》。特承顾遇，于东都大起第宅，僭侈之制，逾于公侯。宅在东都通远里，中堂制度甲于都下。今裴晋公移于定鼎门外别墅，号绿野堂。其后龟年流落江南，每遇良辰胜赏，为人歌数阕，座中闻之，莫不掩泣罢酒。则杜甫尝赠诗，所谓「岐王宅里寻常见，崔九堂前几度闻。正值江南好风景，落花时节又逢君。」崔九堂，殿中监涤、中书令湜之第也。《明皇杂录》下。又《广记》二〇四引。</p></li>
 <li><p><span id="唐轶十二-李龟年-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%99%BD-15">李白15</a>。</p></li>
+见李白<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%9D%8E%E7%99%BD-15">15</a>。</p></li>
 <li><p><span id="唐轶十二-李龟年-4"></span>
 李龟年至岐王宅，闻琴声，曰：「此秦声。」良久又曰：「此楚声。」主人入问之，则前弹者陇西沈妍也，后弹者扬州薛满二妓。大服，乃赠之破红绡、蟾酥𪎊。龟年自负，强取妍秦音琵琶捍拨而去。《辨音集》（《云仙杂记》二）。</p></li>
 <li><p><span id="唐轶十二-李龟年-5"></span>
@@ -765,7 +765,7 @@
 <li><p><span id="唐轶十二-段师-1"></span>
 古琵琶弦用鹍鸡筋。开元中，段师能弹琵琶，用皮弦，贺怀智破拨弹之，不能成声。《酉阳杂俎》前集六。又《广记》二〇五引。</p></li>
 <li><p><span id="唐轶十二-段师-2"></span>
-见康崐仑1。</p></li>
+见康崐仑<a href="#">1</a>。</p></li>
 </ol>
 </div>
 <div id="孙处秀" class="section level2">
@@ -797,7 +797,7 @@
 <li><p><span id="唐轶十二-尹永新-1"></span>
 尹琳者，其先擢为晋平南将军、广州刺史，封鄱阳侯。擢死，葬于庐陵永新县积庆乡，今坟犹存。而诸尹仅数百家，皆其子孙也。唐开元中，尹氏女姿容颇丽，性识敏慧，不因保姆而妙善唱歌。因重阳与群女戏登南山文峰，而同辈命之歌，乃颦眉缓颊，怡然一曲，声逗数十里。故俗耆旧云：「尹氏之歌，闻于长安。」时刺史因行部至邑，闻而问之，左右或对以尹氏之女，乃使召之。见其容质娉婷，年方及笄，因表进入宫，封为唱歌供奉。日受恩宠，喉音妙绝，为天下第一。于时海内乐人及至王公贵戚，共以邑名呼为「尹永新」，佥曰：「自秦娥之后，一人而已。」后元会大燕含光殿，尽放长安百姓及戎狄之长入观。大内时燕方酣，百戏繁剧，而群音嚣喧，无由遏御，圣情烦挠。左右计无所出，高力士因推永新出，才歌一声，群噪皆默。于是皇襟洞豁，至夕而终。今存始歌处，后人号为玉女峰焉。立庙祠，四时祭祀。或天色愆亢，祷之能雨。及唐宋有任翰林大学士者，改其乡为才德里，为大学琳之子孙，乃其后焉。《江南野史》六。　案：尹永新，《乐府杂录》名「许永新」。</p></li>
 <li><p><span id="唐轶十二-尹永新-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%9B%9B-%E9%9F%A6%E9%9D%92-1">韦青1</a>。</p></li>
+见韦青<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%9B%9B-%E9%9F%A6%E9%9D%92-1">1</a>。</p></li>
 <li><p><span id="唐轶十二-尹永新-3"></span>
 宫妓永新者善歌，最受明皇宠爱，每对御奏歌，则丝竹之声莫能遏。帝常谓左右曰：「此女歌直千金。」《开元天宝遗事》下。</p></li>
 </ol>
@@ -810,7 +810,7 @@
 <li><p><span id="唐轶十二-卢鸿-1"></span>
 玄宗征嵩山隐士卢鸿，三诏乃至。及谒见，不拜，但磬折而已。问其故，鸿对曰：「臣闻老子云：『礼者，忠信之薄』，不足可依。山臣鸿，敢不忠信奉见。」玄宗异之，诏入赐䜩，拜谏议大夫，赐以章服，并辞不受。乃给米百石，绢五百疋，还隐居之所。《大唐新语》一〇。又《广记》二〇二引。</p></li>
 <li><p><span id="唐轶十二-卢鸿-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E4%B8%80%E8%A1%8C-1">一行1</a>。</p></li>
+见一行<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E4%B8%80%E8%A1%8C-1">1</a>。</p></li>
 <li><p><span id="唐轶十二-卢鸿-3"></span>
 颇喜写山水平远之趣，非泉石膏肓、烟霞痼疾，得之心，应之手，未足以造此。画《草堂图》，世传以比王维辋川草堂，盖是所赐一丘一壑，自己足了此生，今见之笔，乃其志也。《宣和画谱》一〇。</p></li>
 </ol>
@@ -930,7 +930,7 @@
 <li><p><span id="唐轶十二-邢和璞-1"></span>
 邢和璞偏得黄老之道，善心算，作《颍阳书疏》。……又曾居终南，好道者多卜筑依之。崔曙年少，亦随焉。伐薪汲泉，皆是名士。《酉肠杂俎》前集二。又《广记》二一五引。《白孔六帖》五。</p></li>
 <li><p><span id="唐轶十二-邢和璞-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%94.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%94-%E6%88%BF%E7%90%AF-3">房琯3</a>。</p></li>
+见房琯<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%94.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%94-%E6%88%BF%E7%90%AF-3">3</a>。</p></li>
 </ol>
 </div>
 <div id="姜-抚" class="section level2">
@@ -983,7 +983,7 @@
 <li><p><span id="唐轶十二-一行-2"></span>
 沙门一行，俗姓张，名遂，郯公公谨之曾孙。年少出家，以聪敏学行，见重于代。玄宗诏于光文殿改撰历经。后又移就丽正殿，与学士参校历经。一行乃撰《开元大演历》一卷，《历议》十卷，《历立成》十二卷，《历书》二十四卷，《七政长历》三卷，凡五部五十卷。未及奏上而卒。张说奏上，诏令行用。初，一行造黄道游仪以进，御制《游仪铭》付太史监，将向灵台上，用以测候。分遣太史官大相元太等驰驿往安南、朗、兖等州，测候日影，同以二分二至之日正午时量日影，皆数年乃定。安南量极高二十一度六分，冬至日长七尺九寸二分，春秋二分长二尺九寸三分，夏至影在表南三寸三分。蔚州横野军北极高四十度，冬至日影长一丈五尺八分，春秋二分长六尺六寸二分，夏至影在表北二尺二寸九分。此二所为中土南北之极。其朗、兖、太原等州，并差殊不同。一行用勾股法算之，云：大约南北极相去才八万余里。修历人陈玄景亦善算术，叹曰：「古人云『以管窥天，以蠡测海』，以为不可得而致也。今以丈尺之术，而测天地之大，岂可得哉！若依此而言，则天地岂得为大也。」其后参校一行历经，并精密，迄今行用。《大唐新语》一三。又《广记》二一五引。</p></li>
 <li><p><span id="唐轶十二-一行-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%8E%84%E5%AE%97-152">唐玄宗152</a>。</p></li>
+见唐玄宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%8E%84%E5%AE%97-152">152</a>。</p></li>
 <li><p><span id="唐轶十二-一行-4"></span>
 明皇在长安，诏一行铸浑仪及大衍历。先是，汉洛下闳云：「此历后一千年差一日，有圣人出而正之。」至是果一千年。因以一行为圣人。僧一行，本名璲，俗张氏，后出家改名敬贤。迁化，诏起塔铜人原，谥大惠禅师，并御制碑八分书。《续博物志》一。《纪异录》（《类说》一二）。</p></li>
 <li><p><span id="唐轶十二-一行-5"></span>
@@ -1002,9 +1002,9 @@
 <li><p><span id="唐轶十二-一行-10"></span>
 明皇在大明宫，一行曰：「陛下当有万里之行。」复遗上金合子，有急即开。及禄山犯阙，上启之，有当归一块，上乃幸蜀。《纪异录》（《类说》一二）。参看《宋高僧传》五。</p></li>
 <li><p><span id="唐轶十二-一行-11"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%8E%84%E5%AE%97-104">唐玄宗104</a>、105。</p></li>
+见唐玄宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%8E%84%E5%AE%97-104">104</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%8E%84%E5%AE%97-105">105</a>。</p></li>
 <li><p><span id="唐轶十二-一行-12"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%8E%84%E5%AE%97-104">唐玄宗104</a>、105。</p></li>
+见唐玄宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%8E%84%E5%AE%97-104">104</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%8E%84%E5%AE%97-105">105</a>。</p></li>
 <li><p><span id="唐轶十二-一行-13"></span>
 一行老病将死，玄皇执手问之曰：「更有何事相救？」行曰：「尚有二事。」其一曰：「勿遣胡人掌重兵。不获已用之，勿与内宴。若使见富贵，必反逆以取。」其二曰：「禁兵勿付汉官，须令内官监统。」及幸蜀，临渭水，与肃皇别，叹曰：「吾不用一行之言。」后方置神策军。《南部新书》壬。</p></li>
 <li><p><span id="唐轶十二-一行-14"></span>
@@ -1017,13 +1017,13 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶十二-泓师-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E4%B9%9D-%E5%BC%A0%E6%95%AC%E4%B9%8B-1">张敬之1</a>。</p></li>
+见张敬之<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E4%B9%9D-%E5%BC%A0%E6%95%AC%E4%B9%8B-1">1</a>。</p></li>
 <li><p><span id="唐轶十二-泓师-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%85%AB-1.html#%E5%94%90%E8%BD%B6%E5%85%AB-%E9%9F%A6%E5%AE%89%E7%9F%B3-1">韦安石1</a>。</p></li>
+见韦安石<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%85%AB-1.html#%E5%94%90%E8%BD%B6%E5%85%AB-%E9%9F%A6%E5%AE%89%E7%9F%B3-1">1</a>。</p></li>
 <li><p><span id="唐轶十二-泓师-3"></span>
 泓复与张燕公说置买永乐东南第一宅，有求土者，戒之曰：「此宅西北隅最是王地，慎勿于此取土。」越月，泓又至，谓燕公：「此宅气候忽然索漠甚，必恐有取土于西北隅者。」公与泓偕行，至宅西北隅，果有取土处三数坑，皆深丈余。泓大惊曰：「祸事！令公富贵止一身而已。更二十年外，诸郎君皆不得天年。」燕公大骇曰：「填之可乎？」泓曰：「客土无气，与地脉不相连，今总填之，亦犹人有疮痏，纵以他肉补之，终无益。」燕公子均、垍皆为禄山委任，授贼大官，克复后，三司定罪，肃宗时以减死论。太上皇召肃宗谓曰：「张均弟兄皆与逆贼作权要官，就中张垍更与贼毁阿奴家事，犬彘之不若也，其罪无赦！」肃宗下殿叩头再拜曰：「臣比在东宫，被人诬谮，三度合死，皆张说保护，得全首领，以至今日。张说两男一度合死，臣不能力争，脱死者有知，臣将何面目见张说于地下？」呜咽俯伏。太上皇命左右曰：「扶皇帝起。」乃曰：「与阿奴处置，张垍宜长流远恶处，竟终于岭表。张均宜弃市，更不要苦救这个也。」肃宗掩泣奉诏，故均遇害。皆如其言。《戎幕闲谈》（《广记》七七）。《明皇十七事》（《类说》二一）。参看唐肃宗18。</p></li>
 <li><p><span id="唐轶十二-泓师-4"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E6%BA%90%E4%B9%BE%E6%9B%9C-1">源乾曜1</a>。</p></li>
+见源乾曜<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E6%BA%90%E4%B9%BE%E6%9B%9C-1">1</a>。</p></li>
 <li><p><span id="唐轶十二-泓师-5"></span>
 泓师云：「长安永宁坊东南是金盏地，安邑里西是玉盏地。」永宁为王太傅锷地，安邑为马北平燧地。后王、马皆进入官。王宅累赐韩令弘及史宪诚、李载义等，所谓「金盏破而成」也；马燧为奉诚园，所谓「玉破而不完」也。《大唐传载》。《广记》四九七。《唐语林》七。</p></li>
 <li><p><span id="唐轶十二-泓师-6"></span>
@@ -1227,7 +1227,7 @@
 <li><p><span id="唐轶十二-康-1"></span>
 唐玄宗既用牛仙客为相，颇忧时议不叶，因访于高力士：「用仙客相，外议以为如何？」力士曰：「仙客出于胥吏，非宰相器。」上大怒曰：「即当康。」盖上一时恚怒之词，举其极不可者。或有窃报，以为上之语恩渥颇深，行当为相矣。闻之，以为信然。翌日，盛服趋朝，既就列，延颈北望，冀有成命，观之者无不掩口。然时论亦以长者目焉。为将作大匠，多巧思，尤能知地。常谓人曰：「我居是宅中，不为宰相耶？」问之者益为嗤笑。《明皇杂录》补遗。又《广记》二六〇引。</p></li>
 <li><p><span id="唐轶十二-康-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E6%B3%93%E5%B8%88-6">泓师6</a>。</p></li>
+见泓师<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E6%B3%93%E5%B8%88-6">6</a>。</p></li>
 </ol>
 </div>
 <div id="卢廙-李畬" class="section level2">
@@ -1410,7 +1410,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-22.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
