--- a/唐人轶事汇编卷十八.html
+++ b/唐人轶事汇编卷十八.html
@@ -189,11 +189,11 @@
 <li><p><span id="唐轶十八-颜真卿-12"></span>
 颜太师鲁公刻名于石，或置之高山之上，或沉之大洲之底，而云：「安知不有陵谷之变耶？」《大唐传载》。又《广记》二〇一引作《传记》。《唐语林》四。</p></li>
 <li><p><span id="唐轶十八-颜真卿-13"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%B2%88%E9%A2%9C-2">沈颜2</a>。</p></li>
+见沈颜<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E6%B2%88%E9%A2%9C-2">2</a>。</p></li>
 <li><p><span id="唐轶十八-颜真卿-14"></span>
 颜真卿晚年尝载石以行，砻而藏之，遇事以书，随其所在，留其所镌石。《天中记》八。</p></li>
 <li><p><span id="唐轶十八-颜真卿-15"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%80%80%E7%B4%A0-3">怀素3</a>。</p></li>
+见怀素<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%80%80%E7%B4%A0-3">3</a>。</p></li>
 <li><p><span id="唐轶十八-颜真卿-16"></span>
 唐颜真卿善真、行书，写鲁山令元德秀墓碑，李华文，李阳冰篆额。后人争打其本，号为「四绝」。《实宾录》四。《古今事文类聚》前集六一。</p></li>
 </ol>
@@ -241,7 +241,7 @@
 <li><p><span id="唐轶十八-乔琳-2"></span>
 朱泚陷京师，天子幸梁洋，乔琳侍从。至盩厔南谷口，奏德宗曰：「臣为陛下仙游寺出家以禳灾。」上甚喜，惜其去，不能阻，乃听之。至仙游不逾月，入京师持杯乞匄。人有布施者，琳戏之曰：「尚有常施。」后反为泚作吏部尚书，知选事。有选人通官，云「不稳便」，又戏云：「只公此选得稳便否？」泚败，上亲点逆人簿，至琳。上曰：「与卿平昔分深，盩厔相舍，甚欲赦卿，其如法何？持杯判官选，言犹在耳。当时戏谈时，朕于尔时惶惶也。」左右喝琳付法。《唐语林》六。《芝田录》（《类说》一一）。</p></li>
 <li><p><span id="唐轶十八-乔琳-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E6%BA%90%E4%BC%91-1">源休1</a>。</p></li>
+见源休<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E6%BA%90%E4%BC%91-1">1</a>。</p></li>
 </ol>
 </div>
 <div id="彭-偃" class="section level2">
@@ -335,7 +335,7 @@
 <li><p><span id="唐轶十八-顾况-7"></span>
 吴人顾况，词句清绝，杂之以诙谐，尤多轻薄。为著作郎，傲毁朝列，贬死江南。《国史补》中。</p></li>
 <li><p><span id="唐轶十八-顾况-8"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E8%B4%BA%E7%9F%A5%E7%AB%A0-5">贺知章5</a>。</p></li>
+见贺知章<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E8%B4%BA%E7%9F%A5%E7%AB%A0-5">5</a>。</p></li>
 <li><p><span id="唐轶十八-顾况-9"></span>
 顾况著作披道服在茅山，有一秀才行吟曰：「驻马上山阿。」久思不得。顾曰：「何不道『风来屎气多』？」秀才云：「贤莫无礼。」顾曰：「是况。」其人渐惕而退。《北梦琐言》七。</p></li>
 <li><p><span id="唐轶十八-顾况-10"></span>
@@ -375,7 +375,7 @@
 <li><p><span id="唐轶十八-戎昱-2"></span>
 韩晋公镇浙西，戎昱为部内刺史。失州名。 郡有酒妓，善歌，色亦媚妙，昱情属甚厚。浙西乐将闻其能，白晋公，召置籍中。昱不敢留，饯于湖上，为歌词以赠之；且曰：「至彼令歌，必首唱是词。」既至，韩为开筵，自持杯，命歌送之，遂唱戎词。曲既终，韩问曰：「戎使君于汝寄情邪？」悚然起立曰：「然。」言随泪下。韩令更衣待命，席上为之忧危。韩召乐将责曰：「戎使君名士，留情郡妓，何故不知而召置之，成余之过！」乃笞之。命与妓百缣，即时归之。其词曰：「好去春风湖上亭，柳条藤蔓系离情。黄莺久住浑相识，欲别频啼四五声。」《本事诗·情感》。《古今诗话》（《诗话总龟》前集二三）。</p></li>
 <li><p><span id="唐轶十八-戎昱-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E4%BA%8E%E9%A0%94-7">于頔7</a>。</p></li>
+见于頔<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E4%BA%8E%E9%A0%94-7">7</a>。</p></li>
 <li><p><span id="唐轶十八-戎昱-4"></span>
 宪宗皇帝朝，以北狄频侵边境，大臣奏议，古者和亲之有五利，而日无千金之费。上曰：「比闻有一卿能为诗，而姓氏稍僻，是谁？」宰相对曰：「恐是包子虚、冷朝阳。」皆不是也。上遂吟曰：「山上青松陌上尘，云泥岂合得相亲？世路尽嫌良马瘦，唯君不弃卧龙贫。千金未必能移姓，一诺从来许杀身。莫道书生无感激，寸心还是报恩人。」侍臣对曰：「此是戎昱诗也。京兆尹李銮拟以女嫁昱，令改其姓，昱固辞焉。」上悦曰：「朕又记得《咏史》一篇，此人若在，便与朗州刺史。武陵桃源，足称诗人之兴咏。」圣旨如此稠叠，士林之荣也。其《咏史诗》云：「汉家青史内，计拙是和亲。社稷依明主，安危托妇人。岂能将玉貌，便欲静胡尘。地下千年骨，谁为辅佐臣？」上笑曰：「魏绛之功，何其懦也？」大臣公卿遂息和戎之论矣。《云溪友议》下。又《广记》一九八引。《诗话总龟》前集四。《唐诗纪事》二八。《唐才子传》三。</p></li>
 <li><p><span id="唐轶十八-戎昱-5"></span>
@@ -401,7 +401,7 @@
 <li><p><span id="唐轶十八-符载-1"></span>
 唐武都符载，字厚之，本蜀人，有奇才。始与杨衡、宋济栖青城山以习业，杨衡擢进士第，宋济先死无成，唯符公以王霸自许，耻于常调，怀会之望。韦南康镇蜀，辟为支使，虽曰受知，尚多偃蹇。韦公于二十四化设醮，请撰斋词，于时陪饮于摩诃之池，符公离席盥潄，命使院小吏十二人捧砚。人分两题，绕步池滨，各授口占，其敏速如此。刘辟时为金吾仓曹参军，依栖韦公，特与譔真赞，其词云：「矫矫化初，气杰文雄。灵螭出水，秋鹗乘风。行义则固，辅仁乃通。他年良觌，麟阁之中。」洎京兆变故，彭城知留务，起雄据之意，符为其所縻。凡有代奏，愈更恭顺。刘辟之败也，幕寮多罹其祸，唯符生以牋奏藁草一箧呈高崇文相公，长揖东下，栖于庐山。即前之真赞，可谓有先鉴也。居浔阳二林间，优游卒岁。南昌军奏请为副倅，授奉礼郎，不赴。命小僮持一幅上于襄阳，乞百万钱买山。四方交辟，羔雁盈于山门，草堂中以女妓二十人娱侍，声名借甚。于时守道循常者号曰「凶人」。曾览符公全集，其文简举清便。入其堂奥者，唯建平子覃正夫乎？宋济虽有词学，其文冗泛，非符之流。湛贲卒于彭山宰，墓铭即宋文也。《北梦琐言》五。又《广记》一九八引。《唐诗纪事》五一。</p></li>
 <li><p><span id="唐轶十八-符载-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E4%BA%8E%E9%A0%94-7">于頔7</a>。</p></li>
+见于頔<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E4%BA%8E%E9%A0%94-7">7</a>。</p></li>
 <li><p><span id="唐轶十八-符载-3"></span>
 唐符载文学武艺双绝，常畜一剑，神光照夜为昼。客游至淮浙，遇巨商舟舰，遭蛟作梗，不克前进，掷剑一挥，血洒如雨，舟舸安流而逝。后遇寒食，于人家裹秬粽，麤如桶，食刀不可用，以此剑断之讫，其剑无光，若顽铁，无所用矣。古人云：「千钧之弩，不为鼷鼠发机。」其此剑之谓乎。《芝田录》（《广记》二三二）。</p></li>
 </ol>
@@ -413,7 +413,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十八-杨衡-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%80-%E6%9D%8E%E7%BE%A4-1">李群1</a>。</li>
+见李群<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%80-%E6%9D%8E%E7%BE%A4-1">1</a>。</li>
 </ol>
 </div>
 <div id="崔-郊" class="section level2">
@@ -423,7 +423,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十八-崔郊-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E4%BA%8E%E9%A0%94-7">于頔7</a>。</li>
+见于頔<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E4%BA%8E%E9%A0%94-7">7</a>。</li>
 </ol>
 </div>
 <div id="李-观-1" class="section level2">
@@ -432,7 +432,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶十八-李观-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E6%A2%81%E8%82%83-1">梁肃1</a>。</p></li>
+见梁肃<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E6%A2%81%E8%82%83-1">1</a>。</p></li>
 <li><p><span id="唐轶十八-李观-2"></span>
 李观作《百年歌》，王湜请其法，观向湜弹指曰：「遗子爪甲清尘，庶几文思有加。」《诗源指诀》（《云仙杂记》六）。</p></li>
 <li><p><span id="唐轶十八-李观-3"></span>
@@ -456,7 +456,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十八-严巨川-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E6%9C%B1%E6%B3%9A-2">朱泚2</a>。</li>
+见朱泚<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E6%9C%B1%E6%B3%9A-2">2</a>。</li>
 </ol>
 </div>
 <div id="欧阳詹" class="section level2">
@@ -465,9 +465,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶十八-欧阳詹-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AD-%E5%B8%B8%E8%A1%AE-7">常衮7</a>。</p></li>
+见常衮<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AD-%E5%B8%B8%E8%A1%AE-7">7</a>。</p></li>
 <li><p><span id="唐轶十八-欧阳詹-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E6%9E%97%E8%97%BB-1">林藻1</a>。</p></li>
+见林藻<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E6%9E%97%E8%97%BB-1">1</a>。</p></li>
 <li><p><span id="唐轶十八-欧阳詹-3"></span>
 欧阳詹字行周，泉州晋江人。弱冠能属文，天纵浩汗。贞元年，登进士第。毕关试，薄游太原，于乐籍中因有所悦，情甚相得。及归，乃与之盟曰：「至都当相迎耳。」即洒泣而别，仍赠之诗曰：「驱马渐觉远，廻头长路尘。高城已不见，况复城中人。去意既未甘，居情谅多辛。五原东北晋，千里西南秦。一屦不出门，一车无停轮。流萍与系瓠，早晚期相亲。」寻除国子四门助教，住京。籍中者思之不已，经年，得疾且甚，乃危妆引髻，刃而匣之，顾谓女弟曰：「吾其死矣。苟欧阳生使至，可以是为信。」又遗之诗曰：「自从别后减容光，半是思郎半恨郎。欲识旧时云髻样，为奴开取缕金箱。」绝笔而逝。及詹使至，女弟如言，径持归京，具白其事。詹启函阅之，又见其诗，一恸而卒。故孟简赋诗哭之。《闽川名士传》（《广记》二七四）。《唐诗纪事》三五。</p></li>
 </ol>
@@ -502,7 +502,7 @@
 <li><p><span id="唐轶十八-崔膺-1"></span>
 崔膺，博陵人也。性狂，少长于外家，不齿，及长能文，首出众子，作《道旁孤儿歌》以讽外氏，其文典而美。常在张建封书院，怜其才，引为上客，善为画。时因酒兴，偶画得一疋马，为诸小儿窃去。一旦将行营，大叫，称：「膺失马！」张公令捕之，厢将问毛色，应云：「膺马昨夜犹在毡下。」监军怒，请杀之。建封与监军先有约，彼此不相违。建封曰：「却乞取崔膺。」军中遂舍之。《桂苑丛谈·史遗》。《唐诗纪事》四三。</p></li>
 <li><p><span id="唐轶十八-崔膺-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E5%BC%A0%E5%BB%BA%E5%B0%81-3">张建封3</a>。</p></li>
+见张建封<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E5%BC%A0%E5%BB%BA%E5%B0%81-3">3</a>。</p></li>
 <li><p><span id="唐轶十八-崔膺-3"></span>
 淮南节度杜佑先婚梁氏女，梁卒，策嬖姬李氏为正嫡，有𠡠封邑，为国夫人。膺密劝请让追封亡妻梁氏，佑请膺为表，略云：「以妾为妻，鲁史所禁。」又云：「岂伊身贱之时，妻同勤苦，宦达之后，妾享荣封」云云。梁氏遂得追封，李亦受其命，时议美焉。其后终为李氏所怒。社日，公命食彘肉，因为李氏划堇而卒。《桂苑丛谈·史遗》。《史遗》（《类说》二七）。《五总志》　案：崔膺，《类说》误作「崔英」。</p></li>
 <li><p><span id="唐轶十八-崔膺-4"></span>
@@ -590,7 +590,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十八-独孤绶-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89-%E5%94%90%E5%BE%B7%E5%AE%97-38">唐德宗38</a>。</li>
+见唐德宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%B8%89-%E5%94%90%E5%BE%B7%E5%AE%97-38">38</a>。</li>
 </ol>
 </div>
 <div id="薛-展" class="section level2">
@@ -610,7 +610,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十八-李俊-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E5%8C%85%E4%BD%B6-3">包佶3</a>。</li>
+见包佶<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E5%8C%85%E4%BD%B6-3">3</a>。</li>
 </ol>
 </div>
 <div id="李-棱" class="section level2">
@@ -631,7 +631,7 @@
 <li><p><span id="唐轶十八-牛锡庶-1"></span>
 牛锡庶性静退寡合，累举不举。贞元元年，因问日者，曰：「君明年合状头及第。」锡庶但望偶中一第尔，殊不信也。时已八月，未命主司。偶至少保萧昕宅前，值昕杖策将独游南园，锡庶遇之，遽投刺，并贽所业。昕独居，方思宾友，甚喜，延与之语。及省文卷，再三称赏。因问曰：「外间议者以何人当知举？」锡庶对曰：「尚书至公为心，必更出领一岁。」昕曰：「必不见命。若尔，君即状头也。」锡庶起拜谢，复坐未安，忽闻驰马传呼曰：「尚书知举。」昕遽起。锡庶复再拜曰：「尚书适已赐许，皇天后土，实闻斯言。」昕曰：「前言期矣。」明年，果状头及第。《逸史》（《广记》一八○）。《玉泉子》。　案：牛锡庶，《玉泉子》作「牛庶锡」。</p></li>
 <li><p><span id="唐轶十八-牛锡庶-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E8%90%A7%E6%98%95-1">萧昕1</a>。</p></li>
+见萧昕<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E8%90%A7%E6%98%95-1">1</a>。</p></li>
 </ol>
 </div>
 <div id="裴次元" class="section level2">
@@ -684,7 +684,7 @@
 <li><p><span id="唐轶十八-林藻-1"></span> <span id="唐轶十八-林蕴-1"></span>
 闽自贞元以前，未有进士。观察使李锜始建庠序，请独孤常州及为《新学记》，云：「缦胡之缨，化为青衿。」林藻、弟蕴，与欧阳詹覩之叹息，相与结誓，继登科第。《唐语林》四。</p></li>
 <li><p><span id="唐轶十八-林藻-2"></span> <span id="唐轶十八-林蕴-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E5%B0%B9%E6%9E%A2-2">尹枢2</a>。</p></li>
+见尹枢<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E5%B0%B9%E6%9E%A2-2">2</a>。</p></li>
 </ol>
 </div>
 <div id="彭-伉" class="section level2">
@@ -705,7 +705,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十八-湛贲-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E5%BD%AD%E4%BC%89-1">彭伉1</a>。</li>
+见彭伉<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AB.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AB-%E5%BD%AD%E4%BC%89-1">1</a>。</li>
 </ol>
 </div>
 <div id="房次卿" class="section level2">
@@ -725,7 +725,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十八-陈通方-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B9%9D-%E7%8E%8B%E6%92%AD-4">王播4</a>。</li>
+见王播<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B9%9D-%E7%8E%8B%E6%92%AD-4">4</a>。</li>
 </ol>
 </div>
 <div id="李挚-李行敏" class="section level2">
@@ -780,7 +780,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十八-曹著-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E9%AD%8F%E5%85%89%E4%B9%98-2">魏光乘2</a>。</li>
+见魏光乘<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%8C-%E9%AD%8F%E5%85%89%E4%B9%98-2">2</a>。</li>
 </ol>
 </div>
 <div id="乔-彝" class="section level2">
@@ -938,7 +938,7 @@
 <li><p><span id="唐轶十八-康昆仑-2"></span>
 韦应物为苏州刺史，有属官因建中乱，得国工康昆仑琵琶，至是送官，表奏入内。《国史补》中。又《广记》二○五引。《开城录》（陶本《说郛》二三）。</p></li>
 <li><p><span id="唐轶十八-康昆仑-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AD-%E5%85%83%E4%BC%AF%E5%92%8C-1">元伯和1</a>。</p></li>
+见元伯和<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%85%AD.html#%E5%94%90%E8%BD%B6%E5%8D%81%E5%85%AD-%E5%85%83%E4%BC%AF%E5%92%8C-1">1</a>。</p></li>
 </ol>
 </div>
 <div id="宋-沇" class="section level2">
@@ -949,7 +949,7 @@
 <li><p><span id="唐轶十八-宋沇-1"></span>
 宋沇为太乐令，知音，近代无比。太常久亡徵调，沇乃考钟律而得之。《国史补》下。又《广记》二○三引。　案：沇，《国史补》原作沆，误，据《广记》改。</p></li>
 <li><p><span id="唐轶十八-宋沇-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%AE%8B%E7%92%9F-24">宋璟24</a>。</p></li>
+见宋璟<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%AE%8B%E7%92%9F-24">24</a>。</p></li>
 <li><p><span id="唐轶十八-宋沇-3"></span>
 前录大中二年所著。四年春阳罢免，旋自海南路由广陵，崔司空为镇，司空遇合素厚，留止旬朔，辄献之，过蒙奖饰。因曰：宋沇即某之中外亲丈人，知音之异事，非止于此也。尝为太常丞，每〔言〕诸悬钟磬亡坠至多，补亡者又乖律吕。一日早，于光宅佛寺待漏，贞元中犹未有待漏院，朝士多立城门衢中，或立近坊人家及光宅寺也。闻塔上风铎声，倾听久之。朝回，复至寺舍，问寺主僧曰：「上人塔上铎，皆知所自乎？」曰：「不能知。」沇曰：「其间有一是古制。某请一登塔循金索，试历扣以辨之，可乎？」僧初难，后许，乃扣而辨焉。寺众即言：「往往无风自摇，洋洋有闻，非此也耶？」沇曰：「是耳。必因祠祭考本悬钟而应也。」固求摘取而观之，曰：「此姑洗之编钟耳。请且独缀于僧庭。」归太常，令乐工与僧同临之，约其时彼扣本乐悬，此果应之。遂购而获焉。又曾送客出通化门，逢度支运乘，驻马俄顷，忽草草揖客别，乃随乘至左藏门，认一铃，言亦编钟也。他人但觉镕铸独工，不与众者埒，莫知其余。及配悬，音形皆合其度。异乎！此亦识微在金奏者，与列于鼓录，则寖差矣。以大君子所传，又精义入神，岂容忽而不载，遂附之于末。《羯鼓录》。又《广记》二○三引。《唐语林》六。</p></li>
 </ol>
@@ -1036,7 +1036,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十八-贾笼-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E7%A9%86%E8%B5%9E-5">穆赞5</a>。</li>
+见穆赞<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%83-%E7%A9%86%E8%B5%9E-5">5</a>。</li>
 </ol>
 </div>
 <div id="葫芦生" class="section level2">
@@ -1045,15 +1045,15 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶十八-葫芦生-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%94.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%94-%E6%9D%8E%E6%B3%8C-36">李泌36</a>。</p></li>
+见李泌<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%BA%94.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%BA%94-%E6%9D%8E%E6%B3%8C-36">36</a>。</p></li>
 <li><p><span id="唐轶十八-葫芦生-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B9%9D-%E6%9D%8E%E8%97%A9-1">李藩1</a>。</p></li>
+见李藩<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B9%9D-%E6%9D%8E%E8%97%A9-1">1</a>。</p></li>
 <li><p><span id="唐轶十八-葫芦生-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B9%9D-%E5%88%98%E8%BE%9F-1">刘辟1</a>。</p></li>
+见刘辟<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B9%9D-%E5%88%98%E8%BE%9F-1">1</a>。</p></li>
 <li><p><span id="唐轶十八-葫芦生-4"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B9%9D-%E8%A3%B4%E5%BA%A6-3">裴度3</a>。</p></li>
+见裴度<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B9%9D.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B9%9D-%E8%A3%B4%E5%BA%A6-3">3</a>。</p></li>
 <li><p><span id="唐轶十八-葫芦生-5"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%80-%E6%9D%8E%E5%9B%BA%E8%A8%80-2">李固言2</a>。</p></li>
+见李固言<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%80-%E6%9D%8E%E5%9B%BA%E8%A8%80-2">2</a>。</p></li>
 </ol>
 </div>
 <div id="庞-蕴" class="section level2">
@@ -1302,7 +1302,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-22.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
