--- a/唐人轶事汇编卷四十.html
+++ b/唐人轶事汇编卷四十.html
@@ -938,7 +938,7 @@
 <li><p><span id="唐轶四十-郑傪-1"></span>
 郑傪为江淮留后，金帛山叠，而性鄙啬。每朝炊报熟，即纳于库，逐时量给，缄鏁严密。忽一日早辰，其妻少弟至妆阁问其姊起居，姊方治妆未毕。家人备夫人晨馔于侧，姊顾谓其弟曰：「我未及飡，尔可且点心。」止于水饭数匙。复备夫人点心，傪诟曰：「适已给了，何得又请？」告以某舅飡却。傪不得已付之曰：「怎么人家夫人娘子，吃得如许多饭食？」《金华子》下。</p></li>
 <li><p><span id="唐轶四十-郑傪-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%89-%E6%9D%8E%E7%BB%85-6">李绅6</a>。</p></li>
+见李绅<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%89.html#%E5%94%90%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%89-%E6%9D%8E%E7%BB%85-6">6</a>。</p></li>
 </ol>
 </div>
 <div id="李-宽" class="section level2">
@@ -1846,7 +1846,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-22.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
