--- a/宋人轶事汇编卷三十.html
+++ b/宋人轶事汇编卷三十.html
@@ -190,9 +190,9 @@
 <li><p><span id="宋轶三十-岳飞-18"></span>
 先臣天性至孝，自北境纷扰，母命以从戎报国，辄不忍，屡趣之，不得已，乃留妻养母，独从高宗皇帝渡河。河北陷，沦失外区，音问绝隔。先臣日夕求访，数年不获。俄有自母所来者，谓之曰：「而母寄余言：『为我语五郎，勉事圣天子，无以老媪为念也。』」乃窃遣人迎之，阻于寇攘，往返者十有八，然后归。……及母薨，水浆不入口者三日，每恸如初，毁瘠几灭性。自与臣云跣足扶榇归葬，不避涂潦蒸暑。诸将佐有愿代其役者，先臣谢之，路人无不涕泣。既葬，庐于墓，朝夕号恸。《鄂国金佗稡编》卷九。《南宋杂事诗》卷一引《学圃萱苏》。</p></li>
 <li><p><span id="宋轶三十-岳飞-19"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B9%9D.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B9%9D-%E5%BC%A0%E6%B5%9A-21">张浚21</a>。</p></li>
+见张浚<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B9%9D.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B9%9D-%E5%BC%A0%E6%B5%9A-21">21</a>。</p></li>
 <li><p><span id="宋轶三十-岳飞-20"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B9%9D.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B9%9D-%E5%BC%A0%E6%B5%9A-24">张浚24</a>。</p></li>
+见张浚<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B9%9D.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B9%9D-%E5%BC%A0%E6%B5%9A-24">24</a>。</p></li>
 <li><p><span id="宋轶三十-岳飞-21"></span>
 辛企李次膺，绍兴八年，自右正言出为湖南提刑。舟到武昌，大将岳飞来江亭通谒，辛以道上不见宾为解，岳不肯去。良久，不获已，见之。即欲以明日具食，意殊恳切，不得辞。既宴，酒三行，延辛入小阁，尽出平生所被宸翰，凡数百纸，具言眷遇之渥。执辛手曰：「前夕梦为棘寺逮对狱，狱吏曰：『辛中丞被旨推勘。』惊寤，遍体流汗。方疑惧不敢以告人，而津吏报公至。公自谏官补外，他日必为独坐，飞或不幸下狱，愿公救护之。」辛悚然不知所对。才罢酒，即解维。后数年，飞罢副枢奉朝请，故部将王贵迎时相意，告其谋叛，系大理狱，命新除御史中丞何伯寿铸治其事。方悟昨梦，乃新中丞也。何公后辞避不就，乃以付万俟丞相云。《夷坚甲志》卷十五。</p></li>
 <li><p><span id="宋轶三十-岳飞-22"></span>
@@ -313,9 +313,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶三十-岳珂-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E8%BE%9B%E5%BC%83%E7%96%BE-17">辛弃疾17</a>。</p></li>
+见辛弃疾<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E8%BE%9B%E5%BC%83%E7%96%BE-17">17</a>。</p></li>
 <li><p><span id="宋轶三十-岳珂-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E5%88%98%E8%BF%87-6">刘过6</a>。</p></li>
+见刘过<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E5%9B%9B-%E5%88%98%E8%BF%87-6">6</a>。</p></li>
 <li><p><span id="宋轶三十-岳珂-3"></span>
 开禧兵隙将开，忧国者虑其不终。乙丑之元，吴畏斋自鄂召，过京口，以先君湖湘之契，先来访余，亟送出南水门，谢不敏。既而留中为大蓬，未几，遂以秘撰帅荆，复出闸西溯。时北事已章灼，余念数路出师，具有殷鉴，虽上流运奇，先王有遗规，而今未必能。且是时招伪官，遣妄谍，亹亹多费，实无益于事，天下寒心，而谋国者不之知也。因草一启代贽及之曰……畏斋在丹阳馆，一览辄喜，亲作数语谢曰……于是一得之谋，颇彻于诸公间矣。又一年，稍稍如言，宇文顾斋闻之，从章以初录本去，会除次对，谬以充自代荐，且有「志识不群」之褒，初未相识也。故余投谢骈俪有曰：「初不求于识面，亶自得于知心。」盖指此。它日，又特剡亟称之于庙堂，余迄不知所蒙。《桯史》卷七。</p></li>
 </ol>
@@ -346,7 +346,7 @@
 <li><p><span id="宋轶三十-韩世忠-10"></span>
 韩蕲王之夫人，京口娼也。尝五更入府，伺候贺朔。忽于庙柱下见一虎蹲卧，鼻息齁齁然，惊骇亟走出，不敢言。已而人至者众，往复视之，乃一卒也。因蹴之起，问其姓名，为韩世忠。心异之，密告其母，谓此卒定非凡人。乃邀至其家，具酒食，至夜尽懽，深相结纳，资以金帛，约为夫妇。蕲王后立殊功，为中兴名将，遂封两国夫人。蕲王尝邀兀术于黄天荡，几成擒矣。一夕凿河遁去。夫人奏疏言世忠失机纵敌，乞加罪责。举朝为之动色，其明智英伟如此。《鹤林玉露》丙编卷二。《湖海新闻夷坚续志》前集卷一。《贤弈编》卷二。《青泥莲花记》卷三。《宋稗类钞》卷三。《词林纪事》卷九。</p></li>
 <li><p><span id="宋轶三十-韩世忠-11"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E5%BC%A0%E4%BF%8A-1">张俊1</a>。</p></li>
+见张俊<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E5%BC%A0%E4%BF%8A-1">1</a>。</p></li>
 <li><p><span id="宋轶三十-韩世忠-12"></span>
 韩蕲王宣抚淮东，获凶盗数十辈，引至金山，陈刀剑于廷下，以次斩之，皆股战就诛。独一盗跃而出揖，指一刀最大者曰：「愿从相公乞此刀吃。」韩笑曰：「甚好。」时有中使来宣旨者在坐，为言此人临死不怯，似亦可用。韩曰：「彼用计欲脱耳。」竟杀之。《夷坚乙志》卷三。</p></li>
 <li><p><span id="宋轶三十-韩世忠-13"></span>
@@ -366,7 +366,7 @@
 <li><p><span id="宋轶三十-韩世忠-20"></span>
 韩世忠轻薄儒士，常目之为「子曰」。主上闻之，因登对问曰：「闻卿呼文士为子曰，是否？」世忠应曰：「臣今已改。」上喜，以为其能崇儒。乃曰：「今呼为萌儿矣。」上为之一笑。后镇江帅沈晦因虏退锡宴，自为致词，其末云：「饮罢三军应击楫，渡江金鼓响如雷。」韩闻之，即悟其旨云：「给事！世忠非不敢过淮。」已而，自起以大觥劝之，继而使诸将竞献。沈不胜杯酌，屡致呕吐。后至参佐僚属，斟既不满，又容其倾泻。韩怒曰：「萌儿辈终是相护！」又戏沈云：「向道教给事休引惹边事。」盖指其词为引惹也。《鸡肋编》卷下。</p></li>
 <li><p><span id="宋轶三十-韩世忠-21"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E5%BC%A0%E4%BF%8A-6">张俊6</a>。</p></li>
+见张俊<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E5%BC%A0%E4%BF%8A-6">6</a>。</p></li>
 <li><p><span id="宋轶三十-韩世忠-22"></span>
 〔韩〕世忠、〔张〕俊皆除枢密使，赐俊玉带，〔岳〕飞枢密副使。世忠既拜，乃制一字巾，入都堂则裹之，出则以亲兵自卫，〔秦〕桧颇不喜。飞披襟作雍容之状，桧亦忌之。惟俊任其自然，故桧不致深疑。《三朝北盟会编》卷二百六。</p></li>
 <li><p><span id="宋轶三十-韩世忠-23"></span>
@@ -374,7 +374,7 @@
 <li><p><span id="宋轶三十-韩世忠-24"></span>
 〔王〕再上章力陈秦桧误国，辞意剀切，桧由是深怨之，言者因奏世忠罪，上留章不出。王乃力丐闲，除大傅、醴泉观使，自此杜门谢客，绝口不论兵。时跨驴酒，从一二童奴，游西湖以自乐。平时将佐罕得见其面云。《宋名臣言行录》别集卷六。</p></li>
 <li><p><span id="宋轶三十-韩世忠-25"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E5%B2%B3%E9%A3%9E-31">岳飞31</a>。</p></li>
+见岳飞<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E5%B2%B3%E9%A3%9E-31">31</a>。</p></li>
 <li><p><span id="宋轶三十-韩世忠-26"></span>
 皇太后回銮，以北方闻韩世忠名，召至帘前曰：「此为韩相公耶！」慰问良久。《宋名臣言行录》别集下卷六。《三朝北盟会编》卷二百十一。</p></li>
 <li><p><span id="宋轶三十-韩世忠-27"></span>
@@ -460,7 +460,7 @@
 <li><p><span id="宋轶三十-张俊-14"></span>
 尝得一告词云：「朕眷礼勋臣，既极异姓王之贵；疏恩私室，并侈如夫人之荣。以尔修态横生，芳性和适，会膺无之贵，终隆络秀之家。爰锡命书，靡拘常典。用肈封于大郡，俾正位于小君。往服宠光，益循柔履。」绍兴间，权外制某人行。「如夫人」及「修态横生」，或者于王言有疑。时勋臣嫡室尚在，「正位小君」之语亦有疑。《清波杂志》卷七。《南宋杂事诗》卷六。</p></li>
 <li><p><span id="宋轶三十-张俊-15"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E5%B7%A6%E8%AA%89-1">左誉1</a>。</p></li>
+见左誉<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E5%B7%A6%E8%AA%89-1">1</a>。</p></li>
 <li><p><span id="宋轶三十-张俊-16"></span>
 上幸张俊第，临奠，为之恸哭。《三朝北盟会编》卷二百十九。</p></li>
 <li><p><span id="宋轶三十-张俊-17"></span>
@@ -504,9 +504,9 @@
 <li><p><span id="宋轶三十-吴玠-3"></span>
 王素不为威仪，除宣抚副使，简易如故。常负手步出，与军士立语，幕客请曰：「今大敌不远，安知无刺客，万一或有意外，岂不上负朝廷委注之意，下孤军民之望哉！」王谢曰：「诚如君言，玠意不在此，国家不知玠之不肖。使为宣抚，玠欲不出，恐军民之冤，抑而无告者。为门吏所隔，无由自达，玠所以屡出者，为此也。」幕客乃服。《宋名臣言行录》别集上卷九。</p></li>
 <li><p><span id="宋轶三十-吴玠-4"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E6%9B%B2%E7%AB%AF-3">曲端3</a>。</p></li>
+见曲端<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E6%9B%B2%E7%AB%AF-3">3</a>。</p></li>
 <li><p><span id="宋轶三十-吴玠-5"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E6%9B%B2%E7%AB%AF-5">曲端5</a>。</p></li>
+见曲端<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E6%9B%B2%E7%AB%AF-5">5</a>。</p></li>
 <li><p><span id="宋轶三十-吴玠-6"></span>
 吴玠守蜀，如和尚原、杀金平、仙人原、潭毒阙之类，皆创为控扼之地，古人所未尝知，可谓名将矣。《老学庵笔记》卷三。</p></li>
 <li><p><span id="宋轶三十-吴玠-7"></span>
@@ -564,7 +564,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶三十-杨存中-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%B8%89-%E5%AE%8B%E9%AB%98%E5%AE%97-43">宋高宗43</a>。</p></li>
+见宋高宗<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%B8%89-%E5%AE%8B%E9%AB%98%E5%AE%97-43">43</a>。</p></li>
 <li><p><span id="宋轶三十-杨存中-2"></span>
 沂中遣士卒运怪石，置之太平楼酒肆。侍御张绚遇诸途，奏言：「今边境多虞，百姓艰食。陛下方且卑宫菲食，焦劳于上，一花一石屏去不顾。奈何中军不能上体圣意，乃敢公然运石，以为酒肆游观之美。众目所视，传播四方，亦非美事，欲望体问因依。」诏沂中坐罚金。《宋名臣言行录》别集下卷六。</p></li>
 <li><p><span id="宋轶三十-杨存中-3"></span>
@@ -589,9 +589,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶三十-王渊-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E9%9F%A9%E4%B8%96%E5%BF%A0-35">韩世忠35</a>。</p></li>
+见韩世忠<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E9%9F%A9%E4%B8%96%E5%BF%A0-35">35</a>。</p></li>
 <li><p><span id="宋轶三十-王渊-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E7%8E%8B%E4%BC%A6-4">王伦4</a>。</p></li>
+见王伦<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E7%8E%8B%E4%BC%A6-4">4</a>。</p></li>
 </ol>
 </div>
 <div id="范-琼" class="section level2">
@@ -600,7 +600,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶三十-范琼-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%90%B4%E9%9D%A9-2">吴革2</a>。</p></li>
+见吴革<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%90%B4%E9%9D%A9-2">2</a>。</p></li>
 <li><p><span id="宋轶三十-范琼-2"></span>
 在京士庶虽见上皇以下六宫后妃、亲王、驸马出郊，留守司及开封府犹密其事，市井间皆未知端的。然其事渐彰，人情方忧惧。是日也，宣德门前揭示黄榜，备坐金人节次移文，及孙傅等应报文状，民间始知欲立异姓，相顾号恸陨越，皆悔不令上皇东巡上迁都也。留守司虑恐军民作乱，乃令京城四壁都弹压范琼抚谕军民，军民咸泣不已。琼大呼曰：「自家懑只是少个主人，东也是吃饭，西也是吃饭。譬如营里长行健儿，姓张底来管着是张司空，姓李底来管着是李司空，汝军民百姓各各归业，老小照管。」军民闻之，皆气销而去，然骂琼不绝声。《三朝北盟会编》卷七十九。</p></li>
 <li><p><span id="宋轶三十-范琼-3"></span>
@@ -652,7 +652,7 @@
 <li><p><span id="宋轶三十-王权-1"></span>
 韩蕲王在镇江，一日抵晚，令帐前提辖王权至金山，仍戒不得用船渡。恳给浮环，偕一卒至西津，遂浮以渡。登岸，寺僧叵测，疑为鬼物。诘得其详，以手加额，因指适所历处，皆鼋鼍窟穴。曰：「官既不死，他日必贵。」权后果建节。《清波杂志》卷五。《宋稗类钞》卷一。</p></li>
 <li><p><span id="宋轶三十-王权-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E9%9F%A9%E4%B8%96%E5%BF%A0-18">韩世忠18</a>。</p></li>
+见韩世忠<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E9%9F%A9%E4%B8%96%E5%BF%A0-18">18</a>。</p></li>
 </ol>
 </div>
 <div id="呼延通" class="section level2">
@@ -663,7 +663,7 @@
 <li><p><span id="宋轶三十-呼延通-1"></span>
 韩蕲王督兵淮楚，领背嵬军猎于郊，道逢群虎下山，下令打围。甲士环合，各以神臂克敌弓射之，凡毙三十余。其一最雄鸷，目光如镜，毛茸皆紫色，锐头丰下，爪距异常，羽镞不能入。跳勃咆哮，万众辟易。大将呼延通奋怒驰马与相当，誓必取之。伺其张口，发大羽箭，正中舌上。虎雷吼山立，宛转而死。命从骑四辈舁归，剥皮为鞍鞯。一军壮其勇。《夷坚三志》己卷八。</p></li>
 <li><p><span id="宋轶三十-呼延通-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E9%9F%A9%E4%B8%96%E5%BF%A0-19">韩世忠19</a>。</p></li>
+见韩世忠<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E9%9F%A9%E4%B8%96%E5%BF%A0-19">19</a>。</p></li>
 </ol>
 </div>
 <div id="赵-密" class="section level2">
@@ -901,9 +901,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶三十-解潜-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E9%9F%A9%E4%B8%96%E5%BF%A0-23">韩世忠23</a>。</p></li>
+见韩世忠<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E9%9F%A9%E4%B8%96%E5%BF%A0-23">23</a>。</p></li>
 <li><p><span id="宋轶三十-解潜-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E5%BC%A0%E4%B9%9D%E6%88%90-23">张九成23</a>。</p></li>
+见张九成<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B8%80.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%B8%80-%E5%BC%A0%E4%B9%9D%E6%88%90-23">23</a>。</p></li>
 </ol>
 </div>
 <div id="郑-广" class="section level2">
@@ -987,13 +987,13 @@
 <li><p><span id="宋轶三十-吴琚-1"></span>
 孝宗笃眷公，情均兄弟，自论诗、作字、击毬之外，未尝访以外事，咨以国政，问以人才，公亦未尝对上及之也。君臣之间两得之。《四朝闻见录》乙集。</p></li>
 <li><p><span id="宋轶三十-吴琚-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%B8%89-%E5%AE%8B%E5%AD%9D%E5%AE%97-29">宋孝宗29</a>。</p></li>
+见宋孝宗<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%B8%89-%E5%AE%8B%E5%AD%9D%E5%AE%97-29">29</a>。</p></li>
 <li><p><span id="宋轶三十-吴琚-3"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%B8%89-%E5%AE%8B%E5%AD%9D%E5%AE%97-31">宋孝宗31</a>。</p></li>
+见宋孝宗<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%B8%89-%E5%AE%8B%E5%AD%9D%E5%AE%97-31">31</a>。</p></li>
 <li><p><span id="宋轶三十-吴琚-4"></span>
 孝宗崇宪圣母弟之恩，故称琚兄弟皆以位曰「哥」。至光宗体孝宗之意，故称琚兄弟曰「舅」。琚尤圣眷，后苑安榴盛开，光皇以广团扇自题圣作二句曰：「细叠轻绡色倍醲，晚霞犹在绿阴中。」命琚足之。公再拜，援笔即书曰：「春归百卉今无几，独立清微殿阁风。」上称叹者久之。宪圣于二王中，独导孝宗以光皇为储位，故公落句有独立之咏，寄意深矣。团扇犹藏其家，又有石刻，火后俱不存云。《四朝闻见录》乙集。《宋诗纪事》卷五十六。</p></li>
 <li><p><span id="宋轶三十-吴琚-5"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%B8%89-%E5%AE%8B%E5%AE%81%E5%AE%97-1">宋宁宗1</a>。</p></li>
+见宋宁宗<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%B8%89-%E5%AE%8B%E5%AE%81%E5%AE%97-1">1</a>。</p></li>
 <li><p><span id="宋轶三十-吴琚-6"></span>
 宪圣既御帘政，赵公汝愚为相，欲公出入通宫禁庙堂之意。公冀重体貌，求慈福宫使，又求提举中秘书，赵公俱难之。赵旋物色韩侂胄，宪圣表孙也。侂胄奉赵命惟谨，虽一秩不以请。赵公喜其奔走小忠，不知堕其计，反浸疎公。……赵偕犹子崇和赴贬，自辞家，在途垂殁，悔不用吴。《四朝闻见录》乙集。</p></li>
 <li><p><span id="宋轶三十-吴琚-7"></span>
@@ -1834,7 +1834,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-22.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
