--- a/宋人轶事汇编卷三十九.html
+++ b/宋人轶事汇编卷三十九.html
@@ -972,7 +972,7 @@
 <li><p><span id="宋轶三十九-陈袭善-1"></span>
 宋有陈袭善游钱唐，与营妓周子文甚狎，挟之遍历湖山。后袭善去为河朔掾，宿奉高驿，梦子文搴帏嚬蹙，挽之不可，冉冉悲啼而没。久之，得故人书云：「子文死矣。」按其月日，则宿奉高驿时也。既归，游鹫岭，作《渔家傲》以寄情焉：「鹫岭峰前栏独倚，愁眉促损愁肠碎。红粉佳人伤别袂。情何已，登山临水年年是。　常记同来今独至，孤舟晚飏湖光里。衰草斜阳无限意。谁与寄，西湖水是相思泪。」《西湖游览志余》卷十六。《词林纪事》卷十七。</p></li>
 <li><p><span id="宋轶三十九-陈袭善-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%89-%E9%87%8A%E4%BB%B2%E6%AE%8A-6">释仲殊6</a>。</p></li>
+见释仲殊<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%89-%E9%87%8A%E4%BB%B2%E6%AE%8A-6">6</a>。</p></li>
 </ol>
 </div>
 <div id="赵不敏-盼-奴-小-娟" class="section level2">
@@ -1007,13 +1007,13 @@
 <li><p><span id="宋轶三十九-吕洞宾-3"></span>
 大梁景德寺峨眉院，壁间有吕洞宾题字。寺僧相传，以为顷时有蜀僧号峨眉道者，戒律甚严，不下席者二十年。一日，有布衣青裘，昂然一伟人来，与语良久，期以明年是日复相见于此，愿少见待也。明年是日，日方午，道者沐浴端坐而逝。至暮，伟人果来，问道者安在，曰亡矣。伟人叹息良久，忽复不见。明日书数语于堂壁间绝高处，其语云：「落日斜，西风冷。幽人今夜来不来，教人立尽梧桐影。」字画飞动，如翔鸾舞凤，非世间笔也。宣和间，余游京师，犹及见之。《竹坡诗话》。</p></li>
 <li><p><span id="宋轶三十九-吕洞宾-4"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E5%9B%9B-%E5%BC%A0%E6%B4%8E-12">张洎12</a>。</p></li>
+见张洎<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E5%9B%9B-%E5%BC%A0%E6%B4%8E-12">12</a>。</p></li>
 <li><p><span id="宋轶三十九-吕洞宾-5"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E5%85%AD-%E4%B8%81%E8%B0%93-9">丁谓9</a>。</p></li>
+见丁谓<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E5%85%AD-%E4%B8%81%E8%B0%93-9">9</a>。</p></li>
 <li><p><span id="宋轶三十九-吕洞宾-6"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%83.html#%E5%AE%8B%E8%BD%B6%E4%B8%83-%E9%BB%84%E8%A7%89-1">黄觉1</a>。</p></li>
+见黄觉<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%83.html#%E5%AE%8B%E8%BD%B6%E4%B8%83-%E9%BB%84%E8%A7%89-1">1</a>。</p></li>
 <li><p><span id="宋轶三十九-吕洞宾-7"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E4%B8%89-%E6%BB%95%E5%AE%97%E8%B0%85-10">滕宗谅10</a>。</p></li>
+见滕宗谅<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E4%B8%89-%E6%BB%95%E5%AE%97%E8%B0%85-10">10</a>。</p></li>
 <li><p><span id="宋轶三十九-吕洞宾-8"></span>
 《东坡诗话》云：熙宁元年八月十九日，有道士过沈东老饮酒，用石榴皮写绝句壁上，自称回道人。出门，至石桥上，先度桥，数十步不知所在。或曰：「此吕洞宾也。」诗云：「西邻已富忧不足，东老虽贫乐有余。白酒酿来缘好客，黄金散尽为收书。」此东坡倅钱塘之日，今在石村沈家，画壁犹存，所画之像，藤蔓交蔽其体，惟面貌独出，余往来苕、霅，屡见之。《西塘集耆旧续闻》卷六。</p></li>
 </ol>
@@ -1024,15 +1024,15 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶三十九-毛女-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E5%9B%9B-%E9%99%88%E6%8A%9F-27">陈抟27</a>。</p></li>
+见陈抟<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E5%9B%9B-%E9%99%88%E6%8A%9F-27">27</a>。</p></li>
 <li><p><span id="宋轶三十九-毛女-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E5%9B%9B-%E9%99%88%E6%8A%9F-28">陈抟28</a>。</p></li>
+见陈抟<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E5%9B%9B-%E9%99%88%E6%8A%9F-28">28</a>。</p></li>
 <li><p><span id="宋轶三十九-毛女-3"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-20">蔡京20</a>。</p></li>
+见蔡京<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-20">20</a>。</p></li>
 <li><p><span id="宋轶三十九-毛女-4"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-21">蔡京21</a>。</p></li>
+见蔡京<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-21">21</a>。</p></li>
 <li><p><span id="宋轶三十九-毛女-5"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-102">蔡京102</a>。</p></li>
+见蔡京<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-102">102</a>。</p></li>
 </ol>
 </div>
 </div>
@@ -1145,7 +1145,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-22.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
