--- a/宋人轶事汇编卷二十六.html
+++ b/宋人轶事汇编卷二十六.html
@@ -156,7 +156,7 @@
 <li><p><span id="宋轶二十六-王黼-1"></span>
 王黼美风姿，极便辟，面如傅粉，然须发与目中精色尽金黄，张口能自纳其拳。《铁围山丛谈》卷三。《东都事略》卷一百六。</p></li>
 <li><p><span id="宋轶二十六-王黼-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E6%B1%AA%E8%97%BB-3">汪藻3</a>。</p></li>
+见汪藻<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E6%B1%AA%E8%97%BB-3">3</a>。</p></li>
 <li><p><span id="宋轶二十六-王黼-3"></span>
 李处迈，邯郸之孙，政和初，以直秘阁知相州。外甥张澄如莹，繇宗女夫为承节郎，侍行，掌札牍之寄。时聂贲远山为郡博士，王将明甫为决曹椽。如莹处甥馆，既与二公往还，且周旋甚至，悉皆怀感。王、聂同年生也，始甚欢。而聂于乐籍中有所属意，王亦昵之，每戒不令前，聂恨之，因而遂成仇怨。其后，甫改名黼，为相，荐如莹易文阶，除枢密院编修，已而更秩为郎。聂后以蔡元长称其刚方有立，荐之，改名昌，擢侍从。黼大用事，贬聂散官，安置衡州，益衔黼矣。靖康时事大变，召登政府，黼之诛死，聂有力焉。而聂亦以是岁出使至绛州，被害。《挥麈余话》卷二。</p></li>
 <li><p><span id="宋轶二十六-王黼-4"></span>
@@ -186,7 +186,7 @@
 <li><p><span id="宋轶二十六-王黼-16"></span>
 王将明当国时，公然受贿赂，卖官鬻爵，至有定价。故当时为之语曰：「三千索，直秘阁。五百贯，擢通判。」《曲洧旧闻》卷十。</p></li>
 <li><p><span id="宋轶二十六-王黼-17"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B9%9D.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B9%9D-%E6%9D%8E%E9%82%B4-1">李邴1</a>。</p></li>
+见李邴<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B9%9D.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B9%9D-%E6%9D%8E%E9%82%B4-1">1</a>。</p></li>
 <li><p><span id="宋轶二十六-王黼-18"></span>
 王黼将明，盛时搜求四方瓌奇之物，以充玩好。有人以桃核半枚来献，中容米三四斗。其间题咏之字满矣。李之仪端叔题云：「观此桃，则退之所谓『华山十丈莲』，信有之矣。」《墨庄漫录》卷一。</p></li>
 <li><p><span id="宋轶二十六-王黼-19"></span>
@@ -243,7 +243,7 @@
 <li><p><span id="宋轶二十六-朱勔-1"></span>
 朱勔之父朱冲者，吴中常卖人。方言以微细物博易于乡市中自唱，曰常卖。一日至虎丘，主僧听其声，甚惊，出观之，但见憩于庑下，延之，设茶，语以它日必贵。自是，主僧颇周给之。其子勔有干材，蔡太师憩平江，冲以见蔡，因得出入门下，被使令。再入相，京属童贯以军功补官，遂取吴中水窠以进，并以工巧之物输上方，就平江为应奉局，百工技艺皆役之。间以金珠为器，分遗后宫，宫人皆德之，誉言日闻。遂取太湖巧石，大者寻丈，皆运至阙下，又令发运司津置，谓之「花石纲」。《云麓漫钞》卷七。</p></li>
 <li><p><span id="宋轶二十六-朱勔-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C-4.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C-%E5%AE%8B%E5%BE%BD%E5%AE%97-14">宋徽宗14</a>。</p></li>
+见宋徽宗<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C-4.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C-%E5%AE%8B%E5%BE%BD%E5%AE%97-14">14</a>。</p></li>
 <li><p><span id="宋轶二十六-朱勔-3"></span>
 宣和癸卯，平江朱勔采石太湖鼋山，得一石，长四丈有奇，广得其半，玲珑嵌空，窍穴百千，非雕刻所能成也。并郡宅后池光亭台上白公桧，世传白乐天手植也，创造二大舟，费八千缗以献。时常、润间河渠浅淤，重载不前。乃先绘图以闻。宸翰赐石名「神运昭功敷庆万年之峰」，时人莫不目击。……是秋方至京师，诏置于艮岳。《墨庄漫录》卷一。</p></li>
 <li><p><span id="宋轶二十六-朱勔-4"></span>
@@ -263,7 +263,7 @@
 <li><p><span id="宋轶二十六-朱勔-11"></span>
 金人入寇，〔朱〕勔父子以小舟东下，不敢见人，人亦不往见。《云麓漫钞》卷七。</p></li>
 <li><p><span id="宋轶二十六-朱勔-12"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E6%BD%98%E5%85%91-2">潘兑2</a>。</p></li>
+见潘兑<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E6%BD%98%E5%85%91-2">2</a>。</p></li>
 <li><p><span id="宋轶二十六-朱勔-13"></span>
 朱勔之葬其父，盛饰一女奴、一僮以殉之。僮、奴不知其死也，忻忻然从柩而入圹。靖康末大饥，郡人怨毒入骨，劫其圹而碎其骨。《吴中旧事》。</p></li>
 <li><p><span id="宋轶二十六-朱勔-14"></span>
@@ -278,17 +278,17 @@
 <li><p><span id="宋轶二十六-童贯-1"></span>
 童贯自谓韩魏公出子，与梁师成自谓苏文忠出子正同。《香祖笔记》卷八。</p></li>
 <li><p><span id="宋轶二十六-童贯-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-40">蔡京40</a>。</p></li>
+见蔡京<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-40">40</a>。</p></li>
 <li><p><span id="宋轶二十六-童贯-3"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-45">蔡京45</a>。</p></li>
+见蔡京<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-45">45</a>。</p></li>
 <li><p><span id="宋轶二十六-童贯-4"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-68">蔡京68</a>。</p></li>
+见蔡京<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-68">68</a>。</p></li>
 <li><p><span id="宋轶二十六-童贯-5"></span>
 童贯自崇宁二年，始以入内内侍省东头供奉官奉旨，……于是绅无耻者，皆出其门。而士论始沸腾矣，至以蔡京为比。当时天下谚曰：「打破筒，泼了菜，便是人间好世界。」而朝廷曾不悟也。二人卒乱天下。《能改斋漫录》卷十二。《清波别志》卷上。《宋稗类钞》卷二。《宋诗纪事》卷十。</p></li>
 <li><p><span id="宋轶二十六-童贯-6"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E4%BD%95%E6%89%A7%E4%B8%AD-8">何执中8</a>。</p></li>
+见何执中<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E4%BD%95%E6%89%A7%E4%B8%AD-8">8</a>。</p></li>
 <li><p><span id="宋轶二十六-童贯-7"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E5%8F%B6%E6%A2%A6%E5%BE%97-7">叶梦得7</a>。</p></li>
+见叶梦得<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E5%8F%B6%E6%A2%A6%E5%BE%97-7">7</a>。</p></li>
 <li><p><span id="宋轶二十六-童贯-8"></span>
 政和中，将作监贾谠明仲奉诏为童贯治赐第于都城。既落成，贾往谢之，贯云：「久劳神观，而怱怱竟未能小款，翌早朝退无它，幸见过点心而已。」明仲领其意。诘朝往见，宾主不交一谈。顷之，一卒持二物，若宝盖璎珞状，张于贯及己之上。视之，皆真珠也。各命二双鬟，捧桌子一只至所座前。又令庖人持银镣灶，即厅之侧燎火造包子。以酒食行，凡三，每一行，易一桌，凡果碟酒杯之属，初以银，次金，又次以玉。其制作奇绝，目所未睹。三杯即彻，贾亦辞出，暂至局中，然后归舍，见数人立于门云：「太傅致意，适来大监坐间受用一分器皿及双鬟，悉令持纳。」计其值，逾数万缗。贾由此雄豪，至今以富闻湘中。《挥麈后录》卷八。《宋稗类钞》卷二。</p></li>
 <li><p><span id="宋轶二十六-童贯-9"></span>
@@ -327,15 +327,15 @@
 <li><p><span id="宋轶二十六-梁师成-2"></span>
 〔梁师成〕尝自冒为苏轼之出子，与轼诸子叙拜为兄弟行。数丐上曰：「先臣何罪？」《三朝北盟会编》卷三十二。</p></li>
 <li><p><span id="宋轶二十六-梁师成-3"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%89-%E8%8B%8F%E8%BF%87-2">苏过2</a>。</p></li>
+见苏过<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%89-%E8%8B%8F%E8%BF%87-2">2</a>。</p></li>
 <li><p><span id="宋轶二十六-梁师成-4"></span>
 梁师成自称东坡外子，欲夤缘颍滨子元老，请见通款，元老拒之。师成怒，挤之不令在中朝。《六研斋笔记》卷一。</p></li>
 <li><p><span id="宋轶二十六-梁师成-5"></span>
 绍圣中，蔡卞重修《神宗实录》，用朱黄删改。每一卷成，辄纳之禁中。盖将尽泯其迹，而使新录独行。所谓朱墨本者，世不可得而复见矣。及梁师成用事，自谓苏氏遗体，颇招延元祐诸家子孙若范温、秦湛之徒。师成在禁中见其书，为诸人道之。诸人幸其书之出，因曰：「此亦不可不录也。」师成如其言。及败没入，有得其书，以渡江，遂传于世。《齐东野语》卷八。</p></li>
 <li><p><span id="宋轶二十六-梁师成-6"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E7%8E%8B%E5%AE%89%E4%B8%AD-6">王安中6</a>。</p></li>
+见王安中<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E7%8E%8B%E5%AE%89%E4%B8%AD-6">6</a>。</p></li>
 <li><p><span id="宋轶二十六-梁师成-7"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E7%8E%8B%E9%BB%BC-8">王黼8</a>。</p></li>
+见王黼<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E7%8E%8B%E9%BB%BC-8">8</a>。</p></li>
 <li><p><span id="宋轶二十六-梁师成-8"></span>
 宣和初，有邓姓者，留守西京，以牛酥百斤遗梁师成。江子我端友作《牛酥行》云：「有客有客官长安，牛酥百斤亲自煎。倍道奔驰少师府，望尘且欲迎归轩。守阍呼语不必出，已有人居第一先。其多乃复倍于此，台颜顾视初怡然。昨朝所献虽第二，桶以纯漆丽且坚。今君来迟数又少，青纸题封难胜前。持归空慙辽东豕，努力明年趁头市。」《能改斋漫录》卷十一。《宋稗类钞》卷二。</p></li>
 <li><p><span id="宋轶二十六-梁师成-9"></span>
@@ -363,7 +363,7 @@
 <li><p><span id="宋轶二十六-高俅-1"></span>
 高俅者，本东坡先生小史，笔札颇工。东坡自翰苑出帅中山，留以予曾文肃。文肃以史令已多辞之，东坡以属王晋卿。元符末，晋卿为枢密都承旨，时祐陵为端王，在潜邸日，已自好文，故与晋卿善，在殿庐待班，邂逅，王云：「今日偶忘记带篦刀子来，欲假以掠鬓，可乎？」晋卿从腰间取之。王云：「此样甚新可爱。」晋卿言：「近创二副，一犹未用，少刻当以驰内。」至晚，遣俅賷往。值王在园中蹴鞠，俅候报之际，睥睨不已。王呼来前，询曰：「汝亦解此技邪？」俅曰：「能之。」漫令对蹴，遂惬王之意，大喜，呼隶辈云：「可往传语都尉，既谢篦刀之贶，并所送人皆辍留矣。」由是日见亲信。逾月，王登宝位。上优宠之，眷渥甚厚，不次迁拜。其侪类援以祈恩，上云：「汝曹争如彼好脚迹邪！」数年间建节，循至使相，遍历三衙者二十年，领殿前司职事，自俅始也。……恩幸无比，极其富贵。然不忘苏氏，每其子弟入都，则给养问甚勤。靖康初，祐陵南下，俅从驾至临淮，以疾为解，辞归京师。当时侍行如童贯、梁师成辈皆坐诛，而俅独死于牖下。《挥麈后录》卷七。《宋稗类钞》卷一。</p></li>
 <li><p><span id="宋轶二十六-高俅-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E4%BD%95%E6%89%A7%E4%B8%AD-8">何执中8</a>。</p></li>
+见何执中<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E4%BD%95%E6%89%A7%E4%B8%AD-8">8</a>。</p></li>
 <li><p><span id="宋轶二十六-高俅-3"></span>
 冬至前三日，驾宿大庆殿。……兵士十余人作一队，聚首而立，凡数十队。各一名喝曰：「是与不是？」众曰：「是。」又曰：「是甚人？」众曰：「殿前都指挥使高俅。」更互喝叫不停。《东京梦华录》卷十。</p></li>
 <li><p><span id="宋轶二十六-高俅-4"></span>
@@ -417,7 +417,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="宋轶二十六-任伯雨-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%B5%B5%E6%8C%BA%E4%B9%8B-5">赵挺之5</a>。</li>
+见赵挺之<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%B5%B5%E6%8C%BA%E4%B9%8B-5">5</a>。</li>
 </ol>
 </div>
 <div id="张庭坚" class="section level2">
@@ -457,7 +457,7 @@
 <li><p><span id="宋轶二十六-江公望-3"></span>
 建中初，江公望为左司谏，上言：「神考与元祐诸臣，非有斩袪射钩之也，先帝信仇人黜之。陛下若立元祐以为名，必有元丰、绍圣为之对。有对则争兴，争兴则党复立矣。」徽宗初欲革绍圣之弊以靖国，于是大开言路。众议以瑶华复位，司马光等叙官为所当先。陈瓘时在谏省，独以为「幽废母后，追贬故相，彼皆立名以行，非细故也。今欲正复，当先辨明诬罔，昭雪非辜，诛责造意之人，然后发诏以礼行之，庶无后患。不宜欲速贻悔」。朝议以公论久郁，速欲取快人情，遽施行之。至崇宁间，蔡京用事，悉改建中之政。人皆服公远识。《宋稗类钞》卷三。</p></li>
 <li><p><span id="宋轶二十六-江公望-4"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C-4.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C-%E5%AE%8B%E5%BE%BD%E5%AE%97-10">宋徽宗10</a>。</p></li>
+见宋徽宗<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C-4.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C-%E5%AE%8B%E5%BE%BD%E5%AE%97-10">10</a>。</p></li>
 </ol>
 </div>
 <div id="刘安节" class="section level2">
@@ -489,7 +489,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十六-蔡薿-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%80.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%80-%E6%9D%8E%E5%85%83%E4%BA%AE-1">李元亮1</a>。</p></li>
+见李元亮<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%80.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%80-%E6%9D%8E%E5%85%83%E4%BA%AE-1">1</a>。</p></li>
 <li><p><span id="宋轶二十六-蔡薿-2"></span>
 政和元年，尚书蔡薿为知举，尤严挟书。是时有街市词曰《侍香金童》，方盛行，举人因以其词，只改十五字，作《怀挟词》云：「喜叶叶地，手把怀儿摸。甚恰限、出题厮撞着。内臣过得不住脚。忙裏只是，看来斑驳。　　这一身冷汗，都如云雾薄。比似年时头势恶。待检又还猛相度。只恐根底，有人挦着。」《上庠录》。《苕溪渔隐丛话》后集卷三十九。</p></li>
 <li><p><span id="宋轶二十六-蔡薿-3"></span>
@@ -531,9 +531,9 @@
 <li><p><span id="宋轶二十六-李孝寿-1"></span>
 李孝寿知开封府，有举子为仆所陵，忿甚，亟缚之，作状欲送府。会为同舍劝解，久之，气亦平，因释去，自取其状，戏学孝寿押字，判曰：「不勘案，决臀杖二十。」其仆怨之。翌日，即窃状走府，曰：「秀才日学知府判状，私决之。」孝寿即令追之。既至，具陈所以，孝寿翻然谓仆曰：「如此，秀才所判，正与我同，真不用勘案。」命吏就读其状，如数决之。《石林燕语》卷十。</p></li>
 <li><p><span id="宋轶二十六-李孝寿-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E5%BA%B7%E5%80%AC-1">康倬1</a>。</p></li>
+见康倬<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E5%BA%B7%E5%80%AC-1">1</a>。</p></li>
 <li><p><span id="宋轶二十六-李孝寿-3"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%83.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%83-%E5%BE%90%E4%BC%B8-1">徐伸1</a>。</p></li>
+见徐伸<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%83.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%83-%E5%BE%90%E4%BC%B8-1">1</a>。</p></li>
 </ol>
 </div>
 <div id="王-革" class="section level2">
@@ -552,7 +552,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十六-盛章-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E4%B8%83-%E7%8E%8B%E9%87%87-4">王采4</a>。</p></li>
+见王采<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%83.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E4%B8%83-%E7%8E%8B%E9%87%87-4">4</a>。</p></li>
 <li><p><span id="宋轶二十六-盛章-2"></span>
 盛章尹京典藩，以惨毒闻，杀人如刈草菅。然妇态雌声，欲语先笑，未尝正视人。或置人死地时，亦柔懦不异平日。《老学庵续笔记》。</p></li>
 </ol>
@@ -618,11 +618,11 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十六-毛友-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-95">蔡京95</a>。</p></li>
+见蔡京<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-95">95</a>。</p></li>
 <li><p><span id="宋轶二十六-毛友-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-96">蔡京96</a>。</p></li>
+见蔡京<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-96">96</a>。</p></li>
 <li><p><span id="宋轶二十六-毛友-3"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%9B%9B-%E8%B4%BA%E9%93%B8-6">贺铸6</a>。</p></li>
+见贺铸<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%9B%9B-%E8%B4%BA%E9%93%B8-6">6</a>。</p></li>
 </ol>
 </div>
 <div id="强渊明" class="section level2">
@@ -632,7 +632,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="宋轶二十六-强渊明-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-19">蔡京19</a>。</li>
+见蔡京<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-19">19</a>。</li>
 </ol>
 </div>
 <div id="宋乔年" class="section level2">
@@ -661,7 +661,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十六-潘兑-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E5%BC%A0%E5%95%86%E8%8B%B1-2">张商英2</a>。</p></li>
+见张商英<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E5%BC%A0%E5%95%86%E8%8B%B1-2">2</a>。</p></li>
 <li><p><span id="宋轶二十六-潘兑-2"></span>
 潘兑，字说之，吴门人，仕祐陵为侍从。宣和初，奉祠居里中。时郡民朱勔以幸进，宠眷无比。父冲殂，勔护丧归葬，乡间倾城出迓，而潘独不往。潘之先茔，适有山林，形势近冲新阡。勔欲得之，迺修敬于潘，杜门弗纳。勔恃恩自恣，遣人讽之，且席以薰天之势，潘一切拒之。勔归京师，果愬于上，降御笔夺之。已而又訹御史诬之以罪，而褫潘之职。《挥麈余话》卷二。</p></li>
 </ol>
@@ -722,9 +722,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十六-张澂-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E7%AB%A5%E8%B4%AF-17">童贯17</a>。</p></li>
+见童贯<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E7%AB%A5%E8%B4%AF-17">17</a>。</p></li>
 <li><p><span id="宋轶二十六-张澂-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E7%AB%A5%E8%B4%AF-18">童贯18</a>。</p></li>
+见童贯<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E7%AB%A5%E8%B4%AF-18">18</a>。</p></li>
 <li><p><span id="宋轶二十六-张澂-3"></span>
 张达明虽早历清显，致位纲辖，然未尝更外任。奉祠居临川，郡守月旦谒之，达明见其驺导，叹曰：「人生五马贵。」《老学庵笔记》卷三。</p></li>
 </ol>
@@ -960,13 +960,13 @@
 <li><p><span id="宋轶二十六-魏泰-2"></span>
 魏道辅泰，襄阳人，元祐名士也。与王介甫兄弟最相厚。仆初以谓有隐德，不仕，及试院中，因上请主文，道辅恃才豪纵，不能忍一时之忿，欧主文几死，坐是不许取应。《苕溪渔隐丛话》前集卷十二引《桐江诗话》。《宋诗纪事》卷二十八。</p></li>
 <li><p><span id="宋轶二十六-魏泰-3"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%9B%9B-%E6%9D%8E%E5%BB%8C-8">李廌8</a>。</p></li>
+见李廌<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%9B%9B-%E6%9D%8E%E5%BB%8C-8">8</a>。</p></li>
 <li><p><span id="宋轶二十六-魏泰-4"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E6%9B%BE%E5%B8%83-2">曾布2</a>。</p></li>
+见曾布<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E6%9B%BE%E5%B8%83-2">2</a>。</p></li>
 <li><p><span id="宋轶二十六-魏泰-5"></span>
 〔魏〕道辅少与徐忠愍及山谷老人友善，博极群书，尤能谈朝野可喜事，亹亹终日。作诗自成一家，有集二十卷，号汉上丈人。《苕溪渔隐丛话》前集卷十二引《潘子真诗话》。</p></li>
 <li><p><span id="宋轶二十六-魏泰-6"></span>
-魏泰道辅，自号临汉隐居，著《东轩杂录》、《续录》、《订误》、《诗话》等书。又有一书，讥评巨公伟人阙失，目曰《碧云騢》，取庄献明肃太后垂帘时，西域贡名马，颈有旋毛，文如碧云，以是不得入御闲之意。嫁其名曰都官员外郎梅尧臣撰，实非圣俞所著，乃泰作也。《墨庄漫录》卷二。《宋稗类钞》卷六。参见梅尧臣9、10、11。</p></li>
+魏泰道辅，自号临汉隐居，著《东轩杂录》、《续录》、《订误》、《诗话》等书。又有一书，讥评巨公伟人阙失，目曰《碧云騢》，取庄献明肃太后垂帘时，西域贡名马，颈有旋毛，文如碧云，以是不得入御闲之意。嫁其名曰都官员外郎梅尧臣撰，实非圣俞所著，乃泰作也。《墨庄漫录》卷二。《宋稗类钞》卷六。参见梅尧臣<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%A2%85%E5%B0%A7%E8%87%A3-9">9</a>、<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%A2%85%E5%B0%A7%E8%87%A3-10">10</a>、<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%A2%85%E5%B0%A7%E8%87%A3-11">11</a>。</p></li>
 <li><p><span id="宋轶二十六-魏泰-7"></span>
 魏泰托梅圣俞之名作书，号《碧云騢》，以诋当世巨公，如范文正亦不免。《步里客谈》卷上。</p></li>
 </ol>
@@ -978,7 +978,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="宋轶二十六-田衍-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%9B%9B-%E6%9D%8E%E5%BB%8C-8">李廌8</a>。</li>
+见李廌<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%9B%9B-%E6%9D%8E%E5%BB%8C-8">8</a>。</li>
 </ol>
 </div>
 <div id="王-升" class="section level2">
@@ -1101,7 +1101,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-22.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
