--- a/唐人轶事汇编卷十.html
+++ b/唐人轶事汇编卷十.html
@@ -156,7 +156,7 @@
 <li><p><span id="唐轶十-韦嗣立-1"></span>
 韦承庆，长寿年中，与弟嗣立相代为凤阁舍人。长安三年，承庆又代嗣立为天官侍郎，顷之，又代为黄门侍郎，四职相代。时人曰：「大郎罢相，二郎拜相。」中宗授嗣立黄门侍郎，制曰：「芝兰并秀，见谢、石之阶庭；骐骥齐驱，有刘、山之昆季。」《广卓异记》一五。《南部新书》戊。《干子》（《绀珠集》七）。《唐诗纪事》一一。</p></li>
 <li><p><span id="唐轶十-韦嗣立-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E5%B4%94%E6%B9%9C-4">崔湜4</a>。</p></li>
+见崔湜<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E5%B4%94%E6%B9%9C-4">4</a>。</p></li>
 <li><p><span id="唐轶十-韦嗣立-3"></span>
 兵部尚书韦嗣立，景龙中中宗与韦后幸其庄，封嗣立为逍遥公，又改其居凤凰原为清虚原，鹦鹉谷为幽栖谷。史部南院旧无选人坐，韦嗣立尚书之为吏部，始奏请有司供床褥，自后因为故事。《隋唐嘉话》下。《唐语林》五。</p></li>
 <li><p><span id="唐轶十-韦嗣立-4"></span>
@@ -175,7 +175,7 @@
 <li><p><span id="唐轶十-苏瓌-2"></span>
 中宗暴崩，秘不发丧。韦庶人亲总庶政，召宰相韦巨源等一十一人入禁中会议，遗诏令韦庶人辅少主知政事，授相王太尉，参谋辅政。宗楚客谓韦温曰：「今皇太后临朝，宜停相王辅政。且太后于诸王居嫂叔之地，难为仪注，是诏理全不可。」苏瓌独正色拒之，谓楚客等曰：「遗诏是先帝意，安可更改！」楚客、温等大怒，遂削相王辅政语，乃宣行之。《大唐新语》三。《唐会要》五一。</p></li>
 <li><p><span id="唐轶十-苏瓌-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E8%8B%8F%E9%A2%8B-5">苏颋5</a>。</p></li>
+见苏颋<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E8%8B%8F%E9%A2%8B-5">5</a>。</p></li>
 </ol>
 </div>
 <div id="萧至忠" class="section level2">
@@ -188,7 +188,7 @@
 <li><p><span id="唐轶十-萧至忠-2"></span>
 睿宗皇帝即位，悼太子殒身殉难，下诏曰：「曾氏之孝也，慈亲惑于疑听；赵虏之族也，明帝哀而望思。历考前闻，率由旧典。太子，大行之子，元良守器，往罗搆间，困于谗嫉，莫顾𫓧钺，轻盗甲兵，有此诛夷，无不愤惋。今四凶灭服，十起何追，方申赤晕之冤，以抒黄泉之痛。可赠皇太子谥曰节愍。」先是宗楚客、纪处讷、冉祖雍等奏言：「相王及太平公主与太子同谋，请收付狱。」中宗命御史中丞萧至忠鞫之，至忠泣而奏曰：「陛下富有四海，贵为天子，岂不能保持一弟一妹，受人罗织。宗社存亡，实在于此。臣虽至愚，窃为陛下不取。《汉书》云：『一尺布，尚可缝；一斗粟，尚可舂；兄弟二人不相容。』愿陛下详之。且往者则天欲立相王为太子，相王累日不食，请迎陛下。固让之诚，天下传说。」且明祖雍所奏，咸是搆虚。中宗纳其言，乃止。十起未详。《大唐新语》五。《唐会要》六二。</p></li>
 <li><p><span id="唐轶十-萧至忠-3"></span>
-姜皎荐源乾曜，玄宗见之，骤拜为相，谓左右曰：「此人仪形庄肃，似萧至忠，朕故用之。」左右对曰：「至忠以犯逆死，陛下何故比之？」玄宗曰：「我为社稷计，所以诛之。然其人信美才也。」至忠尝与友人期街中，俄而雪下，人或止之，至忠曰：「焉有与人期，畏雪不去？」遂命驾径往，立于雪中，深尺余，期者方至。及登廊庙，居乱后邪臣之间，不失其正。出为晋州刺史，甚有异绩。晚徒失职，为太平公主所引，与之图事，以及于祸害。《大唐新语》六。参见唐玄宗56。</p></li>
+姜皎荐源乾曜，玄宗见之，骤拜为相，谓左右曰：「此人仪形庄肃，似萧至忠，朕故用之。」左右对曰：「至忠以犯逆死，陛下何故比之？」玄宗曰：「我为社稷计，所以诛之。然其人信美才也。」至忠尝与友人期街中，俄而雪下，人或止之，至忠曰：「焉有与人期，畏雪不去？」遂命驾径往，立于雪中，深尺余，期者方至。及登廊庙，居乱后邪臣之间，不失其正。出为晋州刺史，甚有异绩。晚徒失职，为太平公主所引，与之图事，以及于祸害。《大唐新语》六。参见唐玄宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%8E%84%E5%AE%97-56">56</a>。</p></li>
 </ol>
 </div>
 <div id="宗楚客" class="section level2">
@@ -207,7 +207,7 @@
 <li><p><span id="唐轶十-宗楚客-5"></span>
 宗楚客兄秦客，潜劝则天革命，累迁内史。后以赃罪，流于岭南而死。楚客无他材能，附会武三思，神龙中为中书舍人。时西突厥、阿史那忠节不合，安西都护郭元振奏请徙忠节于内地，楚客与弟晋卿及纪处讷等纳忠节厚赂，请发兵以讨西突厥，不纳元振之奏。突厥大怒，举兵入寇，甚为边患。监察御史崔琬劾奏楚客等曰：「闻四牡项领，良御不乘；二心事君，明罚无舍。谨按宗楚客、纪处讷等性唯险诐，志越谿壑。幸以遭遇圣主，累忝殊荣，承恺悌之恩，居弼谐之地，不能刻意砥操，忧国如家，微效涓尘，以裨川岳。遂乃专作威福，敢树朋党。有无君之心，阙大臣之节。潜通猃狁，纳贿易赀；公引顽凶，受赂无限。丑闻充斥，秽迹昭彰。且境外交通，情状难测，今娑葛反叛，边鄙不宁，由此赃私，取怨外国。论之者取祸以结舌，语之者避罪而钳口。晋卿昔居荣职，素阙忠诚，屡冒严刑，皆由黩货。今又叨忝，频沐殊恩，厚禄重权，当朝莫比、曾无悛改，乃狥赃私。此而容之，孰云其可！臣谬忝公直，义在触邪，请除巨蠹，以答天造。」中宗不从，遽令与琬和解。俄而韦氏败，楚客等咸诛。《大唐新语》二。《唐语林》三。</p></li>
 <li><p><span id="唐轶十-宗楚客-6"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E8%8B%8F%E7%93%8C-2">苏瓌2</a>。</p></li>
+见苏瓌<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E8%8B%8F%E7%93%8C-2">2</a>。</p></li>
 </ol>
 </div>
 <div id="韦-温" class="section level2">
@@ -230,15 +230,15 @@
 <li><p><span id="唐轶十-崔湜-2"></span>
 崔仁师之孙崔湜并涤，及从兄莅，并有文翰，列居清要，每私宴之际，自比王谢之家。谓人曰：「吾之一门及出身历官，未尝不为第一，丈夫当先据要路以制人，岂能默默受制于人！」故进取不已，而不能令终。《唐摭言》一二。又《广记》一八四引。《广记》二六五亦载此文。《唐诗纪事》九。</p></li>
 <li><p><span id="唐轶十-崔湜-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%85%AB-1.html#%E5%94%90%E8%BD%B6%E5%85%AB-%E6%AD%A6%E4%B8%89%E6%80%9D-3">武三思3</a>。</p></li>
+见武三思<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%85%AB-1.html#%E5%94%90%E8%BD%B6%E5%85%AB-%E6%AD%A6%E4%B8%89%E6%80%9D-3">3</a>。</p></li>
 <li><p><span id="唐轶十-崔湜-4"></span>
 中宗时，兵部尚书韦嗣立新入三品，户部侍郎赵彦昭假金紫，吏部侍郎崔湜复旧官，上命烧尾，令于兴庆池设食。至时，勅衞尉陈设，尚书省诸司，各具采舟游胜，飞楼结舰，光夺霞日。上与侍臣亲贲临焉。既而吏部船为仗所隔，兵部船先至，嗣立奉觞献寿。上问：「吏部船何在？」崔湜步自北岸促之，遇户部双舸，上结重楼，兼胡乐一部，即呼至岸，以纸书作「吏部」字帖牌上，引至御前。上大悦，以为兵部不逮也。俄有风吹动所帖之纸，为嗣立所见，遽奏云：「非吏部船。」上令取牌，探纸见「户」字，大笑。嗣立请科湜罪，上不许，但罚酒而已。《封氏闻见记》五。《唐语林》五。</p></li>
 <li><p><span id="唐轶十-崔湜-5"></span>
 唐崔湜为吏部侍郎贪纵，兄凭弟力，父挟子威，咸受嘱求，赃污狼藉。父挹为司业，受选人钱，湜不之知也，长名放之。其人诉曰：「公亲将赂去，何为不与官？」湜曰：「所亲为谁？吾捉取鞭杀。」曰：「鞭即遭忧。」湜大惭。主上以湜父年老，瓜初熟，赐一颗，湜以瓜遗妾，不及其父，朝野讥之。时崔、岑、郑愔并为吏部，京中谣曰：「岑羲獠子后，崔湜令公孙。三人相比接，莫贺咄最浑。」《朝野佥载》四。《广卓巽记》六。</p></li>
 <li><p><span id="唐轶十-崔湜-6"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E9%83%91%E6%84%94-4">郑愔4</a>、5。</p></li>
+见郑愔<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E9%83%91%E6%84%94-4">4</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E9%83%91%E6%84%94-5">5</a>。</p></li>
 <li><p><span id="唐轶十-崔湜-7"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E9%83%91%E6%84%94-4">郑愔4</a>、5。</p></li>
+见郑愔<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E9%83%91%E6%84%94-4">4</a>、<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E9%83%91%E6%84%94-5">5</a>。</p></li>
 <li><p><span id="唐轶十-崔湜-8"></span>
 崔湜谄事张易之与韦庶人。及韦氏诛，附太平，有冯子都、董偃之宠。妻美，与二女并进储闱，为中书侍郎、平章事。或有人牓之曰：「托庸才于主第，进艳妇于春宫。」《朝野佥载》五。</p></li>
 <li><p><span id="唐轶十-崔湜-9"></span>
@@ -253,7 +253,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶十-郑愔-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%85%AB-1.html#%E5%94%90%E8%BD%B6%E5%85%AB-%E6%9D%A5%E4%BF%8A%E8%87%A3-6">来俊臣6</a>。</p></li>
+见来俊臣<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%85%AB-1.html#%E5%94%90%E8%BD%B6%E5%85%AB-%E6%9D%A5%E4%BF%8A%E8%87%A3-6">6</a>。</p></li>
 <li><p><span id="唐轶十-郑愔-2"></span>
 郑愔者，沧州人。来俊臣罗织文状，皆愔草定。张易之兄弟荐为殿中侍御史。易之败，黜为宣州司户。既而归。武三思用事，将害桓、敬等，愔揣知其情，求谒三思。三思见之，愔先哭甚哀，既而大笑。三思怪问其故，对曰：「前哭甚哀者，吊大王国破家亡也。后大笑者，贺大王得愔也。柬之等五人，为上所忌，日夜为计，非剪除不足以快其意，大王岂不知之？今据将相之权，有过人之智，废则天兵不血刃，易于反掌。今料大王之势，孰与则天？大王不去五王，身有累卵之危，此愔所以寒心也。」三思大悦，引与登楼，谋陷五王而杀之，皆崔湜、郑愔之谋也。累遣吏部侍郎，卖官为务，后与谯王重福搆逆而死。《大唐新语》九。</p></li>
 <li><p><span id="唐轶十-郑愔-3"></span>
@@ -298,7 +298,7 @@
 <li><p><span id="唐轶十-窦怀贞-3"></span>
 窦怀贞倾巧进用，累遣晋州长史，谄事中贵，尽得其欢心。韦庶人乳母王氏，本蛮婢也，怀贞聘之为妻，封莒国夫人。俗为嬭母之婿曰阿，怀贞每因谒见及进奏表状，列其官次，署曰「翊圣皇后阿」。时人鄙之，呼为，怀贞欣然自得。韦庶人败，遂斩其妻，持首以献。居宪台及京尹，每视事，见无须者，误以为中官，必曲加承接。睿宗践祚，怀贞位极人臣，道谀不悛，以至于败。先天中，玄宗戡内难，怀贞投水死。《大唐新语》九。</p></li>
 <li><p><span id="唐轶十-窦怀贞-4"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E8%A2%81%E5%AE%88%E4%B8%80-1">袁守一1</a>。</p></li>
+见袁守一<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E8%A2%81%E5%AE%88%E4%B8%80-1">1</a>。</p></li>
 <li><p><span id="唐轶十-窦怀贞-5"></span>
 景云三年八月十七日，东方有流星，出五车至上台，又岁星犯左执法。时侍中窦怀贞请罢所职为安国寺奴。罢职从之，为寺奴不许。《南部新书》辛。</p></li>
 </ol>
@@ -319,9 +319,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶十-李承嘉-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E8%90%A7%E8%87%B3%E5%BF%A0-1">萧至忠1</a>。</p></li>
+见萧至忠<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E8%90%A7%E8%87%B3%E5%BF%A0-1">1</a>。</p></li>
 <li><p><span id="唐轶十-李承嘉-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%85%AB-1.html#%E5%94%90%E8%BD%B6%E5%85%AB-%E6%AD%A6%E4%B8%89%E6%80%9D-3">武三思3</a>。</p></li>
+见武三思<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%85%AB-1.html#%E5%94%90%E8%BD%B6%E5%85%AB-%E6%AD%A6%E4%B8%89%E6%80%9D-3">3</a>。</p></li>
 <li><p><span id="唐轶十-李承嘉-3"></span>
 神龙中，户部尚书李承嘉不识字，不解书。为御史大夫，兼洛州长史，名判司为狗，骂御史为驴，威振朝廷。《朝野佥载》六。</p></li>
 </ol>
@@ -482,7 +482,7 @@
 <li><p><span id="唐轶十-宋务先-1"></span>
 神龙中，每霖雨，必闭坊门禳灾。右衞骑曹宋务先上疏云：「雨旸或愆，貌言为咎。岂有一坊一市，遂能感召星灵；暂闭暂开，便欲发挥神道？至今巷议街言，共呼坊门为宰相，谓能节宣风雨，燮调阴阳。如是则赫赫师尹便为虚设，悠悠苍生复何所望！」《续世说》六。《唐会要》四三。　案：宋务先，《唐会要》、《新唐书》一一八作「宋务光」。</p></li>
 <li><p><span id="唐轶十-宋务先-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E8%B5%B5%E4%BB%81%E5%A5%96-1">赵仁奖1</a>。</p></li>
+见赵仁奖<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E8%B5%B5%E4%BB%81%E5%A5%96-1">1</a>。</p></li>
 <li><p><span id="唐轶十-宋务先-3"></span>
 唐有监察御史不工文，而好作不已，既居权要，多为人所谀，不之觉也。每篇辄为宋务先书以光台，月俸几尽。其妻谓曰：「公经生，素非文笔，所称篇咏，不为外人所传，此必台中玩公，折俸助厨耳。奈何受人嗤玩！」自后虽吟咏不辍，不复出光台钱矣。或问之，以妻言对。诸御史退，相谓曰：「彼有人焉，未可玩也。」乃止。《御史台记》（《广记》二五五）。</p></li>
 </ol>
@@ -505,7 +505,7 @@
 <li><p><span id="唐轶十-裴漼-1"></span>
 〔景龙三年〕五月，李尚隐与监察御史李怀让同奏吏部侍郎崔湜、郑愔有所挟附，赃污狼藉，诏监察御史裴漼按其事。时安乐公主用事，讽漼宽之，漼遂对仗重弹奏，愔竟从贬削。一说靳常所劾，恐非。《唐会要》六一。</p></li>
 <li><p><span id="唐轶十-裴漼-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%88%98%E5%B9%BD%E6%B1%82-2">刘幽求2</a>。</p></li>
+见刘幽求<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%88%98%E5%B9%BD%E6%B1%82-2">2</a>。</p></li>
 </ol>
 </div>
 <div id="周-憬" class="section level2">
@@ -546,7 +546,7 @@
 <li><p><span id="唐轶十-蒋钦緖-1"></span>
 萧至忠自晋州之入也，大理蒋钦緖即其妹婿，送之曰：「以足下之才，不忧不见用，无为非分妄求。」至忠不答。蒋退而曰：「九代之卿族，一举而灭，可哀也哉！」至忠既至，拜中书令，岁余败。《隋唐嘉话》下。《唐语林》三。</p></li>
 <li><p><span id="唐轶十-蒋钦緖-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E9%9F%A9%E7%90%AC-2">韩琬2</a>。</p></li>
+见韩琬<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E9%9F%A9%E7%90%AC-2">2</a>。</p></li>
 </ol>
 </div>
 <div id="李令质" class="section level2">
@@ -585,9 +585,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶十-任正名-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E5%BC%A0%E6%B2%9B-1">张沛1</a>。</p></li>
+见张沛<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E5%BC%A0%E6%B2%9B-1">1</a>。</p></li>
 <li><p><span id="唐轶十-任正名-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%85%83%E7%A6%8F%E5%BA%86-1">元福庆1</a>。</p></li>
+见元福庆<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%85%83%E7%A6%8F%E5%BA%86-1">1</a>。</p></li>
 <li><p><span id="唐轶十-任正名-3"></span>
 周舒州刺史张怀肃好食人精，唐左司郎中任正名亦有此病。《朝野佥载》（张本《说郛》二）。</p></li>
 </ol>
@@ -708,7 +708,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="唐轶十-梁载言-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E5%82%85%E5%B2%A9-1">傅岩1</a>。</p></li>
+见傅岩<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81.html#%E5%94%90%E8%BD%B6%E5%8D%81-%E5%82%85%E5%B2%A9-1">1</a>。</p></li>
 <li><p><span id="唐轶十-梁载言-2"></span>
 怀州刺史梁载言昼坐厅事，□□□忽有物如蝙蝠从南飞来，直入口中，翕然似吞一物。腹中遂绞痛，数日而卒。《朝野佥载》六。</p></li>
 </ol>
@@ -761,7 +761,7 @@
 <li><p><span id="唐轶十-彭君卿-1"></span>
 中宗之时，有见鬼师彭君卿被御史所辱。他日，对百官总集，诈宣孝和敕曰：「御史不检校，去却巾带。」即去之。曰：「有敕与一顿杖。」大使曰：「御史不奉正敕，不合决杖。」君卿曰：「若不合，有敕且放却。」御史裹头，仍舞蹈拜谢而去。观者骇之。《朝野佥载》三。</p></li>
 <li><p><span id="唐轶十-彭君卿-2"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E4%B8%AD%E5%AE%97-6">唐中宗6</a>。</p></li>
+见唐中宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E4%B8%AD%E5%AE%97-6">6</a>。</p></li>
 </ol>
 </div>
 <div id="魏知古" class="section level2">
@@ -774,7 +774,7 @@
 <li><p><span id="唐轶十-魏知古-2"></span>
 魏知古性方直，景云末为侍中。玄宗初即位，猎于渭川，时知古从驾，因献诗以讽曰：「尝闻夏太康，五弟训禽荒。我后来冬狩，三驱盛礼张。顺时鹰隼击，讲事武功扬。奔走来未及，翾飞岂暇翔。蜚熊从渭水，瑞翟相陈仓。此欲诚难纵，兹游不可常。子云陈《羽猎》，僖伯谏渔棠。得失鉴齐楚，仁恩念禹汤。邕熙谅在宥，亭毒匪多伤。《辛甲》今为史，《虞箴》遂孔彰。」手诏褒美，赐物五十段。后兼知吏部尚书，典选事，深为称职。所荐用人，遂咸至大官。《大唐新语》一。《唐语林》五。</p></li>
 <li><p><span id="唐轶十-魏知古-3"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%A7%9A%E5%B4%87-13">姚崇13</a>。</p></li>
+见姚崇<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%80.html#%E5%94%90%E8%BD%B6%E5%8D%81%E4%B8%80-%E5%A7%9A%E5%B4%87-13">13</a>。</p></li>
 <li><p><span id="唐轶十-魏知古-4"></span>
 开元初，工部尚书魏知古卒。宋璟闻之，叹曰：「叔向，古之遗直；子产，古之遗爱。能兼之者，其魏公乎？」《大唐新语》一二。《唐诗纪事》一五。</p></li>
 <li><p><span id="唐轶十-魏知古-5"></span>
@@ -815,7 +815,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="唐轶十-慕容珣-1"></span>
-见<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%9D%BF%E5%AE%97-9">唐睿宗9</a>。</li>
+见唐睿宗<a href="%E5%94%90%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C.html#%E5%94%90%E8%BD%B6%E4%BA%8C-%E5%94%90%E7%9D%BF%E5%AE%97-9">9</a>。</li>
 </ol>
 </div>
 <div id="柳-泽" class="section level2">
@@ -1054,7 +1054,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-22.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
