--- a/宋人轶事汇编卷二十八.html
+++ b/宋人轶事汇编卷二十八.html
@@ -172,7 +172,7 @@
 <li><p><span id="宋轶二十八-李纲-9"></span>
 虏既退，上遣兵十万援太原，以〔李〕纲为宣抚使，固辞不行，至以告身纳榻前。上怒甚，事叵测。签书枢密院许翰与纲皆，蔡京交党也，翰执政，纲颇有力，密书「杜邮」二字以寄纲，纲即日承命。《三朝北盟会编》卷四十。</p></li>
 <li><p><span id="宋轶二十八-李纲-10"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E9%99%88%E4%B8%9C-4">陈东4</a>。</p></li>
+见陈东<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E9%99%88%E4%B8%9C-4">4</a>。</p></li>
 <li><p><span id="宋轶二十八-李纲-11"></span>
 绍兴初，盛传《苏武令》词：「塞上风高，渔阳秋早，惆怅翠华音杳。驿使空驰，征鸿归尽，不寄双龙消耗。念白衣金殿，除恩黄阁，未成图报。　谁信我，致主丹衷，伤时多故，未作救民方召。调鼎为霖，登坛作将，燕然即须平扫。拥精兵十万，横行沙漠，奉迎天表。」云李丞相纲作。《云麓漫钞》卷十四。《南宋杂事诗》卷一。</p></li>
 <li><p><span id="宋轶二十八-李纲-12"></span>
@@ -205,7 +205,7 @@
 <li><p><span id="宋轶二十八-宗泽-8"></span>
 时有降寇赵海者，屯板桥，辄堑路以阻行者。刍者八人过其垒，海怒而脔之。觇事者以告〔宗〕泽。召之，海以甲士五百自卫而入。泽方对客，海具伏，即械之系狱。客曰：「彼甲士甚众，姑徐之。」泽笑谓其次将曰：「领众还营，明日诛海于市。」闻者股栗。《建炎以来系年要录》卷十五。《昨非庵日纂》一集卷十五。</p></li>
 <li><p><span id="宋轶二十八-宗泽-9"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E5%B2%B3%E9%A3%9E-8">岳飞8</a>。</p></li>
+见岳飞<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81-%E5%B2%B3%E9%A3%9E-8">8</a>。</p></li>
 <li><p><span id="宋轶二十八-宗泽-10"></span>
 宗忠简公留守汴京，当金人蹂躏之余，百务拮据，岂有意营不急者。一日，于艮岳遗址得定武禊帖石刻，即遣力辇至行在，中途为斡离不邀截以去。后金昌宗以为秘玩。《坚瓠秘集》卷三。</p></li>
 <li><p><span id="宋轶二十八-宗泽-11"></span>
@@ -249,7 +249,7 @@
 <li><p><span id="宋轶二十八-吴敏-4"></span>
 徐处仁为太宰兼门下侍郎……与吴敏不协，每朝罢议事互相诋訾。未几，吴敏于东府见处仁，处仁方秉笔据案，敏既坐，有所咨启，语渐相侵，处仁忿然以笔掷之，正中敏面额，唇鼻皆黑，同坐者引去。明日，吴敏奏其事，而御史亦相继弹劾，不逾月罢。敏以年少，多不习事，胥吏将文牒至，有所呈覆，吴敏不能裁遣，但云「依旧例可也」。是时军期紧急，遽如星火，敏不留意，方具劄子乞令学者添治《春秋》，又因司业杨时上言……谓安石不当继「十哲」，宜依郑康成画壁从祀，上从其言，下太学如敏所请。时人有「十不管」之语云：「不管太原，却管太学；不管防秋，却管《春秋》；不管𪿫石，却管安石；不管肃王，却管舒王；不管燕山，却管聂山；不管东京，却管蔡京；不管河北地界，却管举人免解；不管河东，却管陈东；不管二太子，却管立太子。」盖讥其不切事务故也。《三朝北盟会编》卷五十一。《宋稗类钞》卷八。</p></li>
 <li><p><span id="宋轶二十八-吴敏-5"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C-4.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C-%E5%AE%8B%E5%BE%BD%E5%AE%97-54">宋徽宗54</a>。</p></li>
+见宋徽宗<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C-4.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C-%E5%AE%8B%E5%BE%BD%E5%AE%97-54">54</a>。</p></li>
 </ol>
 </div>
 <div id="吴-叙" class="section level2">
@@ -268,9 +268,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十八-徐处仁-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%90%B4%E6%95%8F-2">吴敏2</a>。</p></li>
+见吴敏<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%90%B4%E6%95%8F-2">2</a>。</p></li>
 <li><p><span id="宋轶二十八-徐处仁-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%90%B4%E6%95%8F-4">吴敏4</a>。</p></li>
+见吴敏<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%90%B4%E6%95%8F-4">4</a>。</p></li>
 </ol>
 </div>
 <div id="唐-恪" class="section level2">
@@ -279,9 +279,9 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十八-唐恪-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%AC%A7%E9%98%B3%E4%BF%AE-45">欧阳修45</a>。</p></li>
+见欧阳修<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E5%9B%9B.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E5%9B%9B-%E6%AC%A7%E9%98%B3%E4%BF%AE-45">45</a>。</p></li>
 <li><p><span id="宋轶二十八-唐恪-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E7%AB%A5%E8%B4%AF-17">童贯17</a>。</p></li>
+见童贯<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E7%AB%A5%E8%B4%AF-17">17</a>。</p></li>
 <li><p><span id="宋轶二十八-唐恪-3"></span>
 唐恪夜出，百姓抛瓦打破烛笼。上知之，以为失人心，遂罢恪。《三朝北盟会编》卷六十五。</p></li>
 </ol>
@@ -358,7 +358,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十八-聂昌-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E7%8E%8B%E9%BB%BC-3">王黼3</a>。</p></li>
+见王黼<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AD.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AD-%E7%8E%8B%E9%BB%BC-3">3</a>。</p></li>
 <li><p><span id="宋轶二十八-聂昌-2"></span>
 〔聂〕昌，旧名山，上尝梦为两日所逼，乃改「山」为「昌」以厌之，人皆莫晓其意。或谓：欲用山奉使金国，乃改赐名。又曰：上一日谓聂山曰：「山大物也，何以为名？」山曰：「臣素慕周昌为人，乞改名『昌』。」于是奉御笔改名「昌」。《三朝北盟会编》卷五十一。</p></li>
 <li><p><span id="宋轶二十八-聂昌-3"></span>
@@ -381,7 +381,7 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十八-种师道-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E4%B8%89-%E7%A7%8D%E4%B8%96%E8%A1%A1-15">种世衡15</a>。</p></li>
+见种世衡<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E4%B8%89-%E7%A7%8D%E4%B8%96%E8%A1%A1-15">15</a>。</p></li>
 <li><p><span id="宋轶二十八-种师道-2"></span>
 种彝叔，靖康初以保静节钺致仕，居长安村墅。一夕，旌节有声，甚异，旦而中使至，遂起。五代时，安重诲、王峻皆尝有此异，见《周太祖实录》，二人者皆得祸。彝叔虽自是登枢府，然功名不成，亦非吉兆也。方彝叔赴召时，有华山道人献诗曰：「北蕃群犬窥篱落，惊起南朝老大虫。」《老学庵笔记》卷三。</p></li>
 <li><p><span id="宋轶二十八-种师道-3"></span>
@@ -434,15 +434,15 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十八-吕好问-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81-%E5%90%95%E5%B8%8C%E5%93%B2-14">吕希哲14</a>。</p></li>
+见吕希哲<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81-%E5%90%95%E5%B8%8C%E5%93%B2-14">14</a>。</p></li>
 <li><p><span id="宋轶二十八-吕好问-2"></span>
 上再幸虏营，命吕公等入城抚谕。……上请者，或于尚书省中谓上为废帝，公怒形于色曰：「圣人全德，天下归往，何尝废乎？」其人曰：「盍称干龙皇帝乎？」公曰：「亦非也，君父位号，岂可擅改？」一坐耸服。……有请改年号者，公力争之。有移文必去年号，公不能止，但自行文字必称靖康二年。《三朝北盟会编》卷一百三。</p></li>
 <li><p><span id="宋轶二十八-吕好问-3"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%BC%A0%E9%82%A6%E6%98%8C-12">张邦昌12</a>。</p></li>
+见张邦昌<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%BC%A0%E9%82%A6%E6%98%8C-12">12</a>。</p></li>
 <li><p><span id="宋轶二十八-吕好问-4"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%BC%A0%E9%82%A6%E6%98%8C-13">张邦昌13</a>。</p></li>
+见张邦昌<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%BC%A0%E9%82%A6%E6%98%8C-13">13</a>。</p></li>
 <li><p><span id="宋轶二十八-吕好问-5"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%90%95%E6%9C%AC%E4%B8%AD-1">吕本中1</a>、2。</p></li>
+见吕本中<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%90%95%E6%9C%AC%E4%B8%AD-1">1</a>、<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%90%95%E6%9C%AC%E4%B8%AD-2">2</a>。</p></li>
 <li><p><span id="宋轶二十八-吕好问-6"></span>
 吕好问为右丞，特赐金带。高宗面谕曰：「此带朕自视上方工为之。」盖特恩也。《老学庵笔记》卷一。</p></li>
 </ol>
@@ -457,11 +457,11 @@
 <li><p><span id="宋轶二十八-吕本中-2"></span>
 吕居仁尝有一绝，云：「胡虏那知鼎重轻，祸胎元自误公卿。襄阳耆旧推庞老，受禅碑中无姓名。」后有人题于馆驿壁上，仍注其下云：「此吕本中嘲厥祖之作。」见者无不大笑，盖吕之父尝联名立伪楚故也。《扪虱新话》卷八。</p></li>
 <li><p><span id="宋轶二十八-吕本中-3"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E5%88%98%E5%AD%90%E7%BF%9A-1">刘子翚1</a>。</p></li>
+见刘子翚<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%B8%89%E5%8D%81%E4%BA%8C.html#%E5%AE%8B%E8%BD%B6%E4%B8%89%E5%8D%81%E4%BA%8C-%E5%88%98%E5%AD%90%E7%BF%9A-1">1</a>。</p></li>
 <li><p><span id="宋轶二十八-吕本中-4"></span>
 阮裕云：「非但能言人不可得，正索解人亦不可得。」吕居仁用此意作诗云：「好诗正似佳风月，解赏能知已不凡。」《老学庵笔记》卷三。</p></li>
 <li><p><span id="宋轶二十八-吕本中-5"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%89-%E6%99%81%E8%AF%B4%E4%B9%8B-10">晁说之10</a>。</p></li>
+见晁说之<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B8%89-%E6%99%81%E8%AF%B4%E4%B9%8B-10">10</a>。</p></li>
 </ol>
 </div>
 <div id="陈-东" class="section level2">
@@ -492,7 +492,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="宋轶二十八-马-1"></span> <span id="宋轶二十八-伸-1"></span> <span id="宋轶二十八-何-1"></span> <span id="宋轶二十八-兑-1"></span>
-明清《挥麈余话》载马伸首陈乞立赵氏事，后询之游诚之，凡言与前说各有异同者。今重录其所记于后。靖康初，秦桧为中丞，马伸为殿中侍御史。一日，有人持文字至台，云：「金军前令推立异姓。」秦未及应语之间，马遽云：「此天位也，逆金安得而易！今舍赵氏其谁立？」秦始入议状，连名书之。已而，二帝北狩，秦亦陷金，独马公主台事，排日以状申张邦昌云：「伏覩大金以太宰相公权主国事，未审何日复辟？谨具申太宰相公，伏乞指挥施行。」至康王即位日乃止。有门弟子何兑者，邵武人，字太和，嘉王榜登第，少师事马公。其后，秦桧南归，擅立赵氏之功归己，尽掠其美名，取富贵，位极公槐，势冠今古。何公常太息其师之事湮没，欲辩明其忠。每引纸将书，辄为其子所谏，以谓秦方势燄震主，岂可自蹈危机，掇家族之祸。然何公私自为《马公行状》一通，常在也。绍兴甲戌，以左朝奉郎任辰州通判将满，一夕，忽梦马公衣冠相见，与语如平生亲。既寤，喻其子曰：「马先生英灵不没，赍恨九京，如此有意属我乎？」挂其遗像，哭之。其子镐哀劝不从，因告其父曰：「俟斯人死，上之未晚。」太和曰：「不然，万一我先死，瞑目有余恨。后日当受代。」即手书一状闻于朝，其词尤委曲回互，但云「自太师公相陷金之后，独殿中侍御史马伸，排日以复辟事申邦昌」云云。且以所作行状缴纳，乞付史馆立传，以旌其忠。入马递驰达，然后解组以归。秦得之，怒，凡一路铺兵悉遭痛治，仍下廷尉，追捕何公甚急。狱吏持文移至邵武，而太守张姓者，惊愕罔措，就坐得疾，越翌日始苏，扶掖至厅事，才启封视牒，则所追者左朝奉郎何兑也。方遣吏往村落追赴以行。既对吏，而柏台老吏已先在棘寺，但谓「靖康虽有马伸为殿院，未尝闻有此状也」。令台吏勒军令状，棘寺以上书不实，拟降一官，罢前任。思陵重违桧意，圣语曰：「所拟太轻，特追两官，羁置英州。」盖绍兴甲戌岁也。后一年乙亥，桧死日，御批何兑所犯，委是寃枉，令有司别定，遂复元官，放逐便，仍理元来磨勘，为左朝散郎。何在贬所皆无恙，归至里门，遇亲戚相见，喜马公之事明白，一笑病发。朝廷虽欲用之，弗果；仅能食祠官之禄一年而已。《玉照新志》卷三。参见秦桧14。</li>
+明清《挥麈余话》载马伸首陈乞立赵氏事，后询之游诚之，凡言与前说各有异同者。今重录其所记于后。靖康初，秦桧为中丞，马伸为殿中侍御史。一日，有人持文字至台，云：「金军前令推立异姓。」秦未及应语之间，马遽云：「此天位也，逆金安得而易！今舍赵氏其谁立？」秦始入议状，连名书之。已而，二帝北狩，秦亦陷金，独马公主台事，排日以状申张邦昌云：「伏覩大金以太宰相公权主国事，未审何日复辟？谨具申太宰相公，伏乞指挥施行。」至康王即位日乃止。有门弟子何兑者，邵武人，字太和，嘉王榜登第，少师事马公。其后，秦桧南归，擅立赵氏之功归己，尽掠其美名，取富贵，位极公槐，势冠今古。何公常太息其师之事湮没，欲辩明其忠。每引纸将书，辄为其子所谏，以谓秦方势燄震主，岂可自蹈危机，掇家族之祸。然何公私自为《马公行状》一通，常在也。绍兴甲戌，以左朝奉郎任辰州通判将满，一夕，忽梦马公衣冠相见，与语如平生亲。既寤，喻其子曰：「马先生英灵不没，赍恨九京，如此有意属我乎？」挂其遗像，哭之。其子镐哀劝不从，因告其父曰：「俟斯人死，上之未晚。」太和曰：「不然，万一我先死，瞑目有余恨。后日当受代。」即手书一状闻于朝，其词尤委曲回互，但云「自太师公相陷金之后，独殿中侍御史马伸，排日以复辟事申邦昌」云云。且以所作行状缴纳，乞付史馆立传，以旌其忠。入马递驰达，然后解组以归。秦得之，怒，凡一路铺兵悉遭痛治，仍下廷尉，追捕何公甚急。狱吏持文移至邵武，而太守张姓者，惊愕罔措，就坐得疾，越翌日始苏，扶掖至厅事，才启封视牒，则所追者左朝奉郎何兑也。方遣吏往村落追赴以行。既对吏，而柏台老吏已先在棘寺，但谓「靖康虽有马伸为殿院，未尝闻有此状也」。令台吏勒军令状，棘寺以上书不实，拟降一官，罢前任。思陵重违桧意，圣语曰：「所拟太轻，特追两官，羁置英州。」盖绍兴甲戌岁也。后一年乙亥，桧死日，御批何兑所犯，委是寃枉，令有司别定，遂复元官，放逐便，仍理元来磨勘，为左朝散郎。何在贬所皆无恙，归至里门，遇亲戚相见，喜马公之事明白，一笑病发。朝廷虽欲用之，弗果；仅能食祠官之禄一年而已。《玉照新志》卷三。参见秦桧<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%B9%9D.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%B9%9D-%E7%A7%A6%E6%A1%A7-14">14</a>。</li>
 </ol>
 </div>
 <div id="喻汝砺" class="section level2">
@@ -512,7 +512,7 @@
 <ol style="list-style-type: decimal">
 <li>
 <span id="宋轶二十八-上官悟-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-109">蔡京109</a>。</li>
+见蔡京<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-109">109</a>。</li>
 </ol>
 </div>
 <div id="李若水" class="section level2">
@@ -531,7 +531,7 @@
 <li><p><span id="宋轶二十八-李若水-5"></span>
 李侍郎若水，靖康二年金人攻陷太原，屡以讲和割地为说，耿南仲之徒力主和议。正月，上如青城，金人请上相见。二月，上皇、帝后如青城，俱留金营，尼吗哈逼上易服，若水叩头流血，固争不可，若水死之。金人曰：「我破大辽，死义者十数；南朝惟见李侍郎一人而已。」《言行龟鉴》卷八。</p></li>
 <li><p><span id="宋轶二十八-李若水-6"></span>
-公临死，为歌诗一首，其卒章曰：「矫首问天兮，天卒不言。忠臣效死兮，死亦何愆。」人闻而悲之。《宋名臣言行录》续集卷三。参见王履3。</p></li>
+公临死，为歌诗一首，其卒章曰：「矫首问天兮，天卒不言。忠臣效死兮，死亦何愆。」人闻而悲之。《宋名臣言行录》续集卷三。参见王履<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E7%8E%8B%E5%B1%A5-3">3</a>。</p></li>
 </ol>
 </div>
 <div id="王-履" class="section level2">
@@ -540,11 +540,11 @@
 </h2>
 <ol style="list-style-type: decimal">
 <li><p><span id="宋轶二十八-王履-1"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E6%9D%8E%E8%8B%A5%E6%B0%B4-3">李若水3</a>。</p></li>
+见李若水<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E6%9D%8E%E8%8B%A5%E6%B0%B4-3">3</a>。</p></li>
 <li><p><span id="宋轶二十八-王履-2"></span>
 王履，字坦翁，开封县人。……靖康元年八月，内宣召上殿，准敕武翼大夫充大金山西军前和议副使，秘书少监李若水奉使大金山西军前。……闰十一月三日到京城外，粘罕召公与若水饮曰：「且得到使、副们乡中了。」遂举觞以劝公等。粘罕曰：「奉使有劳，宜劝以酒。」若水叹曰：「某等才薄识浅，奉命议和，不能为国家定大事，罪固宜死，酒不敢饮。」粘罕笑曰：「前言戏之耳！」公曰：「军国大事，曷可为戏。」遂以酒杯掷于地。粘罕大怒曰：「事至如此，尚敢如是。」公曰：「杀人以梃与刃，亦无异也。」粘罕曰：「一齐推去囚了。」公曰：「平生读书忠孝事，死尚不惜，何惧囚也。」因被囚于冲虚观。……公在郊台边被害时，神色不动，仰天长叹，念歌一首，只记临后两句道：「矫首向天兮，天卒无言。忠臣效死兮，死亦何愆。」闻之者莫不堕泪。……公与李若水被害时，斡离不见之叹曰：「南朝若人人得如此二子，岂有今日之事。」《三朝北盟会编》卷八十二。</p></li>
 <li><p><span id="宋轶二十八-王履-3"></span>
-〔王〕履临被害，略无惧色，且歌诗，末章云：「矫首问天兮，天卒无言。忠臣効死兮，死亦何愆。」人闻而悲之。《大金国志》卷五。参见李若水6。</p></li>
+〔王〕履临被害，略无惧色，且歌诗，末章云：「矫首问天兮，天卒无言。忠臣効死兮，死亦何愆。」人闻而悲之。《大金国志》卷五。参见李若水<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E6%9D%8E%E8%8B%A5%E6%B0%B4-6">6</a>。</p></li>
 </ol>
 </div>
 <div id="刘-韐" class="section level2">
@@ -734,7 +734,7 @@
 <li><p><span id="宋轶二十八-莫俦-1"></span>
 熙宁癸丑，先公登第，天子擢居第一，为权臣所轧，故居第二，大父颇不平。湖州道场山有老僧，为大父言：「此非人事。道场山在州南离方，文笔山也，低于他州，故未有魁天下者。」僧乃丐缘，即山背建浮屠，望之如卓一笔。既成，语州人曰：「后三十年出状元。」大观贾安宅，政和莫俦，相继为廷试魁。此吾家事，非诞也。《萍洲可谈》卷三。</p></li>
 <li><p><span id="宋轶二十八-莫俦-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E5%8D%81%E4%B8%89.html#%E5%AE%8B%E8%BD%B6%E5%8D%81%E4%B8%89-%E5%90%B4-3">吴3</a>。</p></li>
+见吴3。</p></li>
 <li><p><span id="宋轶二十八-莫俦-3"></span>
 时诸公皆欲作真两府，坐绣鞍重盖，喝门下、中书、枢密者盈道，莫俦喝道者凡数百人。……事体一变，自知不可侥幸，乃入劄子乞免正官法，带旧职兼权。于是撤繖去鞍，呵从稍减，人皆笑之。《三朝北盟会编》卷九十一。</p></li>
 </ol>
@@ -833,7 +833,7 @@
 <li><p><span id="宋轶二十八-张邦昌-1"></span>
 崇宁间，望气者上言，景州阜城县有天子气甚明，徽祖弗之信。既而方士之幸者颇言之，有诏断支陇以泄其所钟。居一年，犹云气故在，特稍晦，将为偏闰之象，而不克有终。至靖康，伪楚之立，逾月而释位。逆豫既僭，遂改元阜昌，且祈于金酋，调丁缮治其故尝夷铲者，力役弥年，民不堪命，亦不免于废也。二僭皆阜城人。《桯史》卷八。</p></li>
 <li><p><span id="宋轶二十八-张邦昌-2"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-112">蔡京112</a>。</p></li>
+见蔡京<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E4%BA%94-%E8%94%A1%E4%BA%AC-112">112</a>。</p></li>
 <li><p><span id="宋轶二十八-张邦昌-3"></span>
 张邦昌为中书舍人使高丽，至明州谒东海庙，夜梦神告曰：「他日至中书侍郎，但不可为秉国大夫。」后数年，当宣和末，果有凤池之拜。《夷坚丁志》卷七。</p></li>
 <li><p><span id="宋轶二十八-张邦昌-4"></span>
@@ -898,7 +898,7 @@
 <li><p><span id="宋轶二十八-刘豫-2"></span>
 伪齐刘豫者为小官时，梦至阙里拜仲尼，仲尼辄答其拜。又尝梦拜释氏，为之起。因独自负，遂果于僭。《铁围山丛谈》卷三。</p></li>
 <li><p><span id="宋轶二十八-刘豫-3"></span>
-见<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%BC%A0%E9%82%A6%E6%98%8C-1">张邦昌1</a>。</p></li>
+见张邦昌<a href="%E5%AE%8B%E4%BA%BA%E8%BD%B6%E4%BA%8B%E6%B1%87%E7%BC%96%E5%8D%B7%E4%BA%8C%E5%8D%81%E5%85%AB.html#%E5%AE%8B%E8%BD%B6%E4%BA%8C%E5%8D%81%E5%85%AB-%E5%BC%A0%E9%82%A6%E6%98%8C-1">1</a>。</p></li>
 <li><p><span id="宋轶二十八-刘豫-4"></span>
 〔刘豫〕少时，尝盗同舍生白金盂子、紫纱衣，至是言者方发其夙丑。豫因上疏自明，上皇赦而不问。未几，累章言礼制局事。上皇批云：「刘豫河北村叟，不识礼制。」遂黜为两浙廉访。其谢表云：「孰云河朔村俗之人，来领浙右廉问之事。」议者谓豫怨望之迹已见于此。《三朝北盟会编》卷一百八十一。《大金国志》卷三十一。</p></li>
 <li><p><span id="宋轶二十八-刘豫-5"></span>
@@ -1037,7 +1037,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-22.</p>
+    <p>"<strong>历史上的一些人</strong>" was written by 林峰. It was last built on 2022-05-26.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
